--- a/steins_gate_0/docs/0001.md
+++ b/steins_gate_0/docs/0001.md
@@ -30,9 +30,9 @@
 “那个，这里是ATF研讨会的会场哦……”  
 这里明显和女中学生不搭调，估计是进错地方了吧。  
 “这种事我知道啊！要我重复几次才够呢？  
-&emsp;&emsp; 啊不，我还是第一次跟你说这个啊……  
-&emsp;&emsp; 但对我来说，你已经是第四个了。  
-&emsp;&emsp; 真是的，到了这地方后就一直……”  
+ 啊不，我还是第一次跟你说这个啊……  
+ 但对我来说，你已经是第四个了。  
+ 真是的，到了这地方后就一直……”  
 盛气凌人的少女从怀中掏出了一张卡片。那是给这次演讲的参加者配发的来宾卡，在正面用日语和英语印有姓名和所属机构。  
 “诶……？来宾……维克多·孔多利亚大学，脑科学研究所，比屋定真帆？”  
 我比较着眼前的少女和卡片，总算想到了。  
@@ -45,7 +45,7 @@
 我在另外的世界线上，不知何时见过红莉栖拿的卡片，和这张是同样的设计。  
 在ID卡上印着的照片，毫无疑问是眼前的女孩。  
 “读作 *Hiyajo Maho* 哦，我的名字，比屋定真帆。  
-&emsp;&emsp; 因为不论是汉字还是罗马音都没人能好好读出来，所以就先跟你说明咯。”  
+ 因为不论是汉字还是罗马音都没人能好好读出来，所以就先跟你说明咯。”  
 “嗯……那个……维克多·孔多利亚大学的……中学生？”  
 “要犯迷糊的话请等到晚上。大学里可能会有中学生吗？”  
 “这……也是呢。那就是，跳级的吗……”  
@@ -54,8 +54,8 @@
 “……我能先跟你确认件事么？”  
 “啊……嗯。”  
 “你现在，多少有点震惊的吧？  
-&emsp;&emsp; 比如‘这么小的孩子……不敢相信啊’，  
-&emsp;&emsp; 还有就是‘这个年龄就……好厉害啊？’之类的。”  
+ 比如‘这么小的孩子……不敢相信啊’，  
+ 还有就是‘这个年龄就……好厉害啊？’之类的。”  
 “啊，哈哈。”  
 由于被说中了我发出略带尴尬的笑声。  
 “仔细看这里！”  
@@ -63,7 +63,7 @@
 1989年出生，现在是2010年的话……  
 “……21岁？！”  
 “所以说我可是了不起的成年女性了！  
-&emsp;&emsp; 可不是中学生，当然更不是小学生、幼女什么的。”  
+ 可不是中学生，当然更不是小学生、幼女什么的。”  
 说着，一下子挺起了胸膛。虽然胸部完全说不上大，但是看起来就像是在强调“我是穿衣显瘦的类型，脱下来可是很厉害的哦”一样。  
 “……”  
 “你这表情是什么意思？”  
