--- a/steins_gate_0/docs/0003.md
+++ b/steins_gate_0/docs/0003.md
@@ -17,16 +17,16 @@
 真帆（Amadeus）：“我叫比屋定真帆。准确来说，我是从78小时22分钟前的比屋定真帆身上派生出来的的存在。”  
 仔细听的话，好像还是可以听出来一点点不自然的感觉。但是比起迄今为止的合成声音来，远远更加接近人的声音。  
 真帆（Amadeus）：“从刚才起，我就在听着各位的疑问了。  
-&emsp;&emsp; 我真的很疑惑，教授为什么不快点向大家介绍我呢？  
-&emsp;&emsp; 从以前就有点觉得，教授这人真有点坏心眼呢。”  
+ 我真的很疑惑，教授为什么不快点向大家介绍我呢？  
+ 从以前就有点觉得，教授这人真有点坏心眼呢。”  
 “就是啊！”   
 站在墙边的比屋定真帆点着头表示同意，配合着画面中的“比屋定真帆”稍稍有些生气的表情。雷斯吉宁教授则依然只是一副清爽的笑容。  
 在我面前究竟在发生什么事情？话说回来，这为什么会是最下功夫的项目？不仅是我，听众之中也没有谁能够理解的。  
 真帆（Amadeus）：“在座的各位都有着同一个疑问——  
-&emsp;&emsp; 将人类的记忆数据化取出、保存，还将这数据活用，  
-&emsp;&emsp; 这种事真的办得到么？  
-&emsp;&emsp; 那么我，究竟是什么呢？  
-&emsp;&emsp; 我，拥有从78小时23分前的比屋定真帆脑内提取的记忆，基于此数据而行动。”  
+ 将人类的记忆数据化取出、保存，还将这数据活用，  
+ 这种事真的办得到么？  
+ 那么我，究竟是什么呢？  
+ 我，拥有从78小时23分前的比屋定真帆脑内提取的记忆，基于此数据而行动。”  
 什么？  
 教授又很快的说了些什么，并催促画面中的“比屋定真帆”翻译。  
 但是，她——话说不知道是不是应该称呼“**她**”——犹豫了一下，随后闭上了嘴。  
@@ -36,16 +36,16 @@
 雷斯吉宁教授见状愉快地反击回去。两人说着流利的英语，半数以上听众都理解不了对话的意思。  
 一副没办法的样子，在墙边的比屋定真帆重新握起话筒：  
 “唉……教授呢，那个……对我——  
-&emsp;&emsp; 不，是对依靠我的记忆而运作的这个『Amadeus』，说——  
-&emsp;&emsp; ‘试试回答些问题吧。  
-&emsp;&emsp; 那个……我…那个…到什么时候还跟爸爸一起洗澡…什么的……  
-&emsp;&emsp; 初恋是什么时候……之类的，都好好回答一下吧！’  
-&emsp;&emsp; 嗯……”  
+ 不，是对依靠我的记忆而运作的这个『Amadeus』，说——  
+ ‘试试回答些问题吧。  
+ 那个……我…那个…到什么时候还跟爸爸一起洗澡…什么的……  
+ 初恋是什么时候……之类的，都好好回答一下吧！’  
+ 嗯……”  
 真帆（Amadeus）：“啊，已经不用继续翻译了！  
-&emsp;&emsp; 很害羞诶，能消停下吗！这些问题我都不会回答的！”  
+ 很害羞诶，能消停下吗！这些问题我都不会回答的！”  
 教授接着说了些什么，随后CG的比屋定真帆哼的一下面向一旁。  
 真帆（Amadeus）：“信用卡号码什么的，更是无可奉告！  
-&emsp;&emsp; 还有，一周前穿的睡衣的颜色怎么可能记得啊。”  
+ 还有，一周前穿的睡衣的颜色怎么可能记得啊。”  
 这个问答……是在搞什么啊。  
 这对话太过自然，我一下子还没明白过来。  
 这不是很了不起的事情吗？和普通的人工智能明显不同，我有这样的感觉。  
@@ -54,41 +54,41 @@
 这种徒有其表的程序倒也不是没有可能……但如果这不是事先编辑好的程序的话——  
 周围的人也好像开始明白过来，窃窃私语的声音逐渐向着吃惊变化着。  
 真帆（Amadeus）：“喂，我说啊，也该对这个爱恶作剧的小鬼做点什么了吧！  
-&emsp;&emsp; 虽然我知道他想要我表达什么，但总之太害羞了！”  
+ 虽然我知道他想要我表达什么，但总之太害羞了！”  
 比屋定真帆的副本向本体抗议着。不知为何，我产生了双胞胎姐妹在对话的错觉。  
 “嗯，也不能说是恶作剧的小鬼。  
-&emsp;&emsp; 雷斯吉宁教授很爱搞怪，所以很难好好说明下去。  
-&emsp;&emsp; 为此就由我来解释。”  
+ 雷斯吉宁教授很爱搞怪，所以很难好好说明下去。  
+ 为此就由我来解释。”  
 比屋定真帆从墙边离开，站在了教授旁边。  
 “相信各位已经了解到了。『Amadeus』呢，  
-&emsp;&emsp; 是能够**自我判断什么是自己能说的和不能说的**，  
-&emsp;&emsp; 或者**想说的和不想说的**。  
-&emsp;&emsp; 而我们没有对『Amadeus』的言行编入过任何程序。  
-&emsp;&emsp; 她，是根据我给予的记忆进行自我判断，自律性地采取了刚才的行动。”  
+ 是能够**自我判断什么是自己能说的和不能说的**，  
+ 或者**想说的和不想说的**。  
+ 而我们没有对『Amadeus』的言行编入过任何程序。  
+ 她，是根据我给予的记忆进行自我判断，自律性地采取了刚才的行动。”  
 接着比屋定真帆的话，画面中的**她**继续说明。  
 真帆（Amadeus）：“然后，这也因此与之前所说的医疗方面的应用有所冲突。  
-&emsp;&emsp; 在我们研究所中也颇有分歧……  
-&emsp;&emsp; 我，会在不知不觉中忘却无用的情报。  
-&emsp;&emsp; 不如说，是**无法从记忆中取出**了。和大家一样。  
-&emsp;&emsp; 比如，一周前穿的睡衣颜色，明明应该知道，我却无法回忆起来。  
-&emsp;&emsp; 因为这类情报，是与生存无关的，这点也与大家一样。  
-&emsp;&emsp; 就像这样，『Amadeus』的记忆的输入输出与人类非常相近。”  
+ 在我们研究所中也颇有分歧……  
+ 我，会在不知不觉中忘却无用的情报。  
+ 不如说，是**无法从记忆中取出**了。和大家一样。  
+ 比如，一周前穿的睡衣颜色，明明应该知道，我却无法回忆起来。  
+ 因为这类情报，是与生存无关的，这点也与大家一样。  
+ 就像这样，『Amadeus』的记忆的输入输出与人类非常相近。”  
 “对于这个结果我们也十分惊讶，还处于反复研究的中途，未能分析出详细内容。”  
 比屋定真帆总结道。  
 雷斯吉宁教授终于把话筒拿到嘴边，一边让比屋定真帆翻译，一边继续着话题。  
 真帆（同传）：“还有，让我们吃惊的是，『Amadeus』会有意识地采取说谎行为。  
-&emsp;&emsp; 这并不是某种原因的问题跟疏忽，是她故意为之的。  
-&emsp;&emsp; 说谎，也是人类在与他人进行沟通时所采取的一种手法。  
-&emsp;&emsp; 『Amadeus』也是，会对输入的记忆进行自律性的探讨。  
-&emsp;&emsp; 有必要的话，能为自己或他人而冷静的撒谎。”  
+ 这并不是某种原因的问题跟疏忽，是她故意为之的。  
+ 说谎，也是人类在与他人进行沟通时所采取的一种手法。  
+ 『Amadeus』也是，会对输入的记忆进行自律性的探讨。  
+ 有必要的话，能为自己或他人而冷静的撒谎。”  
 真帆：“教授，请不要说些会让人误解的话——  
-&emsp;&emsp; 撒谎不可能会有冷静淡然的，就算是我也会受良心苛责的。”  
+ 撒谎不可能会有冷静淡然的，就算是我也会受良心苛责的。”  
 雷斯吉宁：“*I'm so sorry. And……*”  
 在这里，雷斯吉宁教授停了下来，看起来有些犹豫。  
 而比屋定真帆并没有显出吃惊的样子，可能她知道教授犹豫的原因吧。  
 然后教授突然干脆的继续讲述，比屋定真帆也像是什么都没有发生过一样继续翻译。  
 真帆（同传）：“就像这样不断进行验证，最终我们设想到——  
-&emsp;&emsp; 『Amadeus』会不会像人类一样，孕育出自己的灵魂呢？”  
+ 『Amadeus』会不会像人类一样，孕育出自己的灵魂呢？”  
 我吃了一惊。灵魂？这个连定义都模糊不清的词语，由脑科学研究的最高权威说出来没问题吗……？  
 真帆（同传）：“这才是，**真正意义上的人工智能**。”  
 
