--- a/steins_gate_0/docs/0004.md
+++ b/steins_gate_0/docs/0004.md
@@ -50,12 +50,12 @@
 “呼——”  
 一时间，她的脸颊染上了一抹美丽的樱花色，但是很快就恢复了原状。看样子酒量不小。  
 “但是，果然还是不太好吧，已经在反省了。  
-&emsp;&emsp; 那种批判……虽然说话的方式很糟糕，但好歹也是事实没错。  
-&emsp;&emsp; 要是我们的研究还没有突破荒谬的领域的话…的确就是那么回事…”  
+ 那种批判……虽然说话的方式很糟糕，但好歹也是事实没错。  
+ 要是我们的研究还没有突破荒谬的领域的话…的确就是那么回事…”  
 “是那样吗？”  
 “还没有解决掉的课题堆积如山啊。比刚才研讨会上说的还要多得多。  
-&emsp;&emsp; 比方说，就算能把记忆数据输入到原本的大脑里，如果大脑不能利用起来就什么意义都没有。  
-&emsp;&emsp; 虽然有那个记忆但是却处于想不起来的状态，也就是说会变成跟丧失记忆的大脑一样。”  
+ 比方说，就算能把记忆数据输入到原本的大脑里，如果大脑不能利用起来就什么意义都没有。  
+ 虽然有那个记忆但是却处于想不起来的状态，也就是说会变成跟丧失记忆的大脑一样。”  
 听比屋定真帆这样说，我回想起了，红莉栖制作时间跳跃机时说过的种种“解释”和“推论”。  
 “那个好像是……人来在存取记忆的时候，会从前脑叶向侧额叶发送信号的吧？”  
 “嗯嗯， Top-Down记忆检索信号。”  
@@ -63,17 +63,17 @@
 之后，我一边回忆着红莉栖的理论，一边忘我的说着。  
 对于我凭着模糊的记忆说出的术语，比屋定真帆把我的意思补充完整。  
 “——于是，在最后，在往侧额叶重新返写记忆的过程中，嗯……  
-&emsp;&emsp; 一同被拷贝了的模拟脉冲会往前脑叶那边输送，记忆检索信号就会正常的运作起来，我是这么想的。”  
+ 一同被拷贝了的模拟脉冲会往前脑叶那边输送，记忆检索信号就会正常的运作起来，我是这么想的。”  
 “你是……自己发现的这个吗？”  
 “诶？啊，不是……”  
 比屋定真帆再次看向我刚才给她的名片。  
 “你不是专攻脑科学的吧。那到底是从谁那里…还是看了什么论文？  
-&emsp;&emsp; 不，那么说也不对，现在的论文上不可能有提到这些才对。”  
+ 不，那么说也不对，现在的论文上不可能有提到这些才对。”  
 “……我，说了什么很奇怪的话吗？”  
 “不是那样的。我的学妹呢，跟你一样提倡这个理论。  
-&emsp;&emsp; 不管是哪个工作人员一直都对此保持怀疑的态度。  
-&emsp;&emsp; 对她来说，一直都主张这是绝对能够得到证明的理论哦。  
-&emsp;&emsp; 结果，在实践实验推进前，她就不幸去世了。”  
+ 不管是哪个工作人员一直都对此保持怀疑的态度。  
+ 对她来说，一直都主张这是绝对能够得到证明的理论哦。  
+ 结果，在实践实验推进前，她就不幸去世了。”  
 “那是——”  
 我应该说出来嘛？  
 我可以把红莉栖和自己的关系说出来嘛？  
@@ -92,7 +92,7 @@
 这番话，出乎我的意料，没想到她会这样回答。  
 “谢什么？”  
 “跟她成为了朋友哟。她就这样一个人到了日本……  
-&emsp;&emsp; 只有一个人在这边学习的话，一定会很无聊吧。”  
+ 只有一个人在这边学习的话，一定会很无聊吧。”  
 “虽然经常吵架就是了。”  
 “真像那孩子呢。绝对不服输的性格对吧？”  
 “啊啊，老是说一些歪门邪道。”  
@@ -101,8 +101,8 @@
 “诶诶？居然连这种事都……红莉栖的话，确实会呢。”  
 “是吧？真希望你能好好的教育教育学妹啊。”  
 “对于这一点我很认同，向你道歉。  
-&emsp;&emsp; ……噗……  
-&emsp;&emsp; ……呜呜……”  
+ ……噗……  
+ ……呜呜……”  
 她笑了……我本来这样想着，可是比屋定真帆却突然掉下了眼泪。  
 “怎，怎么了？”  
 我慌忙递出手绢。  
@@ -136,7 +136,7 @@
 比屋定真帆愣了一下，然后吃惊的跟教授确认道：  
 “嗯？……难道是，『Amadeus』？”  
 “能够在这里跟他相见也是有缘，难道不去珍惜这份来之不易的幸运吗？  
-&emsp;&emsp; 在日本的这段时间，让他来担任测试员也是可以的。”  
+ 在日本的这段时间，让他来担任测试员也是可以的。”  
 “认真的吗？明明是外人突然就这么……”  
 “是 *Kurisu* 的朋友的话，就不是什么外人了。是这样吧？”  
 “可是……”  
@@ -149,14 +149,14 @@
 
 “跟『Amadeus』见面，还有测试员什么的，到底是在说什么东西啊？”  
 “在发表会上用到的那个示例版『Amadeus』，是用的我自己的记忆。  
-&emsp;&emsp; 而被用作『Amadeus』的数据的，还有一位研究人员的记忆。”  
+ 而被用作『Amadeus』的数据的，还有一位研究人员的记忆。”  
 另外一名……研究者的记忆？  
 这句话，意味着什么？  
 从刚才比屋定真帆和雷斯吉宁教授的对话当中，得出答案的瞬间，我的心脏开始剧烈跳动。  
 “难道是……那家伙……么？”  
 “正是。『Amadeus』中，  
-&emsp;&emsp; 保存着 **牧濑红莉栖的记忆** 。  
-&emsp;&emsp; 当然是八个月前的红莉栖就是了。”  
+ 保存着 **牧濑红莉栖的记忆** 。  
+ 当然是八个月前的红莉栖就是了。”  
 
 
 <br/>
