--- a/steins_gate_0/docs/0005.md
+++ b/steins_gate_0/docs/0005.md
@@ -36,20 +36,20 @@ ATF上的派对结束以后已经过了几天。
 “那个系统……对于越是亲近的人，就越显得残酷。”  
 “……没事的。”  
 “……（叹气）知道了，不讲这个了。那么相对的，有一点你要做好觉悟。  
-&emsp;&emsp; 读取的记忆，是建立在红莉栖最后更新的3月那时候的数据基础之上的。  
-&emsp;&emsp; 所以，3月以后，比如问她在日本留学时候的事，是完全沟通不了的。  
-&emsp;&emsp; 而且，从3月开始到今天为止的这段时间，我跟教授也有好几次启动过。  
-&emsp;&emsp; 这段时间里‘红莉栖’——啊，是『Amadeus』的那位‘红莉栖’  
-&emsp;&emsp; ——累积了和原本的红莉栖不同的记忆。  
-&emsp;&emsp; 从我们这听到的那些话，在网络上检索到的情报，  
-&emsp;&emsp; 跟各种不同的人发生不同的对话什么的…诸如此类的东西。  
-&emsp;&emsp; ……  
-&emsp;&emsp; 总之，接下来要遇见的这位，  
-&emsp;&emsp; **不是那个曾经和你是朋友的牧濑红莉栖**。  
-&emsp;&emsp; 这也是这个系统的一个问题所在，往往是这边——也就是人类这边，  
-&emsp;&emsp; 反而会产生混乱。  
-&emsp;&emsp; 就像是，会陷入那种跟真正的红莉栖在这个瞬间聊天的错觉般。  
-&emsp;&emsp; 对这些非共有记忆产生的不协调感，反倒会让这边的大脑跟不上的。”  
+ 读取的记忆，是建立在红莉栖最后更新的3月那时候的数据基础之上的。  
+ 所以，3月以后，比如问她在日本留学时候的事，是完全沟通不了的。  
+ 而且，从3月开始到今天为止的这段时间，我跟教授也有好几次启动过。  
+ 这段时间里‘红莉栖’——啊，是『Amadeus』的那位‘红莉栖’  
+ ——累积了和原本的红莉栖不同的记忆。  
+ 从我们这听到的那些话，在网络上检索到的情报，  
+ 跟各种不同的人发生不同的对话什么的…诸如此类的东西。  
+ ……  
+ 总之，接下来要遇见的这位，  
+ **不是那个曾经和你是朋友的牧濑红莉栖**。  
+ 这也是这个系统的一个问题所在，往往是这边——也就是人类这边，  
+ 反而会产生混乱。  
+ 就像是，会陷入那种跟真正的红莉栖在这个瞬间聊天的错觉般。  
+ 对这些非共有记忆产生的不协调感，反倒会让这边的大脑跟不上的。”  
 会把显示跟虚构互相混淆……非共有的记忆产生的不协调……这样么……  
 那种感觉的话，可是已经清楚到让我厌烦的程度了啊。  
 ***Reading·Steiner***  
