--- a/steins_gate_0/docs/0006.md
+++ b/steins_gate_0/docs/0006.md
@@ -3,15 +3,15 @@
 > [ 2010/11/29 ] 心理治疗，而后跟真由理到秋叶原见菲莉丝和琉华子。  
 
 “来吧，冈部先生。请放松一点。  
-&emsp;&emsp; 把我的声音化作桥梁，下落着回到过去。  
-&emsp;&emsp; 你一点一点，一点一点的落下去……  
-&emsp;&emsp; 一会儿你会看见一阵温和的光芒……”  
+ 把我的声音化作桥梁，下落着回到过去。  
+ 你一点一点，一点一点的落下去……  
+ 一会儿你会看见一阵温和的光芒……”  
 这是在做梦。白日梦。我对于自己正在接受心理辅导的事实有着清晰的。把身体交托给沙发，尽量使内心慢慢冷静下来，照着心理医生说的那样，想象着景色。  
 “那光看上去是什么颜色的？”  
 “红色。”  
 “红色吗？原来如此。  
-&emsp;&emsp; 在那阵光芒当中，站着对你来说很重要的人。  
-&emsp;&emsp; 那是你的家人吗？”  
+ 在那阵光芒当中，站着对你来说很重要的人。  
+ 那是你的家人吗？”  
 “并不……”  
 “那么，是朋友？还是恋人？”  
 “恋人……不，不是恋人。连朋友都不是……”    
@@ -33,8 +33,8 @@
 ![](../pics/0006-3.png)
 
 “拯救真由理吧。  
-&emsp;&emsp; 到β世界线去，到真由理不会死的世界去。  
-&emsp;&emsp; 不单单是为了你，也是为了我啊。”——  
+ 到β世界线去，到真由理不会死的世界去。  
+ 不单单是为了你，也是为了我啊。”——  
 昏暗的广播馆楼顶走廊，浑身湿透的红莉栖帮我下定决心；  
 
 ![](../pics/0006-4.png)
@@ -73,7 +73,7 @@
 实际上，我被诊断为内心有着严重的心理创伤，因而强行中断了催眠治疗，转为接受心理辅导跟药物治疗。简而言之，就是说一边进行药物治疗的同时一边等待其自然治愈，除此之外没有什么更好的对策的样子。对于这个，是不是受到了昨天去比屋定真帆那看见的“她”的影响，我还不清楚。时间机器与世界线，还有与这些相关发生的那么多事情，不能跟心理医生说就这么直接接受治疗，对方说不定也不知道该怎么下判断。不管怎么说，就结果而言我决定不去考虑那么多东西。  
 “呐真由理，晚饭还没吃吧？去吃点什么东西吧，我请客。”  
 “啊，那样的话，去秋叶原怎么样呀？  
-&emsp;&emsp; 琉华君跟菲莉丝呢，想跟久违的冈伦见个面啊。”  
+ 琉华君跟菲莉丝呢，想跟久违的冈伦见个面啊。”  
 秋叶原……么。从这里要回我家的话用走路的就可以了，去秋叶原不是绕了个大原路吗。尽管这样，还是无法拒绝真由理的请求。  
 “啊……好吧。”  
 “真的！那我这就联络他们~”
