--- a/steins_gate_0/docs/0008.md
+++ b/steins_gate_0/docs/0008.md
@@ -84,7 +84,7 @@
 “我早就察觉到了！是的，很早就察觉到了。从你身上散发出浓烈的@cher的气味！”  
 “真是失礼啊！我每天都有好好的使用香味不太强烈的香水啊！”  
 “不是那种意义上的！我说的是灵魂级别的事情。  
-&emsp;&emsp; 但是，想要隐藏这一点还真是可爱啊——@cher克里斯！”  
+ 但是，想要隐藏这一点还真是可爱啊——@cher克里斯！”  
 “别·用·这·种·名·字·叫·我！”  
 灵魂级别的事情……吗？那个时候无意中的一句话，现在感觉却拥有了更深的意义。就像雷斯吉宁教授在研讨会上说的那样，眼前的“她”也总有一天会成为真正的**人工灵魂**，存在于这里吧。到那个时候，就算肉体毁灭灵魂也依然存在于这个世界的状态，我们到底应该怎么称呼呢？既不是生也并非是死，夹缝的“存在”——这已经不是科学，可能是哲学或宗教的范畴了。  
 
@@ -108,7 +108,7 @@
 不单是“红莉栖”楞了一下，比屋定真帆也很惊讶于我提出的问题，我慌忙的编了个借口。  
 “嗯。怎样？“红莉栖”？”  
 “是呢。从结论来说，时间机器是不可能的——  
-&emsp;&emsp; 但是，也无法断定完全不可能，大概就是这样吧。”  
+ 但是，也无法断定完全不可能，大概就是这样吧。”  
 “哎？”  
 和“之前”说的不一样。  
 “从结论来说，时间机器什么的，完全是愚蠢的想法。”  
@@ -117,10 +117,10 @@
 我一边回忆着过去的讨论，一边抛出红莉栖自己说过的话。  
 “这样的论断可是太轻率了哟？”  
 “是吗？确实世界上许多科学家都在提出时间旅行的理论，主流的也有11种……  
-&emsp;&emsp; 但无论哪个都没有走出假说的范围。并且，不同的理论之间也有相互矛盾的地方存在。  
-&emsp;&emsp; 比如宇宙弦理论和虫洞理论，这些理论作为思考实验倒是可以实现时间旅行——  
-&emsp;&emsp; 话说回来，宇宙弦还有<abbr title="这里是异常物质exoticmatter而不是反物质antimatter">异常物质</abbr>什么的，究竟应该到哪里找，怎么找，完全没有头绪。  
-&emsp;&emsp; 也就是说，完全不现实。”  
+ 但无论哪个都没有走出假说的范围。并且，不同的理论之间也有相互矛盾的地方存在。  
+ 比如宇宙弦理论和虫洞理论，这些理论作为思考实验倒是可以实现时间旅行——  
+ 话说回来，宇宙弦还有<abbr title="这里是异常物质exoticmatter而不是反物质antimatter">异常物质</abbr>什么的，究竟应该到哪里找，怎么找，完全没有头绪。  
+ 也就是说，完全不现实。”  
 这是从α世界线的红莉栖那里的现学现卖。但是，画面中的“她”却不为所动。  
 “这应该是因为科学家还没有完成一些重大的发现吧。”  
 “那么，你是认为时间机器一定会被造出来吗？”  
@@ -129,11 +129,11 @@
 “呐，比屋定小姐，‘她’是能够明白自己是从原版的记忆派生出来的存在吧。”  
 “当然。”  
 “那么，那个……虽然没能想到什么好的例子……  
-&emsp;&emsp; 会像同卵双胞胎那样吗？在出生的时候没办法分辨，  
-&emsp;&emsp; 但是随着成长过程，慢慢地也会出现差异……之类的。”  
+ 会像同卵双胞胎那样吗？在出生的时候没办法分辨，  
+ 但是随着成长过程，慢慢地也会出现差异……之类的。”  
 “关于这一点虽然还在验证中……  
-&emsp;&emsp; 但是我认为，累积下来的记忆不同的话，  
-&emsp;&emsp; 当然也就会变成与原来的人‘不同的人’。我和教授是这样想的。”  
+ 但是我认为，累积下来的记忆不同的话，  
+ 当然也就会变成与原来的人‘不同的人’。我和教授是这样想的。”  
 “是吗……”  
 
 这时，听到了啪嗒一声，从隔间外面传来的门的声音。  
@@ -165,29 +165,29 @@
 “是修改我的记忆吗？从理论上来说是可能的。”  
 “红莉栖”自己代替教授回答道。  
 “比如说，让我认为自己的名字是‘克里斯蒂娜’，这样的是可以做到的吧。  
-&emsp;&emsp; 但是与普通的数据不同，记忆数据相当的复杂。  
-&emsp;&emsp; 可以说，目前没有修改成功的例子。  
-&emsp;&emsp; 就算修改成功了，我可能也会注意到并且自己进行修复。  
-&emsp;&emsp; 因为在只有我能访问的空间里保存着日志，就相当于‘秘密日记’。  
-&emsp;&emsp; 如果日记和现有记忆间有不自然的差异，我大概率会产生怀疑。  
-&emsp;&emsp; 进一步说，我的记忆数据是有定期备份的。  
-&emsp;&emsp; 就算被修改到了无法自我修复的程度，也可以通过备份来复原。  
-&emsp;&emsp; 虽说这样会丢失从最后一次备份到记忆被修改之间的记忆。”  
+ 但是与普通的数据不同，记忆数据相当的复杂。  
+ 可以说，目前没有修改成功的例子。  
+ 就算修改成功了，我可能也会注意到并且自己进行修复。  
+ 因为在只有我能访问的空间里保存着日志，就相当于‘秘密日记’。  
+ 如果日记和现有记忆间有不自然的差异，我大概率会产生怀疑。  
+ 进一步说，我的记忆数据是有定期备份的。  
+ 就算被修改到了无法自我修复的程度，也可以通过备份来复原。  
+ 虽说这样会丢失从最后一次备份到记忆被修改之间的记忆。”  
 “嗯……是吗……”  
 与讨论的内容无关，我产生了一种奇怪的心情。在载入“红莉栖”之前比屋定真帆说的话是真的，我渐渐产生了一种正在和真正的红莉栖交谈的感觉。一旦牵扯到科学的话题，就会变得不容我插嘴般的能言善辩，这一点和她一模一样。  
 “但是，还是真是令人感兴趣。”  
 我再一次对“红莉栖”说话。  
 “关于自己的事情，你能够当作机械一样客观地讨论。  
-&emsp;&emsp; 若是在小说漫画里，通常总会强调‘我不是机器，我是人类！’之类的呢。”  
+ 若是在小说漫画里，通常总会强调‘我不是机器，我是人类！’之类的呢。”  
 “这完全是无稽之谈呢。  
-&emsp;&emsp; 人类自己也不是经常把自己当作硬件和软件的组合体来看待吗？  
-&emsp;&emsp; 在医学和心理学的名下，这一点又有什么不同呢？”  
+ 人类自己也不是经常把自己当作硬件和软件的组合体来看待吗？  
+ 在医学和心理学的名下，这一点又有什么不同呢？”  
 “原来如此……”  
 
 “真是的，论歪理的话谁都比不上她呢，这孩子……”  
 听到比屋定真帆这样的评价，“红莉栖”把CG的眼睛——现实中的摄像头——转了过去。  
 “呐，学姐，虽然这可能是多管闲事，但是毒舌还是改一改为好哦？  
-&emsp;&emsp; 难得春天要来了，要是被讨厌了该怎么办？”  
+ 难得春天要来了，要是被讨厌了该怎么办？”  
 “什…？都说了，别再回到那个话题上去了！”  
 “但是，现在对于我来说，这个是最有兴趣的话题！”  
 “这种东西是最无关紧要的好吧！”  
@@ -206,13 +206,13 @@
 雷斯吉宁：“这样一来，就想让作为红莉栖的朋友的 *Rintaro* 你来协助。”  
 好像之前宴会的时候确实说到测试员什么的，原来是这么回事。  
 真帆：“教授和我还要在日本待一段时间，就在这段时间内想拜托你当测试员。  
-&emsp;&emsp; 想让你做的，总之就是和‘红莉栖’说话。  
-&emsp;&emsp; 没有什么具体的次数限制，你想和她说话的时候就说，这样就好。  
-&emsp;&emsp; 只是，大概一个月两次，希望你对教授和我汇报测试的经过。”  
+ 想让你做的，总之就是和‘红莉栖’说话。  
+ 没有什么具体的次数限制，你想和她说话的时候就说，这样就好。  
+ 只是，大概一个月两次，希望你对教授和我汇报测试的经过。”  
 雷斯吉宁：“然后，很抱歉没有办法给你报酬。连同这点在内，希望你考虑一下。”  
 “我……”  
 雷斯吉宁：“我能理解，让你和再现逝去的朋友的AI说话，对你来说是非常残酷的。  
-&emsp;&emsp; 要是不愿意参加对话，拒绝也没关系的。”  
+ 要是不愿意参加对话，拒绝也没关系的。”  
 我回想起了刚才和“红莉栖”的对话。  
 在要分别，显示器要关掉的时候，“红莉栖”这样说了：  
 “有机会再见吧，冈部伦太郎先生。”  
