--- a/steins_gate_0/docs/0010.md
+++ b/steins_gate_0/docs/0010.md
@@ -48,7 +48,7 @@
 “的确，如果那孩子突然开始自言自语我也会很惊讶。”  
 不管怎样优秀的人工智能，只要不编写相关的程序，就不可能自言自语。话说回来，这种功能既没有意义也没有必要。“自言自语”的再现，可能会成为观测“自我”的一种手段。但是对真帆来说，要举双手赞成这个想法还是有些犹豫。  
 “在这里，可不是能乱说这种话的。  
-&emsp;&emsp; ‘灵魂’是神赐予人类的东西——不要忘记持这种想法的人有很多。”  
+ ‘灵魂’是神赐予人类的东西——不要忘记持这种想法的人有很多。”  
 “……说的也是呢。”  
 刚才红莉栖那闪闪发光的表情瞬间灰暗起来。  
 红莉栖和真帆在研究所里都是异端般的存在。是日本人，又是女性，更是如此。何况红莉栖太过优秀。即便如此，也不会露骨的表现出来，大多数研究员前辈们都抱着敬而远之的态度。多亏主任研究员雷斯吉宁教授对真帆和红莉栖的关照，她们才总算获得了能平稳的进行研究的状态。要是刚才那种发言让他们听见，真不知道要受到多少的责难。  
@@ -94,7 +94,7 @@
 非常罕见地，红莉栖抱着头。看她这样子，真帆从心底里感到惊讶。  
 “学姐，拜托！一定要向其他人保密！”  
 “我觉得这并不是什么必须隐藏的东西啊……  
-&emsp;&emsp; 知道了，不会说出去的。”  
+ 知道了，不会说出去的。”  
 不知为何，能和红莉栖共享秘密，真帆感到高兴。  
 “帮大忙了……”  
 看着从心里松了一口气的红莉栖，真帆继续说：  
@@ -114,8 +114,8 @@
 “嗯……是的。”  
 真帆耸了耸肩，把“红莉栖”捉弄人的笑容搪塞过去。  
 “不觉得不可思议吗？雷斯吉宁教授居然会如此信任冈部先生。  
-&emsp;&emsp; 明明是只见过两面的人，却把你的访问权限给了他。  
-&emsp;&emsp; 如此信任他这样真的好吗？”  
+ 明明是只见过两面的人，却把你的访问权限给了他。  
+ 如此信任他这样真的好吗？”  
 “看起来倒像是个诚实的人呢。”  
 “是吗？到底有没有上进心呢……这个人我有些看不懂啊……”  
 “喜欢吗？”  
@@ -138,12 +138,12 @@
 好像被看透了内心，真帆呆住了。  
 “……怎么知道的？”  
 “根据冈部先生的话语，和看学姐的反映后判断了出来。  
-&emsp;&emsp; 虽然只有间接证据，要给你证明吗？”  
+ 虽然只有间接证据，要给你证明吗？”  
 “不用了，如果是你的话就连反驳的余地也没有吧。”  
 口中说着证明之类的单词的红莉栖和真帆，其实都是理科生。  
 “只有对方一人拥有和‘我’一起的记忆的话，在对话中产生不一致的可能性会很高。”  
 “和他说话的过程中究竟该怎么办就交给你了。  
-&emsp;&emsp; 说不定冈部先生会主动提出，要不然你主动去问也可以。”  
+ 说不定冈部先生会主动提出，要不然你主动去问也可以。”  
 冈部伦太郎究竟会不会找『Amadeus』说话，现在也不知道。因为测试并非强制性的。  
 “嗯……**装作不知道的样子**的话，和说谎是一样的呢……感觉会拿到很有趣的资料。”  
 是的，确实很有意思，真帆是这样想着的。但那个是『Amadeus』在研究方面的意见。对与冈部伦太郎这位青年来说是什么？这不是向他心中的伤口撒盐的行为吗？想到这里，真帆注意到，自己变得太过感伤了。  
