--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -16,7 +16,7 @@
 
 这一天，包含吹雪在内的朋友四人，为了购买制作cosplay服装用到的材料，去了池袋的汤川屋、乙女路和东京HANDS，而后又到秋叶原去逛了几家cosplay商店。这全都是为了年末的冬季CM（*Comic Market*）做的最后准备。  
 “虽然这样说，但是制作服饰的不就几乎只有真由理吗？  
-&emsp;&emsp; 不要太勉强哦，真由理酱……”  
+ 不要太勉强哦，真由理酱……”  
 充满担心地说着话的，是枫。本名是来岛枫，直接用本名当作cosplay名，是比吹雪大三岁的女子大学生。虽然枫很有女人味，三围也是像平面模特一样完美的标准值，但性格却有些内向。大学里，不管多少次邀请她参加选美比赛，她都是以“现充一样的活动好像很可怕”这种理由去拒绝。尽管如此，和吹雪她们一起参加CM之类的活动上的cosplay，还是十分期待的。  
 
 ![](../pics/0011-2.png)
@@ -129,7 +129,7 @@
 由季：“啊哈哈，都说了真的没有啦。”  
 真由理：“是吗？”  
 由季：“大家都误会了啦，我并没有那么受欢迎啦。  
-&emsp;&emsp; 悄悄给你们说，我单身年龄和实际年龄是一样的。”  
+ 悄悄给你们说，我单身年龄和实际年龄是一样的。”  
 吹雪：“诶诶！！”  
 在真由理之后，由季都说出意外的事实，吹雪受到了持续的震惊。  
 枫：“是这样吗？”  
@@ -148,19 +148,19 @@
 
 ——就是这样的危险人物。然而，被问及的由季本人，不仅仅很困扰的态度，甚至还表现出有些寂寞的感觉。  
 “嗯……桥田君虽然是个好人，但怎么说呢……  
-&emsp;&emsp; 像我这样的女孩子，他可能并不太喜欢吧。”  
+ 像我这样的女孩子，他可能并不太喜欢吧。”  
 “诶诶？！”  
 真由理不是一般的惊讶。过于惊讶，以至于她手中的行李箱掉到了地上，而她对此毫不在意，拼命地向由季说着：  
 “没，没有那样的事哦！  
-&emsp;&emsp; 桶子君呢，那个呢，对于由季可是萌得很呢！  
-&emsp;&emsp; 一定是这样的，真由喜保证！  
-&emsp;&emsp; 夏季CM第一次见面的时候，就是这样的感觉不是嘛？”  
+ 桶子君呢，那个呢，对于由季可是萌得很呢！  
+ 一定是这样的，真由喜保证！  
+ 夏季CM第一次见面的时候，就是这样的感觉不是嘛？”  
 由季和真由理的相识是在四个月前的夏季CM。吹雪和枫穿着真由理制作的Cos服参加活动，在会场，一个人参加的由季被枫发现并且会合。在之后大家一起举行的庆功宴上，作为真由理的朋友的桶子也在。吹雪可是清楚地见证了，由季和桶子融洽交谈的样子。在那之后，由季和真由理、桶子成为了朋友，而她也会偶尔去两人所属的社团——LAB，未来机械研究所。也就是说从夏季CM以来，由季和桶子一直都保持着来往。尽管这样，由季还是苦笑着摇着头。  
 “不，只要看看就知道了。总是感觉不止为何在被避开。  
-&emsp;&emsp; 所以圣诞派对，我也考虑我是不是不去会比较好。”  
+ 所以圣诞派对，我也考虑我是不是不去会比较好。”  
 真由理：“啊……呜……”    
 “桥田君，可能更喜欢……妹系？是不是更喜欢这类的女孩子呢？  
-&emsp;&emsp; 而且是，相当强硬的，会管着哥哥的妹妹。”  
+ 而且是，相当强硬的，会管着哥哥的妹妹。”  
 “啊呜呜呜呜……”  
 “就比如说……像是铃羽小姐那种的感觉？”  
 “那，那个是……那个是……”  
@@ -170,8 +170,8 @@
 明显不是“什么都没有”的样子。吹雪实在看不下去她这个样子，于是解放了自己的冲动——  
 
 “真由喜，不要露出这样的表情。真由喜笑着的时候是最可爱的。  
-&emsp;&emsp; 呐，来吧来吧，不笑的话我就要来挠痒痒了~  
-&emsp;&emsp; 我挠我挠我挠……”  
+ 呐，来吧来吧，不笑的话我就要来挠痒痒了~  
+ 我挠我挠我挠……”  
 悄悄迂回到真由理背后的吹雪，从腋下入手开始了挠痒痒攻击。而真由理则是难以自抑地笑了起来。就这样闹了一小会儿之后，吹雪终于停了手。  
 “认命了？”  
 “真是的，吹雪酱真是坏心眼……”  
@@ -221,12 +221,12 @@
 “诶……？什么？怎么回事？”  
 吹雪回想起来，那不愿想起的噩梦。就算不愿意，也还是从脑海中浮现的，那个景象。  
 “我会做一种梦。  
-&emsp;&emsp; 大概是夏天那会儿吧，每天每天，在梦中真由喜都会死去。  
-&emsp;&emsp; 每当这个时候我和枫酱就会不停的哭泣，但是却束手无策。  
-&emsp;&emsp; 昨天晚上的梦，最糟糕了。  
-&emsp;&emsp; 在我们面前的真由喜忽然倒下，一动不动了……  
-&emsp;&emsp; 冈伦悲鸣着抱她在怀中，大声地叫着……  
-&emsp;&emsp; 呐，我到底是怎么了？为什么我总是梦见这种梦？”  
+ 大概是夏天那会儿吧，每天每天，在梦中真由喜都会死去。  
+ 每当这个时候我和枫酱就会不停的哭泣，但是却束手无策。  
+ 昨天晚上的梦，最糟糕了。  
+ 在我们面前的真由喜忽然倒下，一动不动了……  
+ 冈伦悲鸣着抱她在怀中，大声地叫着……  
+ 呐，我到底是怎么了？为什么我总是梦见这种梦？”  
 “冷静下来，吹雪酱，大概是因为太累了吧。”  
 “是这样吗？真的是这样吗？”  
 “因为，真由理酱，今天也非常精神的不是吗？所以，没事的。”  
