--- a/steins_gate_0/docs/0013.md
+++ b/steins_gate_0/docs/0013.md
@@ -21,11 +21,11 @@
 
 铃羽让椎名母女俩退后，将自己的右手与右眼靠近时间机器的传感器。通过生体认证后，舱门滑开了。然后就这样进入时间机器内部，将身体在座位上固定好。  
 “这种的长时间载人跳跃虽然还是第一次，但是技术上应该是完全没有问题的。  
-&emsp;&emsp; 只要能按照目前以来的测试跳跃一样顺利的话就可以了。”  
+ 只要能按照目前以来的测试跳跃一样顺利的话就可以了。”  
 “*Okey-dokey!* ”  
 铃羽一边回答着父亲，一边按照顺序将机器的开关一个接一个地打开。因为已经预见到今天迟早会到来的缘故，启动过程早已经过不知道几百次的模拟，让身体彻底记住了。机器原本微弱的声音，逐渐的开始变大。  
 “根据数据来看的话，以前的广播管正好就在这个地方的楼顶。  
-&emsp;&emsp; 但是高度可能会出现1米左右的误差，落地的时候应该会有冲击。”  
+ 但是高度可能会出现1米左右的误差，落地的时候应该会有冲击。”  
 “了解。”  
 这台时间机器虽然能够做到时间跳跃，但是没有办法空间移动。为了到达近60年前的广播会馆楼顶的话，就必须从这个坐标出发。  
 “出现问题的时候一定要保持冷静，回想以前的训练就好。”  
@@ -75,7 +75,7 @@
 “要关门了！”  
 舱门开始慢慢关闭。机内和机外，正在彻底隔绝成两个世界。不管铃羽的任务是否能够成功，这以后大概，再也不会相见了吧。  
 “铃羽酱，篝她就真的拜托了啊！  
-&emsp;&emsp; 还有，记得告诉冈伦！*Steins;Gate* 一定存在！”  
+ 还有，记得告诉冈伦！*Steins;Gate* 一定存在！”  
 “‘绝对不能放弃啊你个混蛋！’这样告诉他！”  
 “*Okey-dokey!* ”  
 接着，舱门彻底封闭。外面的混乱，还有真由姐与父亲最后的叮咛，都消失了。  
