--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -15,13 +15,13 @@
 “……没有去过。”  
 红莉栖成为LABMem而来到LAB里的那些事，都是α世界线的话题了。到了这条世界线的话，红莉栖她根本都没有成为LABMem就与世长辞了，当然不可能去过LAB。  
 “你好像误会了什么。我先声明，  
-&emsp;&emsp; 虽说是LAB但并不是真正的Lab，只是……一起玩的社团。  
-&emsp;&emsp; 而且——”  
+ 虽说是LAB但并不是真正的Lab，只是……一起玩的社团。  
+ 而且——”  
 现在，那里住着铃羽，桶子也频繁的出入。被那两个人知道“红莉栖”的话，难说不会产生各种各样的麻烦。  
 “能不能不要把话说一半！”  
 “没什么。”  
 “不管如何，我也想多看看外面的世界。  
-&emsp;&emsp; 至今为止和教授前辈们说话的时候，也全都是在研究室中。”  
+ 至今为止和教授前辈们说话的时候，也全都是在研究室中。”  
 “所以我才像这样，在周日的大清早就给你做池袋的向导啊。”  
 早上10点，就算是这个时间，池袋车站前也有很多人，很热闹。伴随着正午的临近，人估计会更多吧。  
 “如果有必要，带你去‘少女之路’的觉悟都有哦。”  
@@ -30,8 +30,8 @@
 “等等，我查一下。……呀！”  
 “当真产生兴趣了？”  
 “什……才，才没有那种事！  
-&emsp;&emsp; 总之，今天要带我去你的LAB！  
-&emsp;&emsp; 既然说给我听了，就要好好负起责任！拜托了呢！”  
+ 总之，今天要带我去你的LAB！  
+ 既然说给我听了，就要好好负起责任！拜托了呢！”  
 甩下这句话就挂断了……好像我成了那家伙的代步工具了……“红莉栖”无法自主的进行移动，变成这样也是必然的。  
 “真是的，任性的家伙……”  
 真是被小看了呢……这样下去的话，很可能过不久就会被那家伙当成下仆了。原版的红莉栖暂且不说——不，也不是暂且不说——还被作为人工智能的“红莉栖”这样使唤，简直是不可想象的屈辱啊……这难道不是关系到人类本身尊严的大事吗？  
@@ -44,13 +44,13 @@
 “嗯？啊啊……那个，刚才是……大学研究会的朋友。”  
 “是嘛~今天也要去玩吗？”  
 “不，今天并没有什么预定。  
-&emsp;&emsp; 真由理呢？要去打工吗？”  
+ 真由理呢？要去打工吗？”  
 “不不，要在LAB和由季碰头。”  
 “LAB……”  
 不知道时机算好还是坏……  
 “对了，好久没来的冈伦要不要也一起来？可以吃到由季亲手做的料理哦~  
-&emsp;&emsp; 另外呢，真由喜也准备努力制作的说！  
-&emsp;&emsp; 怎么……样……？”  
+ 另外呢，真由喜也准备努力制作的说！  
+ 怎么……样……？”  
 真由理越说越小声，越说越纠结的样子。  
 
 结果还是来了。  
