--- a/steins_gate_0/docs/0015.md
+++ b/steins_gate_0/docs/0015.md
@@ -21,13 +21,13 @@
 “抱歉，我换个说法……全是些破烂呢。”  
 你这不是也没变吗……嘛，虽说这是事实。  
 “虽说不论哪里的研究室这种地方都是乱七八糟的，  
-&emsp;&emsp; 话虽如此这里也太糟糕了……  
-&emsp;&emsp; 这简直和真帆前辈的住处有得一拼了。”  
+ 话虽如此这里也太糟糕了……  
+ 这简直和真帆前辈的住处有得一拼了。”  
 “暴露这种个人隐私真的好吗？”  
 “你也帮我给学姐说说，房间还是要好好整理的。”  
 “如果说了这话估计我会被咬的……”  
 “嘛，不过，对于像这种合租房似的，我还稍微有些憧憬呢。  
-&emsp;&emsp; 看着人汇集的地方，心情一定不错。”  
+ 看着人汇集的地方，心情一定不错。”  
 “红莉栖”露出温和的笑容。  
 是的，红莉栖，你在α世界线，对我说过这样的话……  
 “红莉栖……你，本来——”  
@@ -52,17 +52,17 @@
 “不是铃羽的锅，是冈伦不对！”  
 “那是因为桶子你事前没有告诉我吧。”  
 “不是根本就没有告诉你的时机嘛……  
-&emsp;&emsp; 话说冈伦，你一直拿着手机嘟嘟囔囔的，到底在干嘛？”  
+ 话说冈伦，你一直拿着手机嘟嘟囔囔的，到底在干嘛？”  
 “那是……那个……”  
 “叔叔你是在和谁说话吧？”  
 “是有那种APP，我尝试着用了一下。”  
 “啊啊，像是galgame一样的那种？冈伦也开始玩这个了啊。  
-&emsp;&emsp; 这样的话等下告诉你一些我推荐的APP哦。”  
+ 这样的话等下告诉你一些我推荐的APP哦。”  
 “啊……好……”  
 总之，『Amadeus』的事情总算是蒙混过去了。  
 “不管怎么说，是我太大意了。冈伦叔叔，刚刚吓到你了，真抱歉。”  
 “说起来，真的有躲着她的必要吗？  
-&emsp;&emsp; 反正都已经设定为桶子的妹妹了，偷偷摸摸的不是反而显得更可疑吗。”  
+ 反正都已经设定为桶子的妹妹了，偷偷摸摸的不是反而显得更可疑吗。”  
 原本，铃羽是不想和由季见面的。仅仅和作为父亲的桶子见面就已经可能引起时间悖论，如果连母亲也接触的话就糟糕了。这是她的理由。但是铃羽的存在很早就暴露了，没办法只能用桶子的妹妹这样的身份糊弄过去。那位由季也相信了这个说法，也就没有再补救的必要。  
 “话是这么说，母亲出乎意料地想和我友好相处。对话多了，难免会露出破绽。”  
 “毕竟如果出现了与自己很相似的人的话，要么会感到厌恶，要么就会抱有兴趣呢。”  
@@ -73,7 +73,7 @@
 “话说啊，就这样什么都不说明不是挺好的吗？”  
 桶子却给出了出乎意料的意见。  
 “阿万音氏，怎么说呢，我认为不是那种对秘密什么的非要刨根问底的人。  
-&emsp;&emsp; 铃羽的话应该十分了解不是么？”  
+ 铃羽的话应该十分了解不是么？”  
 “的确未来的母亲不是那样的人……”  
 “那么就没问题了。等到时机成熟了，我会好好说明的。”  
 “真的？”  
@@ -110,28 +110,28 @@
 “真是和平啊——在我懂事的时候，这些情景已经不存在了。”  
 铃羽看着电视画面中，小巧漂亮的女性们笑着回答采访。  
 “好羡慕啊……她们不用去杀任何人，也不会突然被谁杀害吧。  
-&emsp;&emsp; 我成长的时代中，对方无论是男是女都必须毫不留情地杀掉。  
-&emsp;&emsp; 下一个瞬间说不定自己的生命就会终结——  
-&emsp;&emsp; 这样的恐惧无论睡着还是醒着都伴随左右。  
-&emsp;&emsp; 为了忘却恐惧，除了委身于疯狂，让自己成为杀人方，别无他法。”  
+ 我成长的时代中，对方无论是男是女都必须毫不留情地杀掉。  
+ 下一个瞬间说不定自己的生命就会终结——  
+ 这样的恐惧无论睡着还是醒着都伴随左右。  
+ 为了忘却恐惧，除了委身于疯狂，让自己成为杀人方，别无他法。”  
 那就是所谓的战争，也是对铃羽来说曾经的日常生活。经历过数条噩梦般的世界线的我也不曾体验过那样的世界。  
 “爸爸他们因为时间机器的事被归为反政府组织。”  
 铃羽回来所乘坐的时间机器是由桶子开发的，其性能相比α世界线的更是高出许多。  
 真不知道这边未来的他是怎么办到的。  
 “我也因为脱离军队加入爸爸他们而被警察和治安部队所追捕。  
-&emsp;&emsp; 之后，更加惨烈的战斗发生了好几次。  
-&emsp;&emsp; 我不想说什么‘为了正义而战’之类的漂亮话。  
-&emsp;&emsp; 我杀了很多人，朋友和同伴也有很多被杀掉了。  
-&emsp;&emsp; 在那之中就有我的母亲。  
-&emsp;&emsp; 为了从军队的无人机下保护我，被机枪扫射而死了……”  
+ 之后，更加惨烈的战斗发生了好几次。  
+ 我不想说什么‘为了正义而战’之类的漂亮话。  
+ 我杀了很多人，朋友和同伴也有很多被杀掉了。  
+ 在那之中就有我的母亲。  
+ 为了从军队的无人机下保护我，被机枪扫射而死了……”  
 用电脑看着Nico直播的桶子，后背轻微地动了一下。一边装作在看显示器的样子，一边仔细听着铃羽的话吧。谈及阿万音氏的临终，这还是第一次。现在就在一旁开心地淋浴着的她，最终是以那样悲惨的死亡而结束了吗……  
 “这双眼睛看到过支离破碎的母亲，这副身体沐浴过母亲热腾腾的鲜血……”  
 也许，铃羽不想与这个2010年的母亲见面，是因为不想让现在的阿万音由季得知未来的事情也说不定。不可能说得出口吧，那样的未来……  
 “呐，冈伦叔叔——”  
 铃羽的眼睛不知何时被眼泪润湿了。  
 “这条世界线的前方，只有地狱啊！  
-&emsp;&emsp; 不用现在也可以，距离最后期限还有一些时间。  
-&emsp;&emsp; 所以，哪怕仅仅再试一次……那个……考虑一下，拜托了。”  
+ 不用现在也可以，距离最后期限还有一些时间。  
+ 所以，哪怕仅仅再试一次……那个……考虑一下，拜托了。”  
 “我…………”  
 我知道的。  
 理性上是明白的。  
@@ -150,16 +150,16 @@
 “不，不是什么大事，没事的……”  
 我将身体躺在沙发上，镇定心情，然后继续向她说道：  
 “铃羽想说的事也好，心情也好……我都知道。  
-&emsp;&emsp; 但是……我已经在太多世界线漂流，  
-&emsp;&emsp; 在与这里不同的世界线上，看到过被时间机器玩弄命运的人们。  
-&emsp;&emsp; 你自身的悲惨的结局，我也看到过。  
-&emsp;&emsp; 我也卷入其中，了解到做什么都是没用的。”  
+ 但是……我已经在太多世界线漂流，  
+ 在与这里不同的世界线上，看到过被时间机器玩弄命运的人们。  
+ 你自身的悲惨的结局，我也看到过。  
+ 我也卷入其中，了解到做什么都是没用的。”  
 我了解的，在这个世界的构造面前，人类是多么的无能为力。  
 “利用时间机器来改变世界线，意味着脱离这个宇宙的组成原理。  
-&emsp;&emsp; 那不是我们人类应该出手干预的领域。  
-&emsp;&emsp; 那是属于神的范畴。  
-&emsp;&emsp; 触及的话，我们会遭受更加残酷的惩罚。  
-&emsp;&emsp; 我，是这么认为的。”  
+ 那不是我们人类应该出手干预的领域。  
+ 那是属于神的范畴。  
+ 触及的话，我们会遭受更加残酷的惩罚。  
+ 我，是这么认为的。”  
 “这就是，冈伦叔叔的回答吗？”  
 “至少现在是……”  
 “是么……”  
