--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -17,18 +17,18 @@
 “可是……”  
 铃羽走近篝，接着单膝跪地，让视线与少女持平。不过，她并不想哄她。因为这是为了拯救数十亿人生命的第一项任务。  
 “听好，从现在开始，我会将篝也视为‘瓦尔基里’组织的一员，作为我的部下。  
-&emsp;&emsp; 今后可不再是非战斗人员了。  
-&emsp;&emsp; 这里是1975年，没有人认识我们。  
-&emsp;&emsp; 不论是我爸爸还是真由姐都没有出生。  
-&emsp;&emsp; 也就是说，没人会保护我们。  
-&emsp;&emsp; 自己的命自己做主，知道吗？”  
+ 今后可不再是非战斗人员了。  
+ 这里是1975年，没有人认识我们。  
+ 不论是我爸爸还是真由姐都没有出生。  
+ 也就是说，没人会保护我们。  
+ 自己的命自己做主，知道吗？”  
 “嗯……”  
 坚强的篝终于想起了现在不是哭的时候。她拼命地想要忍住泪水，虽然不是很成功，但是比起感情用事地一味哭泣要强多了。铃羽知道，这孩子本来就很聪明。  
 “我们时间不多。要是被这个时代的人发现了时间机器会很麻烦。”  
 时间机器所在的这个广播会馆楼顶人迹罕至，没有意外的话，被第三者发现的可能性很低。只是在这个时代，没有人能帮忙把机器隐藏起来。这样考虑的话，果然还是没法久留。有必要尽快地达成任务目标，然后跳向下一个时代。  
 “失败了的话，再用时间机器回来不行吗？”  
 “还要考虑燃料的问题。能进行跳跃的次数不是无限的。  
-&emsp;&emsp; 关键时刻没法工作的话，那就全白费了。”  
+ 关键时刻没法工作的话，那就全白费了。”  
 “这样啊……”  
 “站得起来吗？”  
 铃羽带着篝来到外面。刺眼的阳光让篝惊讶地眯起眼睛。这个时代的东京的天空，要称其为蓝天，未免太过肮脏浑浊——从林立的工厂烟囱里排放出的，正体不明的烟雾与粉尘，以及在地面成群爬行的汽车所排放出的黑色尾气形成黑色的光化学烟雾。城市的上空，被这些东西构成的死亡帷幕所遮盖。然而即使如此，对篝而言，这恐怕也是首次经历的“清澈”天空。像这样刺眼的阳光，目前为止她只在录像与书本中才见到过。第三次世界大战开始后，东京的天空在核武器造成的气候变动下时常被浅灰色的云所占据，太阳只能从其后方映出淡淡的光晕，她从来没有沐浴过这么强烈的阳光。  
@@ -37,8 +37,8 @@
 “空气……好清新。”  
 和长期外出时必须带上附有过滤器的面具的2036年相比，1975年的东京要洁净得多。  
 “懂了吧，篝，为什么爸爸他们要把一切赌在改变世界线上的原因。  
-&emsp;&emsp; 世界线会怎样，历史又如何，这些大道理以后再说就好。  
-&emsp;&emsp; 现在，只要守住这天空的颜色。”  
+ 世界线会怎样，历史又如何，这些大道理以后再说就好。  
+ 现在，只要守住这天空的颜色。”  
 篝不知是想到了什么，从口袋里掏出褪了色的乌帕钥匙链，一脸落寞地盯着。大概是想起了母亲真由理吧。并且，是想要理解母亲让她乘上时间机器的用意吧。  
 看到篝的样子，铃羽判断已经没问题了，便从外面关上时间机器的舱门，接着机器便自动上锁。能打开舱门的只有事先进行了生体认证的铃羽，所以万一被谁发现了，也不能立刻知道其作用吧。
 
@@ -49,9 +49,9 @@
 
 “这是什么？”  
 “是叫做‘IBN5100’的老电脑。  
-&emsp;&emsp; 我们时代的不管哪个都没法正常工作。  
-&emsp;&emsp; 但是在这个时代的话，就能得到完好的。  
-&emsp;&emsp; 分头寻找这个，就是我和你的，第一个任务。”  
+ 我们时代的不管哪个都没法正常工作。  
+ 但是在这个时代的话，就能得到完好的。  
+ 分头寻找这个，就是我和你的，第一个任务。”  
 “嗯。”  
 “联络就用这个。通讯距离好像非常短，聊胜于无吧。”  
 铃羽递给篝一台小型对讲机。  
@@ -78,7 +78,7 @@
 “留未姐就是留未姐啊。”  
 秋叶留未穗——也就是自称菲莉丝，作为父亲的友人，一直到2036年都在向他提供各种各样的支援，所以铃羽从小就和她熟识，一直称她为“留未姐”。当然，这个时代的她似乎无论如何都想要别人叫她“菲莉丝”。然而即使询问她理由，也只会像刚才那样，说些“菲莉丝就是菲莉丝喵！”之类的莫名回答，令铃羽很困扰。  
 “看到LAB没人，就在想是不是在这里，看起来是正解喵！  
-&emsp;&emsp; 给，慰问品。虽说只是店里卖剩下的东西有点对不住喵。”  
+ 给，慰问品。虽说只是店里卖剩下的东西有点对不住喵。”  
 菲莉丝把一个印有 *MayQueen+Nyan²* 的logo的蛋糕盒拿给铃羽。  
 “爸爸不在LAB真是太好了……”  
 要是在这种时间给他吃这种东西，又要更胖了。  
@@ -105,12 +105,12 @@
 “似乎在竭尽全力。留未姐，这台机器，继续放在这也没关系吗？”  
 铃羽环视着整个屋顶问道。这么大的东西放在这里，之所以还没引起骚动，都是菲莉丝的功劳。既是在这附近一带拥有影响力的名家的继承人，又对秋叶原的开发做出了巨大贡献，因为这层关系，她主动承担了隐藏时间机器的任务。  
 “嗯。这一层——不如说是楼顶，已经被菲莉丝整个借走了，别担心喵。  
-&emsp;&emsp; 对老板说了是在研究体感游戏喵，虽然这解释有点牵强。”  
+ 对老板说了是在研究体感游戏喵，虽然这解释有点牵强。”  
 “帮大忙了。”  
 “别在意！为了将世界四精灵从 *Byakhee* 手中救出来，菲莉丝无论如何都会出手相助的！”  
 “是，是吗……  
-&emsp;&emsp; 从以前开始——不，以现在来说是未来吗——我就觉得，  
-&emsp;&emsp; 留未姐说的话有时候非常难懂啊……究竟是什么语言？”  
+ 从以前开始——不，以现在来说是未来吗——我就觉得，  
+ 留未姐说的话有时候非常难懂啊……究竟是什么语言？”  
 “不要思考，用心感受喵！”  
 “不不不……”  
 “呜~冷死了喵。菲莉丝还是回家吧喵。”  
@@ -119,8 +119,8 @@
 “喵？那么顺便在我家吃了饭再走好啦~”  
 “我并不是因为这个才这么说来着。”  
 “反正平时也没怎么好好吃的吧？
-&emsp;&emsp; 看到铃喵这种禁欲的样子，菲莉丝总觉得一定要做些什么喵。  
-&emsp;&emsp; 保护欲？母性？总之，一直有这种冲动喵！”  
+ 看到铃喵这种禁欲的样子，菲莉丝总觉得一定要做些什么喵。  
+ 保护欲？母性？总之，一直有这种冲动喵！”  
 “我没问题的——”  
 
 “诶……？”  
@@ -147,8 +147,8 @@
 “有什么东西掉在楼梯上吗？”  
 “躺着一个包包。”  
 “刚好是在死角的位置，应该是故意丢在那里的。  
-&emsp;&emsp; 而且，在我通过那里的时候，就发动了引擎……  
-&emsp;&emsp; 完美地上钩了。”  
+ 而且，在我通过那里的时候，就发动了引擎……  
+ 完美地上钩了。”  
 “就是说是陷阱喵？”  
 “能够及时做出那些事情，一定经受过特殊的训练。不然没可能的。”  
 铃羽盯着摩托车消失的方向推测着。  
@@ -161,7 +161,7 @@
 “现在的冈伦叔叔要是知道了，可能会因为危险所以想要毁掉时间机器，是吧？”  
 “虽然是这样喵……”  
 “我绝对会守护好时间机器的！因为必须带着冈伦叔叔走向命运石之门的入口。  
-&emsp;&emsp; 因为那是与未来的父亲，以及所有把我送到这里来的人们的约定……  
+ 因为那是与未来的父亲，以及所有把我送到这里来的人们的约定……  
 “铃喵……我知道了。相对的，只有桶子喵必须全部告诉他。”  
 “*Okey-dokey……*”  
 
