--- a/steins_gate_0/docs/0018.md
+++ b/steins_gate_0/docs/0018.md
@@ -29,8 +29,8 @@
 “冈伦总是看起来很痛苦的样子。”  
 “……是吗？”  
 “是的哦。看着那样的冈伦，真由喜也很痛苦的样子……  
-&emsp;&emsp; 我也是，看到冈伦和真由喜就会变得要哭出来一样……  
-&emsp;&emsp; 啊，我在说什么啊……”  
+ 我也是，看到冈伦和真由喜就会变得要哭出来一样……  
+ 啊，我在说什么啊……”  
 短发少女属于外向开朗的类型，对我的称呼方式应该是照搬了真由理的。她说话的方式非常直球，身边的少女小声叫了她的名字想提醒她委婉些，她也依旧一口气地说了出来。看来这个叫作吹雪的女孩子非常重视真由理啊。明白了这一点，我的情绪变得温和起来。  
 “那个……冈伦喜欢的人，是谁啊？”  
 “……！？”  
