--- a/steins_gate_0/docs/0021.md
+++ b/steins_gate_0/docs/0021.md
@@ -39,7 +39,7 @@
 “真由喜去拿湿毛巾咯~”  
 “桥田君，铃羽小姐的换洗衣服呢？”  
 “啊，这边，都在里头呢。  
-&emsp;&emsp; ——我当然没有在里面哈啊哈啊、闻来闻去的。”  
+ ——我当然没有在里面哈啊哈啊、闻来闻去的。”  
 “你再说废话，小心我把病毒传染给你，哥！”  
 铃羽闭着眼睛，表达着不满。  
 “那我随便给她换件衣服行吗？”  
@@ -103,13 +103,13 @@
 “不好……”  
 “果然是积劳呐。我从来没看过你休息。”  
 “我自己也感到很丢人啊……  
-&emsp;&emsp; 我……或许不应该待在这里……”  
+ 我……或许不应该待在这里……”  
 “哎？”  
 “我太放纵自己了。爸爸你在这里，真由姐也在，留未姐也在……不知不觉妈妈也来了……  
-&emsp;&emsp; 为此，我经常差点忘了任务。  
-&emsp;&emsp; 我甚至有种错觉，以为这么幸福的日子会一直持续下去……  
-&emsp;&emsp; 还想，战争什么的根本不可能发生……  
-&emsp;&emsp; 甚至憧憬着……像普通的女生一样生活……”  
+ 为此，我经常差点忘了任务。  
+ 我甚至有种错觉，以为这么幸福的日子会一直持续下去……  
+ 还想，战争什么的根本不可能发生……  
+ 甚至憧憬着……像普通的女生一样生活……”  
 “这有什么不对？”  
 桶子直视着铃羽的双眼如此反问道。他的表情少见地严肃，那是父亲值得依赖的表情，铃羽再清楚不过了。  
 “你离开了这里，打算去哪？”  
@@ -120,8 +120,8 @@
 “……。爸爸……”  
 铃羽差点就热泪盈眶了。她攥住毛毯，拼命忍耐。随后——  
 “哎呀，一不小心进入认真回复模式了。  
-&emsp;&emsp; 不管咋说，我跟漂亮妹子一起很开心，偷摸地这闻闻那闻闻也是一大乐趣。  
-&emsp;&emsp; 尤其是感冒出汗的妹子特别对我的胃口……”  
+ 不管咋说，我跟漂亮妹子一起很开心，偷摸地这闻闻那闻闻也是一大乐趣。  
+ 尤其是感冒出汗的妹子特别对我的胃口……”  
 “唔……求你别说了……”  
 “要是你讨厌被我哈嘶哈嘶，就早点把感冒治好。”  
 “我知道了……”  
