--- a/steins_gate_0/docs/0022.md
+++ b/steins_gate_0/docs/0022.md
@@ -137,13 +137,13 @@
 “歌？”  
 “你在淋浴间里，那个……”  
 “诶、诶？难道我在唱歌吗？呜啊，好难为情。  
-&emsp;&emsp; 明明不擅长却喜欢唱歌，一不小心就哼出来了呢……”  
+ 明明不擅长却喜欢唱歌，一不小心就哼出来了呢……”  
 “没什么，擅长不擅长什么的不用在意的。  
-&emsp;&emsp; 是什么歌啊？很熟悉却想不起来了。”  
+ 是什么歌啊？很熟悉却想不起来了。”  
 “啊哈哈，我也是呢……”  
 “诶？”  
 “应该说只记得比较印象深刻的地方了吧。可能是小时候教育节目的歌什么的吧……  
-&emsp;&emsp; 啊哈……对不起没帮上忙。铃羽是什么时候听过的那首歌？”  
+ 啊哈……对不起没帮上忙。铃羽是什么时候听过的那首歌？”  
 “我也是小时候呢。那个，妈妈经常唱呢……”  
 “毕竟是那样温柔的人呢，铃羽小姐的妈妈。”  
 “是啊。”  
@@ -165,7 +165,7 @@
 “吵架了，离家出走了？”  
 “并不是……”  
 “现在想来，是有些奇怪呢……  
-&emsp;&emsp; 作为妈妈的话，却只给桥田君带了换洗衣服和慰问品，铃羽什么都……”  
+ 作为妈妈的话，却只给桥田君带了换洗衣服和慰问品，铃羽什么都……”  
 “给爸——哥哥带了换洗衣服，慰问品？”  
 “是的……”  
 铃羽全速思考着，于是终于找到了答案。  
