--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -14,7 +14,7 @@
 “嗯，在老位置那里。”  
 看向店内的一角，深处窗边的位置，逆光中巨大的身影稳稳地坐着。  
 “还有，我今天是和熟人一起来的。她第一次来女仆咖啡店。  
-&emsp;&emsp; 我和桶子说完话前，你可以陪陪她吗？”  
+ 我和桶子说完话前，你可以陪陪她吗？”  
 “喵喵？熟人？是哪位呢喵？”  
 “喂，比屋定小姐。这边。”  
 我把不知为何没有进店，在店门口惴惴不安的比屋定叫了进来。  
@@ -39,11 +39,11 @@
 “比屋定真帆哟。”  
 “比屋定……这样来说，冲绳那边的大小姐喵？”  
 “啊啦，居然知道？老是被别人问来问去，经常搞错什么的。  
-&emsp;&emsp; 你居然连冲绳那边的名字都知道。”  
+ 你居然连冲绳那边的名字都知道。”  
 “当然喵！菲莉丝可是在三世以前的前世，琉球王国那边南波照间的守护精灵喵！”  
 “啊？”  
 “对，那时候，我们精灵的声音通过祝女向人们传达着，将王国向正确的形态引导着。  
-&emsp;&emsp; 然而，暴乱的海神们进攻到了南波照间，最终我们还是……呜呜呜……”  
+ 然而，暴乱的海神们进攻到了南波照间，最终我们还是……呜呜呜……”  
 “那，那个，不好意思，冈伦……这个人到底在说什么？”  
 “啊——怎么说呢……只有在秋叶原使用的特殊语言……类似的东西吧……”  
 “是……这样吗？”  
@@ -65,8 +65,8 @@
 “真是看错你了冈伦。现充爆炸吧！”  
 “别和菲莉丝说一样的话啊……搞错了啦。”  
 “哪里搞错了？居然和那种合法萝莉一起……  
-&emsp;&emsp; 而且啊，明明那么可爱却又有种一点都不优雅的遗憾感让人欲罢不能啊！  
-&emsp;&emsp; 区区冈伦竟敢如此嚣张。唔呼！”  
+ 而且啊，明明那么可爱却又有种一点都不优雅的遗憾感让人欲罢不能啊！  
+ 区区冈伦竟敢如此嚣张。唔呼！”  
 “那种话千万别对本人说，生气了很恐怖的。”  
 看向比屋定那边，正一副被菲莉丝的中二系谈话弄得云里雾里的样子，和菜单对峙着。  
 “以前电话里不是说过嘛。被袭击那时候在一起的，雷斯吉宁教授的助手——”  
@@ -102,7 +102,7 @@
 “啊，有些内情……”  
 像是牙齿里面被塞了什么东西一样的说法。  
 “冈伦你……是真由喜的青梅竹马吧？  
-&emsp;&emsp; 在真由喜的朋友或者熟人当中，名字叫‘篝’的孩子，你知道吗？”  
+ 在真由喜的朋友或者熟人当中，名字叫‘篝’的孩子，你知道吗？”  
 “篝？”  
 完全没有听过的名字。
 当然，真由理的社交关系什么的我也不是全部都知道……  
@@ -119,14 +119,14 @@
 桶子无意识地埋头敲着我们这边的桌子，像是在思考着该用什么顺序说明比较好的样子。  
 “其实不是我……是铃羽在找。”  
 “铃羽？为什么她要找真由理认识的——  
-&emsp;&emsp; 不，等下，和铃羽联系起来的话也就是说……”  
+ 不，等下，和铃羽联系起来的话也就是说……”  
 也就是说，与未来的真由理有关系吗。所以不能对真由理说出来？  
 “嘛，就是这样。那孩子的全名，好像是叫‘椎名篝’来着。”  
 “椎名……”  
 “嗯。”  
 “真由理的亲戚还是什么？”  
 “不是那样……不，也不能说完全不是那样……  
-&emsp;&emsp; 听说是真由喜的‘女儿’啊。”  
+ 听说是真由喜的‘女儿’啊。”  
 “啊啊……原来如此，nüer呢……”  
 桶子用很正常的语气说了出来，让我一下子没反应过来。  
 nüer么……nüer是什么词来着？  
@@ -142,15 +142,15 @@ nüer……nǚér……女儿？
 “好像是跟着铃羽一起，从2036年逃过来的样子。”  
 “什么？”  
 “好像本来是，为了任务去了1998年的秋叶原，然后在那里失散了的样子。  
-&emsp;&emsp; 铃羽虽然也拼命地去找了，但是结果还是没有找到……”  
+ 铃羽虽然也拼命地去找了，但是结果还是没有找到……”  
 “就是说，被抛弃在1998年了么？”  
 “寻找的途中，时间机器好像是要被发现了。然后实在没办法只好把篝留在那里然后跳跃了。  
-&emsp;&emsp; 在那之后，以数月为单位又进行了几次小范围的移动。  
-&emsp;&emsp; 用尽了各种手段还是没有办法。到2000年的时候，燃料快要耗尽了……”  
+ 在那之后，以数月为单位又进行了几次小范围的移动。  
+ 用尽了各种手段还是没有办法。到2000年的时候，燃料快要耗尽了……”  
 “就是说，为了完成本来的任务，于是一口气跳跃到了2010年，这么回事吗？”  
 桶子点了点头。  
 “但是，铃羽虽然到了‘现在’，还是没有放弃一直在找的样子。  
-&emsp;&emsp; 所以说，能不能装作随便的样子去问问真由喜？”  
+ 所以说，能不能装作随便的样子去问问真由喜？”  
 “我去问？”  
 “大约在十年前，有没有遇到过和自己差不多大岁数的孩子之类的……”  
 “啊啊，知道了。我去问问看。”  
@@ -265,7 +265,7 @@ My Fork？
 
 “抱歉，能给点时间吗？让我一下子我也想不出来。”  
 “嗯，了解。无论想到点什么都可以。  
-&emsp;&emsp; 而且也不是强制性的，想出来的要是不想说的话也没关系。”  
+ 而且也不是强制性的，想出来的要是不想说的话也没关系。”  
 “啊啊……”  
 我叹了口气，把已经冷掉的咖啡一饮而尽。  
 
