--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -56,8 +56,8 @@
 “真由理酱，你怎么看？”  
 先发言的是由季。  
 “两个人都是好材料啊~真由喜的妄想已经停不住了！  
-&emsp;&emsp; 连同绹酱的份在内，多准备些小号的就好了呢~  
-&emsp;&emsp; 这是真由喜一生的失误啊！”  
+ 连同绹酱的份在内，多准备些小号的就好了呢~  
+ 这是真由喜一生的失误啊！”  
 “小小圣诞老人组合……啊啊~好想看啊~”  
 “是啊！”  
 被真由理盯上了啊……看来比屋定是逃不掉了，毕竟连那么害羞的琉华子都被缠得投降了。两人的密谋仍在继续。  
@@ -70,7 +70,7 @@
 “这个，真由理？不要觉得每个人都有cosplay的兴趣比较好哦。”  
 “啊，嗯，是的呢，勉强别人是不好的呢~”  
 “不过最近，便利店一类的地方，店员们也都穿成圣诞老人了哦。  
-&emsp;&emsp; CM和圣诞节，性质完全不同呢。”  
+ CM和圣诞节，性质完全不同呢。”  
 说这些结果还是想让比屋定他们穿圣诞装吧……  
 “所以说~真帆小姐！不介意的话把真由喜的圣诞装借给你吧？”  
 真由理一副天真无邪的样子向比屋定发动突击，遭到了全力拒绝。倒是雷斯吉宁教授很有兴致地自己找了个纸质三角帽戴在头上。  
@@ -123,7 +123,7 @@
 桶子：“唔……嗯。”  
 铃羽：“这样啊，难怪今天表现的有点奇怪。”  
 真由理：“抱歉，铃小姐。提出计划的是真由喜的哟。  
-&emsp;&emsp; 所以不要生由季和桶子君的气，要生就生真由喜的气吧！”  
+ 所以不要生由季和桶子君的气，要生就生真由喜的气吧！”  
 铃羽：“真由姐姐真是的，我平常有一直在生气吗？”  
 铃羽再次环视室内。  
 铃羽：“诶~好厉害啊，真不敢相信这是平时的那个LAB呢。”  
@@ -132,7 +132,7 @@
 铃羽有些不知所措地笑着，就这么徐徐后退，打算出门。  
 真由理：“要，要去哪儿？”  
 铃羽：“诶？去哪……真由姐姐你们要开派对吧？打扰你们就不好了。  
-&emsp;&emsp; 哥哥也真是的，一点也不机灵，这种场合我在也没什么用不是吗？”  
+ 哥哥也真是的，一点也不机灵，这种场合我在也没什么用不是吗？”  
 菲莉丝：“没那种事喵！一起来派对喵！”  
 铃羽：“诶？但是……这种事我也没有经验……”  
 真由理：“只是开开心心吃东西聊天而已。所以，一起来吧？”  
@@ -152,7 +152,7 @@
 “给，铃羽”  
 我给有些不适应这个气氛的铃羽递过去一杯无酒精的香槟。  
 “啊，啊啊，嗯……  
-&emsp;&emsp; 果然我还是适应不来啊，这种场面。”  
+ 果然我还是适应不来啊，这种场面。”  
 “为什么？”  
 “因为……我不是为了玩才到这个时代来的啊……”  
 来到这个时代的目的……吗？  
@@ -169,7 +169,7 @@
 “嗯……”  
 
 “大家喵~喝的东西都准备好了喵？  
-&emsp;&emsp; 那么，先请策划这次派对的真由喜来说点什么喵~”  
+ 那么，先请策划这次派对的真由喜来说点什么喵~”  
 “诶，诶~？”  
 突然被甩到话题的真由理，慌慌张张的站了起来。过程中碰到了坐在旁边的琉华子，两人手中杯子里的东西差点溅出来了。  
 “哇，哇啊？琉华君，抱歉呢！”  
@@ -177,7 +177,7 @@
 “呼嗯……”  
 真由理就这样，呼——哈的深呼吸着调整气息。  
 “嗯——今天是平安夜！  
-&emsp;&emsp; 现在到处是现充，今年真由喜跟大家也开起了派对，成为现充吧！”  
+ 现在到处是现充，今年真由喜跟大家也开起了派对，成为现充吧！”  
 “啊，不是……我想那个现充的意思弄错了啊，真由喜……”  
 吹雪看了看远方，嘴里嘟哝着。而枫见机补充道：  
 “吹雪酱，从好几位后辈酱那里接到了圣诞节约会的邀请呢！而且是很热烈的那种！”  
@@ -189,9 +189,9 @@
 “好不容易才来一次喵，顺便就加上自我介绍吧喵~”  
 被指名的比屋定，一副苦涩的样子站了起来，考虑了一会儿后开了口。  
 “今天能被大家邀请到这里，十分感谢。  
-&emsp;&emsp; 我跟雷斯吉宁教授一直住在美国那边，  
-&emsp;&emsp; 像现在这样在日本过圣诞节还是第一次。  
-&emsp;&emsp; 能这样跟一群朋友一起热热闹闹的过圣诞也是，我觉得很棒——”  
+ 我跟雷斯吉宁教授一直住在美国那边，  
+ 像现在这样在日本过圣诞节还是第一次。  
+ 能这样跟一群朋友一起热热闹闹的过圣诞也是，我觉得很棒——”  
 “来点有趣的东西喵！”  
 “……啊？”  
 “有趣的东西喵！”  
