--- a/steins_gate_0/docs/0027.md
+++ b/steins_gate_0/docs/0027.md
@@ -26,7 +26,7 @@
 “桥田先生，真的是个Hentai先生的呢。”  
 除了吹雪棒读一般的吐槽，其他人自动过滤了桶子的变态发言。  
 “于是，被真由喜稍微搞错了的这些一次性筷子，就决定拿来抽签用了喵！  
-&emsp;&emsp; 抽中哪个编号，就可以拿到对应的礼物喵！”  
+ 抽中哪个编号，就可以拿到对应的礼物喵！”  
 菲莉丝将筷子弄混之后，分别走到每个人那里让大家抽签。  
 真由理的作战，菲莉丝也参与其中。事实上，真由理跟菲莉丝之间明显在用眼神和小动作在互相传递着信息。在大家还被蒙在鼓里地进行着抽签的时候，由季和桶子的礼物已经被单独拿了出来进行了标签交换的工作。搞得那么明显，我都担心会不会被由季发现。  
 “大家都抽好签了喵？那么就开始分发礼物了喵~要大家都拿到了礼物才可以打开喵！”  
@@ -44,7 +44,7 @@
 “这，难道是……”  
 正在我怀疑的时候，准备这份礼物的元凶——吹雪凑了过来：  
 “嗯？啊啊，到冈伦那里去了啊！  
-&emsp;&emsp; 就这样当作礼物送给真由喜也可以哟~”  
+ 就这样当作礼物送给真由喜也可以哟~”  
 “怎么办得到那种事！”  
 “为了冈伦的话，她肯定会很开心的穿起来的！”  
 “为什么会变成这种话题……”  
