--- a/steins_gate_0/docs/0028.md
+++ b/steins_gate_0/docs/0028.md
@@ -36,7 +36,7 @@
 “请振作一点！为了保护你，已经牺牲了多少人你不知道吗？”  
 “保护……我？为什么？”  
 “理由没有告诉我们。但是，我们接到的命令是，  
-&emsp;&emsp; 即使拼上性命也要保护你。说这关乎到这个国家的未来。”  
+ 即使拼上性命也要保护你。说这关乎到这个国家的未来。”  
 上空又飞过一架直升机，探照灯一扫而过。好在河岸的阴影藏住了我们。  
 “这边！”  
 不知名的青年队员把我拉向墙上流着污水的洞。仔细看发现那是下水道的出口，大小刚够一个人弯腰通过。我们逆着淹过膝盖的流水在黑暗中前进，不多久嗅觉已经麻痹，也不觉得下水道臭了。途中出现多次岔道，带路的自卫队员似乎已经掌握了路线，毫不犹豫地前进着。这么走了一阵，又再次从下水道回到了河床。和最初的一样，这个河也是干的。不知道是回到了刚才那条河，还是到了另外一条，队员也没有告诉我。不管怎样，总算从那个充满恶臭的黑暗空间中脱出，我试图大吸一口新鲜空气。但是，刚吸进一点，就闻到了比下水道更糟的异臭，不由得退了两步。因为眼前的，是一副过于凄惨的光景。大量的尸体代替了河水堆叠在这个曾是河底的地方。因为大多数已经炭化，连数量也无以数计。远处，篝火一样的火焰在燃烧着，在大雨中猛烈地燃烧着。正在燃烧的，是堆积成山的曾经作为人的肉块。  
@@ -55,7 +55,7 @@
 
 两个队员最终带我来到了一条塌了一半的地铁隧道。因为停电没有灯光，只有三台迷彩涂装的装甲车打着灯在轨道上等着我们。四轮驱动越野车型，装甲看上去很坚固，但没有发现武器。  
 “从这里穿过地铁路线可以逃到埼玉。  
-&emsp;&emsp; 据说入间基地还是安全的，到了那里应该就能离开关东了。”  
+ 据说入间基地还是安全的，到了那里应该就能离开关东了。”  
 “离开……关东？”  
 “有话到那边再问。总之请快点。”  
 现在也还能听到外面的枪声，满肚子疑问的我被强行塞进了一辆车的后座里。  
