--- a/steins_gate_0/docs/0029.md
+++ b/steins_gate_0/docs/0029.md
@@ -7,8 +7,8 @@
 
 冬天的冲绳，天上是厚厚的积云。说来我在这一个月没有看过云以外的天空。想着这种悠闲的事，一辆改装厢型车到港口来接我了。车里除了司机外，副驾驶席上还有一名中年男性，很矮，说不定只有一米五左右。然而他全身都散发着军人的气息，透过衣服也能隐约看到那健实的肌肉。  
 “是冈部伦太郎君吧？我是防卫厅属下中央情报安全队的下山。  
-&emsp;&emsp; 现在我们先去一趟机场，之后再到嘉手纳的冲绳防卫局。  
-&emsp;&emsp; 长路劳累，但请你再忍一会儿。”  
+ 现在我们先去一趟机场，之后再到嘉手纳的冲绳防卫局。  
+ 长路劳累，但请你再忍一会儿。”  
 “是……”  
 听说东京已经沦陷了。中央省厅中的防卫省，也为了和在日美军保持密切的协力体制，把冲绳防卫局当作临时厅舍。下山向我说明了这些。也就是说，我们现在正在前往日本防卫的中枢。到了那里，我就能明白，受到VIP待遇、被自卫队员用生命保护的原因了吧。  
 
@@ -25,8 +25,8 @@
 “刚才我们还在一起。”  
 “在一起？”  
 “是啊。有真由喜，留未穗，琉华君，枫酱。  
-&emsp;&emsp; 今早到机场后，说是会转到防卫局保护我们，就等着了。  
-&emsp;&emsp; 刚才突然让我和吹雪酱走。”  
+ 今早到机场后，说是会转到防卫局保护我们，就等着了。  
+ 刚才突然让我和吹雪酱走。”  
 “然后上了车，就发现冈伦也在。”  
 “总之，大家都没事就好。”  
 桶子和铃羽的名字没有出现，那两人的事虽然也想问——  
@@ -46,8 +46,8 @@
 “没……明明有这么多的店铺，但是到处都是一片黑。”  
 众多的特许餐厅和大型超市，面向观光客的食堂，汽车租赁店等像排队一样被压缩摆放在一起。但是，无论哪家店都关着灯，一片寂静。路灯也几乎没有，行驶的车子都是日本和美国的军用车辆，完全没有行人的影子。  
 “现在实行了灯火管制和下午五点宵禁。  
-&emsp;&emsp; 虽然冲绳目前还算安全，但是战争时期，像以前那样是不行了。  
-&emsp;&emsp; 真想早点结束战争回到以前的生活啊。”  
+ 虽然冲绳目前还算安全，但是战争时期，像以前那样是不行了。  
+ 真想早点结束战争回到以前的生活啊。”  
 战争时期……啊。下山回答了我的疑问，然后继续向我搭话：  
 “呐，冈部君，你熟悉的那个冲绳，晚上应该是灯火通明充满欢乐的地方吧？”  
 “……啊，不是很了解。我是第一次来冲绳。”  
@@ -81,11 +81,11 @@
 “与其说是研究……怎么说呢，不过是一点小发明小创意……”  
 “发明？”  
 “比如在竹蜻蜓下面装一个CCD摄像头看看能不能在空中拍摄……  
-&emsp;&emsp; 尝试用吸尘器的排气代替吹风机之类的……”  
+ 尝试用吸尘器的排气代替吹风机之类的……”  
 “呵，挺有趣的嘛。  
-&emsp;&emsp; 那么，你们不是因为做出了什么不得了的东西，  
-&emsp;&emsp; 不想被我们知道，为了躲避我们而逃走——  
-&emsp;&emsp; 是这样的吧？”  
+ 那么，你们不是因为做出了什么不得了的东西，  
+ 不想被我们知道，为了躲避我们而逃走——  
+ 是这样的吧？”  
 “逃走？”  
 糟了，一不留神就反问了，走错一步。但是，桶子和铃羽，在这种混乱的状况下，为什么要避开自卫队，不知去向呢？自卫队在这一个月中，可是拼了命地保护着我，倒不如说他们才是我们应该寻求保护的对象不是吗？这个局面真的是越来越混乱了。  
 “不知道的话就算了，桥田君他们的事情就先到这吧。”  
@@ -99,11 +99,11 @@
 “关于上周中濑小姐接受的健康检查……”  
 “是……是检查出了什么问题了吗？”  
 “不，你在东京受的伤已经基本痊愈了，身体状态是没有问题的。  
-&emsp;&emsp; 只是，精神压力好像很大啊。嘛，这也难怪。  
-&emsp;&emsp; 毕竟经历过那么惨烈的空袭，可以说现在几乎所有平民都有PTSD。  
-&emsp;&emsp; 但是，你的情况，好像和别人有点不一样。  
-&emsp;&emsp; 比如说做一些非常真实的梦，严重的时候，白天也会做梦……  
-&emsp;&emsp; 听说连现实和梦境也可能会区别不出来。”  
+ 只是，精神压力好像很大啊。嘛，这也难怪。  
+ 毕竟经历过那么惨烈的空袭，可以说现在几乎所有平民都有PTSD。  
+ 但是，你的情况，好像和别人有点不一样。  
+ 比如说做一些非常真实的梦，严重的时候，白天也会做梦……  
+ 听说连现实和梦境也可能会区别不出来。”  
 “所以说，这不就是那个PTSD吗？”  
 代替害怕得说不出话的吹雪，由季突然严肃地给出回应。由季这样的态度是很少见的，至少我是第一次看见。很明显，由季不仅不信任下山，反而抱有敌意。  
 “没，说起来那真是奇怪的事啊……”  
@@ -111,7 +111,7 @@
 “有和中濑十分相似的做白日梦的人。而且，不是一两个。”  
 “诶？”  
 “当然在程度上也有差异，但光是国内就已经发现了十几名左右。  
-&emsp;&emsp; 好像在海外也有。嘛，虽然只有西方国家的情报而已……”  
+ 好像在海外也有。嘛，虽然只有西方国家的情报而已……”  
 “那样的事，仅仅是碰巧而已吧？”  
 吹雪表现出的恐惧非同小可，因此，我忍不住开口了。  
 “你知道普金吧？”  
@@ -122,15 +122,15 @@
 什么？  
 “对不起……当时我应该是说梦话的，而且我的学习什么的完全不行……”  
 “不，不是那样的。做白日梦的人都有一个特征，他们的回答都是这样的——普金总统。  
-&emsp;&emsp; 而且戈里巴乔夫和列利钦这两位，也被称呼为总统。  
-&emsp;&emsp; 为此，研究员在暗地里称这个现象为‘总统病’……真是没品的名字。”  
+ 而且戈里巴乔夫和列利钦这两位，也被称呼为总统。  
+ 为此，研究员在暗地里称这个现象为‘总统病’……真是没品的名字。”  
 难，难道说……这些症状是，*Reading·Steiner* 吗……看来除我之外，其他人也拥有的可能性很高，能力的程度上可能有所差别。虽然无法确定，但是α世界线的菲莉丝的言行，隐隐约约让我感觉到，她也拥有那个能力。所以，下山所说的“做白日梦的人”，很有可能就是拥有 *Reading·Steiner* 的人。如果那些人和我一样，意识到了一个月前的世界线变动的话……如果吹雪也和我一样，有着另一条世界线的记忆的话……回答普金是总统，也并非不可思议。  
 “戈里巴乔夫？列利钦？”  
 “由季小姐不知道吗？历史课上应该教过吧。”  
 “我……高中时代一直是理科的……”  
 “我觉得这应该是常识啊……现在的年轻人都不知道吗？  
-&emsp;&emsp; 没想到最近的学生都这么不用功啊。  
-&emsp;&emsp; 冈部君你多少知道的吧，戈里巴乔夫和列利钦这两位？”  
+ 没想到最近的学生都这么不用功啊。  
+ 冈部君你多少知道的吧，戈里巴乔夫和列利钦这两位？”  
 “诶……嗯。嘛……”  
 “柏林墙的倒塌，还有经济改革。”  
 “是的，这些都在教科书里——”  
@@ -140,22 +140,22 @@
 “嗯？……你也是这样的吗？而且，是想故意隐瞒吧？”  
 “……”  
 “果然，和情报一样，你知道什么重要的事情啊。  
-&emsp;&emsp; 呵呵呵，呐，冈部君，希望你能告诉我呢。”  
+ 呵呵呵，呐，冈部君，希望你能告诉我呢。”  
 下山不知为什么，突然带点自嘲地笑了起来。那笑容令人多少感到恶心和讨厌。  
 “戈里巴乔夫？列利钦？你们口中的这些人物，到底是谁啊？
-&emsp;&emsp; 我们这边就不说了，美国所有的情报机关也都不存在这些人的资料。”
+ 我们这边就不说了，美国所有的情报机关也都不存在这些人的资料。”
 不存在？我看向了坐在旁边的由季。从她的表情来看，她并不是不用功，而是真的不知道这些人物。
 “戈里巴乔夫改革什么的，柏林墙倒塌什么的……  
-&emsp;&emsp; 那真的是存在过的事吗？回答我！”  
+ 那真的是存在过的事吗？回答我！”  
 但是，我不能回答。大脑考虑起一个月前的平安夜，世界线突然变动的主要原因。难道说在那一天，俄罗斯使用了时间机器，做了改变过去的实验吗？实验的内容，是阻止20世纪末发生的苏联解体。于是改变了过去所导致的结果，是现在的这条世界线的话……！真是，太愚蠢了……经过仅仅一次的过去改变，由蝴蝶效应把世界带到了这里。这到底会让多少人死去啊……  
 “你和你的朋友，真的能看到别的世界历史吗？  
-&emsp;&emsp; 我原本完全不相信，以为只是脑子奇怪的学者们的鬼话——”  
+ 我原本完全不相信，以为只是脑子奇怪的学者们的鬼话——”  
 下山想继续追问的这个时机，车内响起了手机来电的铃声。  
 “嘁……”  
 下山砸了砸舌，从口袋里取出手机。  
 “这里是下山。……啊啊，现在，正在前往防卫局……  
-&emsp;&emsp; ……什么？这是怎么回事？
-&emsp;&emsp; 可恶，这就是白痴啊……他们是哪国的政治家啊……”  
+ ……什么？这是怎么回事？
+ 可恶，这就是白痴啊……他们是哪国的政治家啊……”  
 下山向对方发泄心中的不满，接着毫不掩饰怒火地用力按下按键，结束了通话。  
 “目的地变更。去嘉手纳基地，二号门。”  
 下山一副不耐烦的语气对驾驶员下达指示。目的地变更？刚才的通话对象是谁？在我困惑的时候，下山主动拨通了和某处的通话。  
@@ -163,14 +163,14 @@
 只说了这些便结束了通话。由季小心地提出询问：
 “请问……这是怎么回事？”  
 “情况有变，接下来要请冈部君去美军基地一趟。
-&emsp;&emsp; 说不定，接下来会直接坐军机去美国，然后愉快的畅游美利坚啊。”  
+ 说不定，接下来会直接坐军机去美国，然后愉快的畅游美利坚啊。”  
 “什！？”  
 美国！？
 “姑且会给你争取一下头等舱，不过别太期待。  
-&emsp;&emsp; 毕竟我们说的话，在那些家伙耳朵里不过是宠物狗的吠声而已。”  
+ 毕竟我们说的话，在那些家伙耳朵里不过是宠物狗的吠声而已。”  
 “为什么要去美国！？”  
 “不知道是美国的CIA（中央情报局）还是NSC（国家安全委员会），  
-&emsp;&emsp; 对方要求即刻将你交过去。”  
+ 对方要求即刻将你交过去。”  
 “所以说为什么！？”  
 “这种事，你自己当面问他们去。”  
 接着便转向前方，不再说话。  
@@ -181,7 +181,7 @@
 
 车停在了美国空军基地的大门前，有几名美国士兵似乎是在等着我们到达。  
 “把你交给美方的话，恐怕我们这边再也别想获得一丝有效的情报了吧。  
-&emsp;&emsp; 所以，这是最后的机会。”  
+ 所以，这是最后的机会。”  
 这时，下山从副驾驶席回过头，径直盯着我。那眼神，仿佛被逼上绝路般，近乎恳求。  
 “——请告诉我，我们接下来，究竟该怎么做才好？”  
 “呃……”  
@@ -190,10 +190,10 @@
 “我……不知道……”  
 “冈部君！”  
 “我真的不知道！  
-&emsp;&emsp; 你真的认为，凭我一己之力能对战局产生什么影响吗？  
-&emsp;&emsp; 戈里巴乔夫和列利钦会成为俄罗斯总统什么的……  
-&emsp;&emsp; 东西冷战会猝然终结什么的……  
-&emsp;&emsp; 这些历史知识就算知道了……也根本无济于事。”  
+ 你真的认为，凭我一己之力能对战局产生什么影响吗？  
+ 戈里巴乔夫和列利钦会成为俄罗斯总统什么的……  
+ 东西冷战会猝然终结什么的……  
+ 这些历史知识就算知道了……也根本无济于事。”  
 “……”  
 从后方，听到了其它车辆的引擎声逐渐接近。下山叹了口气，把头转回前方，打开了副驾席的门。  
 “下车。”  
@@ -229,7 +229,7 @@
 “喵哈哈，不用害羞喵~”  
 恶作剧一般地笑着，菲莉丝——不，秋叶留未穗一边装作要吻我，一边在我耳边轻语：  
 “要小心。不管是防卫省的人还是美军的人都不可信。  
-&emsp;&emsp; 大人总是谎话连篇。大家都不说真话。”  
+ 大人总是谎话连篇。大家都不说真话。”  
 是了，菲莉丝有一种特技，柴郡猫的微笑（*Cheshire·Brake*），能洞悉他人内心深处的天才洞察力。  
 “嗯……已经切身体会到了。”  
 刚刚才被巧妙地蒙骗过。菲莉丝脸上浮现出些许惊讶，放开了我。  
@@ -239,12 +239,12 @@
 *“Welcome!”*  
 从漆黑的豪华轿车里，走下一位像篮球选手一样高大的美国军人。  
 “欢迎大家来到这里！我是哈蒙德。欢迎各位。  
-&emsp;&emsp; 那么，*Mr. Okabe* 以外的各位，请乘坐巴士。”  
+ 那么，*Mr. Okabe* 以外的各位，请乘坐巴士。”  
 这个男人操着一口不正宗却流利的日语。虽然满脸笑容，但却是一副说一不二的口气。其他的美军士兵则从刚才开始，就端着步枪一脸严肃的警戒着周围。下山一行人则只是在远处守着，默默地低着头，没有插手的意思。  
 “诶，冈伦以外是……什么意思……？”  
 “不用害怕。我们只是稍微向各位问一些话。  
-&emsp;&emsp; 之后，马上会将各位送去冲绳防卫局！  
-&emsp;&emsp; 来吧，请。”  
+ 之后，马上会将各位送去冲绳防卫局！  
+ 来吧，请。”  
 “冈伦……！”  
 “没事的。放心。”  
 “但是……”  
