--- a/steins_gate_0/docs/0030.md
+++ b/steins_gate_0/docs/0030.md
@@ -18,11 +18,11 @@
 “戈里巴乔夫，知道吗？”  
 “各尼八樵夫？好像在哪里听过……”  
 “经济改革对吧？俄罗斯好可怕……  
-&emsp;&emsp; 啊，话说戈里巴什么的好像是苏联时期的吧？  
-&emsp;&emsp; 果然提到俄罗斯就要说普金老大！  
-&emsp;&emsp; 被他正面盯着的话，我可是有被吓尿的自信。”  
+ 啊，话说戈里巴什么的好像是苏联时期的吧？  
+ 果然提到俄罗斯就要说普金老大！  
+ 被他正面盯着的话，我可是有被吓尿的自信。”  
 “普金先生的话我知道哟~是俄罗斯的总统对吧？  
-&emsp;&emsp; 其实他很喜欢狗狗的哟~在养着秋田犬的，新闻有播的。”  
+ 其实他很喜欢狗狗的哟~在养着秋田犬的，新闻有播的。”  
 “总统……啊，是的，没错，是总统！”  
 “啊……？”（x3）  
 桶子的及时插入以及两人十分自然的对话，让我从心底里松了口气。然后发现真由理、桶子和铃羽全都在用诧异地眼神看着我。被这样看着也是久违的感觉了。我，回来了。从经常和死神擦肩而过的状态中解放了，就是这么一回事。可是——许多疑问又很快涌现而出。究竟为何世界线突然发生变动呢？有必要冷静地思考一下。  
@@ -33,8 +33,8 @@
 
 于是我回到了LAB。圣诞派对装饰的花环还挂在玄关。仅仅过了一个月左右，却让我感觉是许久以前的事情。话说回来，这条世界线的自己在圣诞派对之后都干了些什么，我并没有记忆。  
 “啊，说起来，那些装饰一直都放在那里啊。是时候收拾下了——  
-&emsp;&emsp; 派对的时候，冈伦和吹雪氏不是都昏倒了嘛，  
-&emsp;&emsp; 所以都手忙脚乱的，没有仔细收拾的时间呢。”  
+ 派对的时候，冈伦和吹雪氏不是都昏倒了嘛，  
+ 所以都手忙脚乱的，没有仔细收拾的时间呢。”  
 “我和中濑小姐，昏倒了吗？”  
 世界线变动的那一瞬间，真由理她们，有着我在圣诞派对上昏倒的记忆。那就是说，我现在回到的世界线，与变动之前的世界线一致。如果这真的是俄罗斯干的，我不由得感到颤栗，为他们竟然能如此娴熟地利用时间机器。还有另一件事，不只是我，连吹雪也昏倒了，这让我很在意。  
 在我沉思的时候，桶子和真由理再次向我投来了疑惑的目光。  
@@ -62,12 +62,12 @@
 “也该适可而止了吧!到底什么时候能让我出院！”  
 “都说了，要在接受了必要的检查和治疗之后才行。”  
 “明明没有什么所谓的治疗啊！  
-&emsp;&emsp; 而且本来简单检查一下就行了，为什么用了一个多月？  
-&emsp;&emsp; 耽误我的工作你们要怎么负责？！”  
+ 而且本来简单检查一下就行了，为什么用了一个多月？  
+ 耽误我的工作你们要怎么负责？！”  
 “请您冷静。这个疾病还有很多未知的部分，不充分检查并慎重治疗的话是很危险的。”  
 “骗人！电视上说这并不是太严重的疾病，大可放心的！”  
 “所以说，那是以接受妥善的检查和治疗为前提的。  
-&emsp;&emsp; 刚才护士也报告说你出现了突发性晕眩。”  
+ 刚才护士也报告说你出现了突发性晕眩。”  
 “那只是因为晚饭来的太晚饿着肚子造成的贫血！我健康的很！快让我出院！”  
 女性单方面纠缠着医生，情绪激动地想要拽住医生的衣领。最后数名女护士上前勉强把她制止住，之后一边安抚着一遍把她带到不知道哪里去了。  
 “吓到我了……”  
@@ -94,10 +94,10 @@
 吹雪这样说着，目不转睛地盯着我。被她这样认真看着还是第一次，让我以为自己脸上是不是沾了什么奇怪的东西。  
 “听说你跟我一样都昏倒了，有点担心。感觉怎么样？”  
 “完全没事。为什么不能出院呢？实在搞不懂。  
-&emsp;&emsp; 一天天的除了检查什么事都没有，无聊无聊。  
-&emsp;&emsp; 而且啊，病房里禁止用手机啊！想发短信要到大厅；  
-&emsp;&emsp; 晚上九点就自动熄灯了，深夜动画都看不了。  
-&emsp;&emsp; 真是不敢相信！”  
+ 一天天的除了检查什么事都没有，无聊无聊。  
+ 而且啊，病房里禁止用手机啊！想发短信要到大厅；  
+ 晚上九点就自动熄灯了，深夜动画都看不了。  
+ 真是不敢相信！”  
 吹雪病床四周散落着掌机、杂志、小型DVD播放器……总之用来消磨时间的东西大量堆积着，以及到处乱丢的吃完的零食包装袋。实在看不出来是新闻报道的重病患者。  
 “冈伦的身体不要紧吗？”  
 “啊，刚才真由理也问过了，如你所见没什么问题。”  
@@ -113,7 +113,7 @@
 “吹雪酱，嘘——”  
 吹雪突然大叫，所有人赶紧提醒她注意。这里是医院，病房里还有其他病人，不可以大吵大闹。  
 “可是，大家听我说啊，这位来岛枫小姐，竟然在怀疑，  
-&emsp;&emsp; 我与冈伦是不是瞒着大家在偷偷交往哦？”  
+ 我与冈伦是不是瞒着大家在偷偷交往哦？”  
 “啊！？”  
 差一点连我们都叫出声来，拼命地忍了下来。  
 “在…在说什么啊……”  
@@ -122,15 +122,15 @@
 那是因为有别的目的——但是不能告诉她们。  
 “而且，从刚才开始，吹雪酱和冈伦先生就一直亲密地对视着……”  
 “才没有亲密地对视着呢！  
-&emsp;&emsp; 那个，不是那样的，这个是……”  
+ 那个，不是那样的，这个是……”  
 吹雪困惑得想要抓头发，但是头套一样的仪器让她放弃了。  
 “稍微……我做了一个有点真实的梦。”  
 “真实的梦……？”  
 我心中一惊。说不定，这就是我想要确认的事。  
 “今天傍晚的样子吧，稍微有些迷迷糊糊的。也没有什么事可做，闲得发慌。  
-&emsp;&emsp; 然后，怎么说呢……具体的也记不太清了……  
-&emsp;&emsp; 我和冈伦还有由季，被可怕的人带上了车，带到什么地方去了。  
-&emsp;&emsp; 是这样的梦。”  
+ 然后，怎么说呢……具体的也记不太清了……  
+ 我和冈伦还有由季，被可怕的人带上了车，带到什么地方去了。  
+ 是这样的梦。”  
 “我也有出现吗？” 由季插话问道。  
 “嗯……”  
 哈……一样的。吹雪看到的梦境，和我在那条世界线的经历一样。今天傍晚的话，时间也刚好吻合。我从隔帘的缝隙观察病房内，确认了没有医院的工作人员在。  
@@ -147,7 +147,7 @@
 “那个……”  
 “中濑小姐，你所说的梦，该不会地点是在冲绳吧？”  
 “诶？是的……吧。嗯，我想……大概就是冲绳。  
-&emsp;&emsp; 坐在车上的时候，好像看到了那样的标牌。”  
+ 坐在车上的时候，好像看到了那样的标牌。”  
 “车上的有，我和你，还有由季小姐，另外有司机和矮个子的男性自卫队员。”  
 “嗯。”  
 “男人的名字是，下山。”  
@@ -166,10 +166,10 @@
 “这样的话，除我之外说不定还有其他的，并非病患的人。”  
 “是吗？”  
 “因为很闲，我经常和大家聊天，关于自己梦到的事。  
-&emsp;&emsp; 大家的梦的内容出乎意料地相似，令人吃惊。  
-&emsp;&emsp; 就在刚才，我在这里认识的隔壁病房的小学生也说了，  
-&emsp;&emsp; 明明一次都没有去过，但是他却梦到了冲绳，  
-&emsp;&emsp; 说是因为战争东京陷入火海，被自卫队救了后逃往冲绳……”  
+ 大家的梦的内容出乎意料地相似，令人吃惊。  
+ 就在刚才，我在这里认识的隔壁病房的小学生也说了，  
+ 明明一次都没有去过，但是他却梦到了冲绳，  
+ 说是因为战争东京陷入火海，被自卫队救了后逃往冲绳……”  
 “这，这样啊……”  
 难以置信……如果这一切都是真的话——现在的情况就是，不只是吹雪，其他的患者中也有一些人被误认为是脑炎而导致无谓地长期住院。  
 “告诉医生会不会比较好？”  
