--- a/steins_gate_0/docs/0031.md
+++ b/steins_gate_0/docs/0031.md
@@ -20,7 +20,7 @@
 铃羽冲动地想要反驳，不过说到一半就停下了。  
 “实际上，我最初的时候很震惊。你，和我熟知的铃羽，完全不一样……”  
 “这也是没办法的。世界线不一样的话，  
-&emsp;&emsp; 相对的成长环境，以及由此形成的人格和思考方式也会随之变化。”  
+ 相对的成长环境，以及由此形成的人格和思考方式也会随之变化。”  
 “啊。但是，现在我不这么认为了，铃羽果然还是铃羽。”  
 “……不，我果然还是不一样。我不是冈伦叔叔熟知的阿万音铃羽。”  
 “铃羽……”  
@@ -30,7 +30,7 @@
 什么？为什么做这种事？不，理由不用问也知道。现在的铃羽这样做的理由只有一个。  
 “我在世界线间移动的事，被察觉到了吗？”  
 “圣诞节那晚，叔叔该不会是发动了 *Reading·Steiner* 吧？我一直这么怀疑着。  
-&emsp;&emsp; 不只那一天，今天也是。于是，怀疑转变成了确信。”  
+ 不只那一天，今天也是。于是，怀疑转变成了确信。”  
 我故意没有告诉铃羽世界线发生了变动，因为很显然会像这样，看到铃羽焦虑的申请。  
 “告诉我，这里已经和之前的世界线不一样了吗？”  
 “知道了又怎么样？”  
@@ -54,9 +54,9 @@
 “时间机器的实验终究开始了吗？”  
 我点了点头。  
 “既然如此，情况刻不容缓不是吗？  
-&emsp;&emsp; 那群人继续实验的话，不久就可能会造成无法挽回的局面，  
-&emsp;&emsp; 通向命运石之门的路会被封死也说不定……  
-&emsp;&emsp; 我真是笨蛋。不是苦恼的时候了，说服时间到此为止了……”  
+ 那群人继续实验的话，不久就可能会造成无法挽回的局面，  
+ 通向命运石之门的路会被封死也说不定……  
+ 我真是笨蛋。不是苦恼的时候了，说服时间到此为止了……”  
 “你想怎么做？”  
 “冈部伦太郎，服从我的命令，跟我一起回到7月28日。”  
 “如果我拒绝呢？”  
@@ -73,37 +73,37 @@
 突然间，桶子的声音响了起来。转向声音传来的地方，正好看到了刚刚爬上楼梯打开门的桶子的巨大身体。  
 “爸爸……！？为什么……”  
 “我收到了真由喜和阿万音氏的邮件，说是铃羽把冈伦叫出来了什么的。  
-&emsp;&emsp; 我有种不好的预感，就到处找你们了哦。  
-&emsp;&emsp; 还有，收到了发件人不明的邮件。”  
+ 我有种不好的预感，就到处找你们了哦。  
+ 还有，收到了发件人不明的邮件。”  
 “发件人不明？”  
 “发来了这个地点的地图链接，我猜你们有可能在这里，就优先过来了。  
-&emsp;&emsp; 然后枪声就响起来了，吓死我了……”  
+ 然后枪声就响起来了，吓死我了……”  
 桶子汗流浃背，说话期间，大颗汗珠不断从额头渗出来。看来是匆匆忙忙地跑过来的。  
 “于是，铃羽，那把枪是怎么回事？”  
 “啊，不，铃羽什么都没做——”  
 “如果什么都没做的话，是不会开枪的吧，常考？  
-&emsp;&emsp; 来，铃羽，说点什么吧？”  
+ 来，铃羽，说点什么吧？”  
 “爸爸才是，明明已经知道了……”  
 “什么？”  
 “世界线变动了啊。俄罗斯开始进行时间机器的实验了。”  
 “确定无误？”  
 “所以我这不是正在着急吗？这样下去的话，一切都完了！  
-&emsp;&emsp; 没办法到达命运石之门，也没办法阻止第三次世界大战！  
-&emsp;&emsp; 无数人会死，母亲也会死，什么都阻止不了！”  
+ 没办法到达命运石之门，也没办法阻止第三次世界大战！  
+ 无数人会死，母亲也会死，什么都阻止不了！”  
 “那样很难办呢。但是，尽管如此……  
-&emsp;&emsp; 威胁冈伦，强行带他回到过去，这样就一定会成功吗？”  
+ 威胁冈伦，强行带他回到过去，这样就一定会成功吗？”  
 桶子的表情格外认真，与平常漫不经心的他完全不同。  
 “开始研究时间机器和世界线后，我渐渐理解了，冈伦说的对，  
-&emsp;&emsp; 如果是普通的方法，无论多少次都没办法拯救牧濑氏的性命。”  
+ 如果是普通的方法，无论多少次都没办法拯救牧濑氏的性命。”  
 “爸……连爸爸也……在说什么啊？”  
 “如果世界线的规则、因果律之类的能这么简单地被改变的话，  
-&emsp;&emsp; 冈伦在他所说的α世界线里，不早就拯救真由喜的性命了吗？”  
+ 冈伦在他所说的α世界线里，不早就拯救真由喜的性命了吗？”  
 “那，你说到底该怎么办才好啊！？”  
 桶子用拳头咚地敲了敲自己的胸脯。  
 “该怎么做，我们不是正在研究嘛。”  
 “但……但是……已经没有时间了！”  
 “没问题，包在我身上吧。绝对想办法做给你看！  
-&emsp;&emsp; 偶尔，也希望你能乖乖地听听爸爸的话啊。”  
+ 偶尔，也希望你能乖乖地听听爸爸的话啊。”  
 桶子拿出了平时难以想象的威严的一面，然后，温柔地从铃羽的手上拿走了枪。铃羽没有抵抗。  
 “你看，你忘了比枪更重要的东西。今天这么冷的日子，正应该用这个。”  
 桶子从口袋里拿出了什么，代替了枪放在铃羽的双手中。那是手工编织的手套。圣诞派对那天，从由季那里收到的礼物。我对此记忆犹新。  
