--- a/steins_gate_0/docs/0035.md
+++ b/steins_gate_0/docs/0035.md
@@ -36,7 +36,7 @@
 桶子把地板上堆积的箱子随便一挪，勉强挤出了点空间，然后在那摆了两把折叠椅。  
 “你……和这家店是什么关系？”  
 “嗯……就像是兼职领班一类的吧，我有不少在这种地下店铺的兼职呢。  
-&emsp;&emsp; 所以，有时候也拜托店主把办公室借我当作个人工作室使用。”  
+ 所以，有时候也拜托店主把办公室借我当作个人工作室使用。”  
 “为了地下兼职的工作吗？”  
 “就是如此。”  
 这家伙，说不定是个相当厉害的男人啊。  
