--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -9,14 +9,14 @@
 “发生什么了吗？”  
 听到了自己名字的比屋定也凑过来加入了对话。  
 “虽然只是刚刚才从雷斯吉宁教授那里听到的……  
-&emsp;&emsp; 和光市的办公室好像被什么人洗劫了。  
-&emsp;&emsp; 还有，真帆前辈住的宾馆也联系了过来，  
-&emsp;&emsp; 那边好像也有什么人入侵过了。”  
+ 和光市的办公室好像被什么人洗劫了。  
+ 还有，真帆前辈住的宾馆也联系了过来，  
+ 那边好像也有什么人入侵过了。”  
 “诶？你说什么？！”  
 听到的事实让比屋定十分震惊。  
 “虽然很快雷斯吉宁教授也会联系你，但我想能越早知道越好吧。”  
 “谢谢你，‘红莉栖’。  
-&emsp;&emsp; 比屋定小姐的话，有我和桶子在，没事的。”  
+ 比屋定小姐的话，有我和桶子在，没事的。”  
 “也是呢。拜托了。那就这样。”  
 “红莉栖”挂断了电话。比屋定低着头咬着嘴唇，陷入了沉默。于是我转向桶子。  
 “担心的事情成为了现实啊……对方盯上的，肯定是红莉栖的笔记本电脑和硬盘。”  
@@ -68,52 +68,52 @@
 “……我知道的都是些无关紧要的事。”  
 比屋定感觉冈部无论如何都想回避这个话题。中午在那个工作室的时候，如果没有那件事的介入的话，他应该已经说出来了吧。  
 “比起这些，现在最重要的是这台笔记本电脑应该怎么处理。  
-&emsp;&emsp; 这已经不是什么‘朋友的遗物’这种级别的问题了，  
-&emsp;&emsp; 而是会引起国家规模的争夺战的东西。”  
+ 这已经不是什么‘朋友的遗物’这种级别的问题了，  
+ 而是会引起国家规模的争夺战的东西。”  
 “到底在说什么阴谋论呀。”  
 “都到这种时候了你还要说这是阴谋论吗？  
-&emsp;&emsp; 你也看到了吧，那些穿着黑色西装的外国人；  
-&emsp;&emsp; 你一直在的办公室和住着的酒店都被洗劫了；  
-&emsp;&emsp; 红莉栖的家也被纵火了；  
-&emsp;&emsp; 纵火事件后，你的研究室也有自称FBI的神秘男子为了调查而来；  
-&emsp;&emsp; 之前在酒店的停车场被袭击的事，说不定也有什么关联。  
-&emsp;&emsp; 平常绝对碰不到的事，一个接一个地发生，这绝非偶然。”  
+ 你也看到了吧，那些穿着黑色西装的外国人；  
+ 你一直在的办公室和住着的酒店都被洗劫了；  
+ 红莉栖的家也被纵火了；  
+ 纵火事件后，你的研究室也有自称FBI的神秘男子为了调查而来；  
+ 之前在酒店的停车场被袭击的事，说不定也有什么关联。  
+ 平常绝对碰不到的事，一个接一个地发生，这绝非偶然。”  
 “就算这样，国家规模什么的……”  
 对于比屋定来说，她还处于云里雾里的状态。给所有事情强加上关联性，就会让人容易掉入阴谋论者的圈套。但事实是，世界上发生的很多事，并没有那么复杂的原因。刚想这样反驳，冈部又继续说了更多让比屋定震惊的话。  
 “事态在此之后将会像约翰·提托预言的那样发展吧。”  
 “约翰·提托？”  
 那个名字，比屋定并不知道。  
 “十年前美国某个网络论坛里出现的人物。从2036年乘坐时间机器来的，自称未来人。  
-&emsp;&emsp; 我知道那家伙是真的，也见过面。  
-&emsp;&emsp; 约翰·提托曾说过，2015年会爆发第三次世界大战。  
-&emsp;&emsp; 战争的导火索是，时间机器。”  
+ 我知道那家伙是真的，也见过面。  
+ 约翰·提托曾说过，2015年会爆发第三次世界大战。  
+ 战争的导火索是，时间机器。”  
 “……你在把我当笨蛋吗？”  
 “我是认真的。  
-&emsp;&emsp; 你说过很想知道中钵博士的事吧。  
-&emsp;&emsp; 那家伙，是红莉栖的父亲。  
-&emsp;&emsp; 《中钵论文》也可能和红莉栖有关。”  
+ 你说过很想知道中钵博士的事吧。  
+ 那家伙，是红莉栖的父亲。  
+ 《中钵论文》也可能和红莉栖有关。”  
 “……你……你说什么？”  
 《中钵论文》，比屋定也曾抱着很大兴趣读过。去年夏天，那个人逃亡去俄罗斯之后，轰轰烈烈地发表了的关时间机器的论文。但内容全是很幼稚又拙劣的，没什么阅读价值的东西。那种论文和红莉栖有关？怎么都不可能相信的吧。  
 “如果说那个论文是劣化版，存在着红莉栖自己写的原稿的话？”  
 “啊……！”  
 “红莉栖留下的笔记本电脑和移动硬盘，那之中实际存着什么，已经不重要了。  
-&emsp;&emsp; 只要那东西有可能在就会有组织想要得到。”  
+ 只要那东西有可能在就会有组织想要得到。”  
 “等，等下……让我稍微整理下思路……”  
 冈部的话是否属实，稍微冷静一下，想想看吧。通常情况下，肯定会把这种东西当作奇怪的闲话，连听都不听吧。但是，比屋定最近在这遭遇的事，却并非通常。所以不能明确否定冈部的话。确实，比屋定自己也当然有过一点类似阴谋论的想法。  
 “……其实我也有过，这个电脑被人盯上了的预感。  
-&emsp;&emsp; 只不过，你说的话和我的预测差的太远了……”  
+ 只不过，你说的话和我的预测差的太远了……”  
 “你的预测是？”  
 “我曾想过会不会是『Amadeus』的军事转用之类的事。”  
 “军事转用……？”  
 “红莉栖经常出入精神生理学研究所，她说会时不时地在那边看到无关人员。  
-&emsp;&emsp; 说不定是国防总省的人。”  
+ 说不定是国防总省的人。”  
 “『Amadeus』能够杀人吗？要怎么做到？”  
 “比如说，拷贝身经百战的飞行员的记忆数据，写入无人战斗机的控制程序里什么的。  
-&emsp;&emsp; 还有，以前说过的在医疗方面的应用，还记得吗？”  
+ 还有，以前说过的在医疗方面的应用，还记得吗？”  
 “那个……向人类的大脑里重新写入记忆数据什么的？”  
 “对。如果能实现记忆数据的修改并重新写入，就可能制造出‘没有恐惧感的士兵’，  
-&emsp;&emsp; 或者‘不论多么非人道的任务都能轻松执行的部队’这种很可怕的东西。  
-&emsp;&emsp; 我还以为，红莉栖是不是偶然掌握了这些实验的证据。”  
+ 或者‘不论多么非人道的任务都能轻松执行的部队’这种很可怕的东西。  
+ 我还以为，红莉栖是不是偶然掌握了这些实验的证据。”  
 “啊……那，『Amadeus』的研究中，美军的参与……没有的吧？”  
 “这怎么可能呢？”  
 “真的能这么断言吗？你只不过是研究人员，又不是这个项目的总负责人。”  
@@ -130,7 +130,7 @@
 办公室已经被整理得很干净了，没有任何入侵的痕迹。  
 “是教授你整理的吗？”  
 “虽说是被洗劫了，但是这里本身也只有我和 *Maho* 在使用，东西也不多呢。  
-&emsp;&emsp; 之后的就交给警察吧。”  
+ 之后的就交给警察吧。”  
 自从办公室被洗劫，已经过了两天。比屋定前天和昨天都是在菲莉丝家度过的，今天和雷斯吉宁教授取得联络，所以来和光市取行李。明天就和一开始预定的那样，准备回国，因此也要和这个办公室说再见了。  
 “犯人好像还没抓到吧？”  
 “啊。自从来了日本，灾难就不停啊。”  
@@ -149,10 +149,10 @@
 “我想让测试的事就这样继续下去，你觉得怎么样？”  
 “诶？！您认真的吗？”  
 “实际上你不是也看到了吗，  
-&emsp;&emsp; 和 *Rintaro* 说话时，*‘Kurisu’* 作出了前所未有的反应。  
-&emsp;&emsp; 今后，不止是他，我也打算找更多的测试员参与进来。”  
+ 和 *Rintaro* 说话时，*‘Kurisu’* 作出了前所未有的反应。  
+ 今后，不止是他，我也打算找更多的测试员参与进来。”  
 “在安全的层面上，不会有不安因素吗？  
-&emsp;&emsp; 美国和日本离得这么远，要是出了什么问题，我们无法应对啊。”  
+ 美国和日本离得这么远，要是出了什么问题，我们无法应对啊。”  
 “没关系的，因为我信任着 *Rintaro* 呢！”  
 “不，这不是信不信任的问题……”  
 “而且，如果继续测试的话，*Maho* 也能定期和 *Rintaro* 联络哟？”  
