--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -32,19 +32,19 @@
 “……怎么了？为什么要压低声音？”  
 “嘘——！现在在店里面。拜托了，请别无视我的情况就联系我……”  
 “你在哪里干什么我又不知道。  
-&emsp;&emsp; 还是说，你希望被我24小时监视么？  
-&emsp;&emsp; 你睡觉的样子啊、洗澡的样子啊，全都想被偷窥吗？”  
+ 还是说，你希望被我24小时监视么？  
+ 你睡觉的样子啊、洗澡的样子啊，全都想被偷窥吗？”  
 “啊……”  
 “哈……不是一般的变态啊。”  
 “是我太自以为是了真是抱歉……”  
 “我联络过来，你不想接的话，不接也行。不会因为这点事生气的。”  
 “是、是么……”  
 “好了，看你现在很困扰的样子，就如你所愿，挂了哦。  
-&emsp;&emsp; 的确，与手机上的3D模型女孩一本正经对话的男子大学生够恶心的。”  
+ 的确，与手机上的3D模型女孩一本正经对话的男子大学生够恶心的。”  
 “你啊……”  
 “开、开玩笑的啦。  
-&emsp;&emsp; 一直都愿意搭理我，至少、那个……  
-&emsp;&emsp; 感谢你啦……是这么想的……”  
+ 一直都愿意搭理我，至少、那个……  
+ 感谢你啦……是这么想的……”  
 “这种话就算了，总之先挂了啊。”  
 “啊，等——”  
 我挂断了电话。“红莉栖”说起话来总是很长时间都说不完的样子。的确本体也是滔滔不绝的性格。在这种地方和她对话，我会太在意周围的目光，感觉很不自在。我也提议过因为看着屏幕说话太羞耻，想要变成和平常打电话一样的形式来交谈。但是这样“红莉栖”就有意见了——为什么我要可悲地一边看着你的脑袋一边说话？真是个任性的程序，真是的……  
@@ -78,26 +78,26 @@
 “都说过不要用这种说法了。”  
 “那么，你也改改你恋爱脑的习惯吧。”  
 “是是是，我知道了啦。  
-&emsp;&emsp; 但是，真由理真是可爱呢。  
-&emsp;&emsp; 居然有那么可爱的比你小的青梅竹马，你真是有福气啊。”  
+ 但是，真由理真是可爱呢。  
+ 居然有那么可爱的比你小的青梅竹马，你真是有福气啊。”  
 “是啊。”  
 “这么一来，真帆前辈的胜算不是绝望性的么……  
-&emsp;&emsp; 又不可爱，年龄上也赢不过，身高更不用说，还有胸围方面的也是惨败……  
-&emsp;&emsp; 呜，可怜的前辈……”  
+ 又不可爱，年龄上也赢不过，身高更不用说，还有胸围方面的也是惨败……  
+ 呜，可怜的前辈……”  
 “这些话在比屋定小姐的面前说的话，她会把整个程序都删除掉的吧。”  
 “话说，我，至今都没有被介绍给真由理呢。  
-&emsp;&emsp; 你这人，朋友明明挺多的，但是跟谁都没有提过我的事呢。”  
+ 你这人，朋友明明挺多的，但是跟谁都没有提过我的事呢。”  
 “有类似保密义务的，被要求过尽量不要告诉别人。”  
 “真的只是这样么？实际上，是不想让别人看到在和我说话的样子对吧？”  
 “……没有那种事。无论如何都希望被介绍的话，我就向比屋定小姐征求下许可吧。  
-&emsp;&emsp; 然后首先，就把我最信赖的男人——桶子介绍给你。  
-&emsp;&emsp; 如果是那家伙，应该会对你相当执着的吧。”  
+ 然后首先，就把我最信赖的男人——桶子介绍给你。  
+ 如果是那家伙，应该会对你相当执着的吧。”  
 “24小时一直被工口的目光注视着然后不停的被哈哈着么我懂的……  
-&emsp;&emsp; HENTAI真是可怕……”  
+ HENTAI真是可怕……”  
 “红莉栖”脸色一青，伴随着失去任何感情波动的话语颤抖了起来。  
 桶子是怎样的人，我不厌其烦地灌输给了“红莉栖”，所以她应该能轻易想象出，被交到那个人手上的瞬间，自己会被如何当成玩物的吧。  
 “……果然，不用介绍也好。  
-&emsp;&emsp; 有你作为谈话对象了，应该觉得满足了才是——”  
+ 有你作为谈话对象了，应该觉得满足了才是——”  
 “冈伦~”  
 就在这时真由理拿着购物篮回来了。  
 “咦？刚才在和谁说话呢？”  
@@ -118,30 +118,30 @@
 
 这是《雷NET翔》中登场的吉祥物角色“乌帕”。我让真由理在动漫周边卖场等待的时候随便选个喜欢的东西，于是她拿了这个。  
 “乌帕的话，明明已经有了很多了……还是这么高兴啊。  
-&emsp;&emsp; 而且，这只是普通的绿色乌帕吧？不是稀有的那种啊。  
-&emsp;&emsp; 稀有的貌似是……金属乌帕来着？”  
+ 而且，这只是普通的绿色乌帕吧？不是稀有的那种啊。  
+ 稀有的貌似是……金属乌帕来着？”  
 全身闪烁银色光辉的金属乌帕，在乌帕之中也算人气很高，作为商品的稀有度也很高。比方说的话，以便利店的商品抽签来说，金属乌帕肯定相当于特等奖。据说在网上拍卖的话能值好几万，之前听真由理说过的。  
 “不-不-不——”  
 真由理不知为何显得很得意的样子，左右摇动着食指。  
 “不是的哦~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
-&emsp;&emsp; 是在之前放映的电影中登场的‘绿色的妖精先生乌帕’哟！”  
+ 是在之前放映的电影中登场的‘绿色的妖精先生乌帕’哟！”  
 说起来，《雷NET翔》的剧场版在春季上映了呢。真由理也混在小孩子当中去看了吧？  
 “绿色的妖精先生？”  
 “剧透电影的情节也没关系吧？”  
 “没事，反正不会看的。”  
 “那个，这次的电影啊，是在虚拟世界中与邪恶的超级黑客先生们战斗。  
-&emsp;&emsp; 那个虚拟世界啊，就是妖精先生住的森林。  
-&emsp;&emsp; 超级黑客先生特别强呢，翔君和乌帕们都陷入了危机……  
-&emsp;&emsp; ‘已经不行了~！’的时候，妖精先生们前来帮忙了呢。
-&emsp;&emsp; 其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦~
-&emsp;&emsp; 为了拯救一直都温柔地照顾它们的翔君，  
-&emsp;&emsp; 在虚拟世界‘皮卡皮卡~’地放着光与乌帕合体了！
-&emsp;&emsp; 那就是这个‘绿色的妖精先生乌帕’！超级可爱，超级强大的哟~
-&emsp;&emsp; 真由喜好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
+ 那个虚拟世界啊，就是妖精先生住的森林。  
+ 超级黑客先生特别强呢，翔君和乌帕们都陷入了危机……  
+ ‘已经不行了~！’的时候，妖精先生们前来帮忙了呢。
+ 其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦~
+ 为了拯救一直都温柔地照顾它们的翔君，  
+ 在虚拟世界‘皮卡皮卡~’地放着光与乌帕合体了！
+ 那就是这个‘绿色的妖精先生乌帕’！超级可爱，超级强大的哟~
+ 真由喜好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
 “原、原来如此啊。”  
 能让真由理这么热衷地诉说的事情实在少有。的确仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，哪里有什么不一样……要是被这么问的话还是一头雾水的。  
 “这个钥匙圈啊，我到处找过呢。  
-&emsp;&emsp; 超级有人气的，不管哪里都卖完了哟~没想到HANDS还有剩下的呢~”  
+ 超级有人气的，不管哪里都卖完了哟~没想到HANDS还有剩下的呢~”  
 “很幸运呢。”  
 “嗯！而且，这是最后的一个哟~今天来了真是太好了，要感谢冈伦和叔叔呢！”  
 真由理用指尖灵巧地拆开纸质的商品包装，从包中取出家里的钥匙，然后小心地装了上去。  
@@ -161,7 +161,7 @@
 “啊，要给妈妈发个短信呢，告诉她晚饭的时候再回去。”  
 “那要不在我家吃也行啊？反正我爸妈他们肯定要留你的。”  
 “唔~嗯，怎么办比较好呢~  
-&emsp;&emsp; 冈伦的话，今天之后一直在家的吗？不去联谊什么的吗？”  
+ 冈伦的话，今天之后一直在家的吗？不去联谊什么的吗？”  
 “最近完全都没去了。”  
 去年秋天刚弃掉中二病那会儿倒是想着成为一个普通的大学生什么的，然后十分勉强地跑去参加联谊来着。最近则是忙于学习的事，去参加的机会也减少了。  
 “这样啊~那，我就去打扰了~”  
