--- a/steins_gate_0/docs/0041.md
+++ b/steins_gate_0/docs/0041.md
@@ -15,7 +15,7 @@
 “一直都空口说白话，结果上次的电影票不也白白浪费了吗？”  
 她指的是之前的圣诞节派对上，真由理和菲莉丝在“作战”中特意准备的那两张电影票。  
 “啊、那个啊，冈伦和吹雪氏不是突然晕倒了嘛？  
-&emsp;&emsp; 那之后在忙着去探病之类的事情的时候，放映期就结束了……也是没办法嘛……”  
+ 那之后在忙着去探病之类的事情的时候，放映期就结束了……也是没办法嘛……”  
 “但是听说在那之后，打算给你准备新的电影票，也被你拒绝了吧？”  
 “等、听谁说的？”  
 “当然是真由姐和留未姐咯。”  
@@ -34,7 +34,7 @@
 “对不起……”  
 桶子失落的样子实在让铃羽看不下去，于是她用手掌拍了拍他庞大的后背。  
 “别想这个了，快给妈妈发个邮件，问问她有没有空闲时间。  
-&emsp;&emsp; 如果有空的话，就约她去看电影。”  
+ 如果有空的话，就约她去看电影。”  
 “诶——！？难度系数突然变得这么高！”  
 “管它高不高，赶快去邀请她。听好了，这可是命令哦。”  
 “命、命令什么的……”  
@@ -89,20 +89,20 @@
 “那家伙……在监视这个LAB。”  
 半年前在广播馆屋顶上穿着紧身衣监视铃羽，被她发现追赶后却逃之夭夭的人，绝对是篝。从那之后，铃羽一直集中心思保护时间机器，附近再也没有发现类似篝的人物——铃羽压根就没想过，篝在监视LAB。
 “不，稍微考虑一下的话这也是当然的事情。  
-&emsp;&emsp; 那家伙，在阻止我们到达 *Steins;Gate*。  
-&emsp;&emsp; 她不想把这个世界变成没有发生过。  
-&emsp;&emsp; 也就是说，不止是我，爸爸你也被盯上了……？”  
+ 那家伙，在阻止我们到达 *Steins;Gate*。  
+ 她不想把这个世界变成没有发生过。  
+ 也就是说，不止是我，爸爸你也被盯上了……？”  
 “诶？我？”  
 “不过，我觉得你应该没有……生命危险。  
-&emsp;&emsp; 如果相信世界线的真理，你至少会活到2036年。  
-&emsp;&emsp; 但是，为了阻止到达 *Steins;Gate*，她也可能妨碍你的研究。”  
+ 如果相信世界线的真理，你至少会活到2036年。  
+ 但是，为了阻止到达 *Steins;Gate*，她也可能妨碍你的研究。”  
 最近在父亲，还有冈部伦太郎身边，总是接二连三地发生各种事件。父亲说不定成为了篝的目标。  
 “从今天起，以防万一，我不在的时候要把门上锁啊。”  
 “嗯、嗯。知道了哦。”  
 “就算和冈伦叔叔、妈妈、或者真由姐在一起，也绝对不能把门开着哦。  
-&emsp;&emsp; 最好把门链也拴上，算是心理安慰也好。”  
+ 最好把门链也拴上，算是心理安慰也好。”  
 “但是啊，冈伦和真由喜他们俩姑且不论，和阿万音氏两人相处的时候这么做，  
-&emsp;&emsp; 会不会产生别的奇怪的意思呢？阿万音氏不会误解什么吧？”  
+ 会不会产生别的奇怪的意思呢？阿万音氏不会误解什么吧？”  
 “啊……那个确实。”  
 “如果因此被讨厌了，就是咱们家的大危机了哦。”  
 “唔……”  
@@ -116,7 +116,7 @@
 “那样的真由理抚养出的孩子，会变成袭击别人的恐怖的人吗……？”  
 “……”  
 “总感觉铃羽口中的篝碳和想象中的差别很大啊……  
-&emsp;&emsp; 我还在想会不会是更加温柔一点，更软一点，更可爱的女孩子呢。”  
+ 我还在想会不会是更加温柔一点，更软一点，更可爱的女孩子呢。”  
 “如果是那样就太好了。嗯，我在之前也这么想。但是，现在的篝……可能……”  
 看她当时的行动——从广播馆的屋顶逃走的动作就能知道，她绝对接受了专业的战斗训练。和铃羽教给还是小孩子的她的防身术程度不同，年龄增长之后的她被赋予的，是更加冷酷的杀人技术。从1998年行踪不明到现在，没有人知道她现在身在何处，到底经历了什么。但是，铃羽明白，她绝对是真心实意地在阻止自己的计划。  
 
@@ -236,7 +236,7 @@
 “我啊……真的很喜欢……那孩子啊……”  
 “嗯。”  
 “虽然很娇小，但是很勇敢，一直在努力保护真由姐……  
-&emsp;&emsp; 我也教过那孩子各种东西，一直……把她当成妹妹一样。”  
+ 我也教过那孩子各种东西，一直……把她当成妹妹一样。”  
 “嗯。”  
 “但是，她已经……完全是敌人了。”  
 桶子帮衣着凌乱的铃羽整理了T恤的下摆。  
@@ -250,7 +250,7 @@
 “又在说这样的胡话。你刚才搞不好就受重伤了。”  
 铃羽不满地抱怨着，桶子却摇了摇头：  
 “我啊，虽然那时候看见刀忍不住叫了出来，不过想想其实没有必要害怕……  
-&emsp;&emsp; 那时，如果不是我听错了的话——”  
+ 那时，如果不是我听错了的话——”  
 桶子用手指摸了摸脖子，刚刚匕首抵住的位置。  
 “被刀抵着的时候……虽然很小，但是我听到了——”  
 “什么？”  
