--- a/steins_gate_0/docs/0042.md
+++ b/steins_gate_0/docs/0042.md
@@ -13,8 +13,8 @@
 “本来打算安顿好了再联系你的哟。况且关于‘红莉栖’的事情也要定期联络。”  
 “这次来，是为了新型脑炎的研究？”  
 “雷斯吉宁教授是这个原因呢。  
-&emsp;&emsp; 我虽然算是他的助手，但是要说的话还是负责『Amadeus』。  
-&emsp;&emsp; 出过什么问题吗？虽然这么问，大概的情况我也通过一直以来的报告了解了。”  
+ 我虽然算是他的助手，但是要说的话还是负责『Amadeus』。  
+ 出过什么问题吗？虽然这么问，大概的情况我也通过一直以来的报告了解了。”  
 “啊，并没有什么问题。虽然最近陪‘红莉栖’聊天还是挺辛苦的呢。”  
 
 “我说——辛苦是什么意思？”  
@@ -30,17 +30,17 @@
 “因为总是得不到和自己年龄相符的对待。（x2）”  
 两个人异口同声。
 “所以我才忍不住表现得比较生气嘛。”  
-&emsp;&emsp; 熟悉到一定程度的话，对方就不会对我的外貌说三道四了吧？  
-&emsp;&emsp; 所以我才能安下心来说话。”  
+ 熟悉到一定程度的话，对方就不会对我的外貌说三道四了吧？  
+ 所以我才能安下心来说话。”  
 果然，没有评价服装的事情是正确的……好险好险……  
 “回到『Amadeus』的话题。‘红莉栖’的语气变严厉，是个很有趣的征兆啊。  
-&emsp;&emsp; 那是对我和教授不会表现出来的一面对吧？  
-&emsp;&emsp; 也可以说是对你敞开内心到如此程度了吧。”  
+ 那是对我和教授不会表现出来的一面对吧？  
+ 也可以说是对你敞开内心到如此程度了吧。”  
 “才没有。”  
 对于红莉栖若无其事的抗议，真帆用微笑带过。  
 “这样的心理活动，可以从程序的层面进行解析。  
-&emsp;&emsp; 若是‘她’只和我还有教授对话，绝对看不到的这种变化。  
-&emsp;&emsp; 光是这一点，让冈伦继续测试就有价值了。”  
+ 若是‘她’只和我还有教授对话，绝对看不到的这种变化。  
+ 光是这一点，让冈伦继续测试就有价值了。”  
 “这样吗……”  
 “雷斯吉宁教授也对此给予了很高的评价。”  
 “我觉得是过高评价。实际上，和我说话的时候他的牢骚和抱怨很多，不怎么有男子气概。”  
@@ -60,7 +60,7 @@
 “为什么？”  
 “那当然是因为……我从来没有跟前辈提过在看@ch啊！”  
 “堂堂正正的不就好了。看@ch、发帖子啥的，又不是犯罪。  
-&emsp;&emsp; 对吧？@cher‘红莉栖’——”  
+ 对吧？@cher‘红莉栖’——”  
 “你这家伙……下次再这么叫我，我就把有的没有的都写到@ch去哟？”  
 “你这种行为才是，离犯罪只有一步了……”  
 ‘她’的话让我愣神了片刻，随即忍不住苦笑。这样的对话，感觉十分怀念。当时的我得寸进尺，经常这样惹怒生前的红莉栖。  
@@ -74,7 +74,7 @@
 “啊！前辈，对不起……”  
 “诶？为什么要道歉？”  
 “不……难得冈部和真帆前辈好久不见……我却一直讲个不停。  
-&emsp;&emsp; 就这样，之后的时间请你们二位慢慢享受……”  
+ 就这样，之后的时间请你们二位慢慢享受……”  
 “我并不是这个意思啦。”  
 “说到底，都怪冈部说了奇怪的话呢……”  
 “是这样么？『栗悟饭和龟派气功』。”  
@@ -88,8 +88,8 @@
 要是我擅自说出来，“她”绝对会闹别扭不再理我了。  
 “那么，这次会在这边呆多久？”  
 “可能要比上次久呢。”  
-&emsp;&emsp; 因为雷斯吉宁教授研究的新型脑炎，现在还基本上什么都还不清楚的样子。  
-&emsp;&emsp; 说不定也有可能让我一个人先回去。  
+ 因为雷斯吉宁教授研究的新型脑炎，现在还基本上什么都还不清楚的样子。  
+ 说不定也有可能让我一个人先回去。  
 “有时间的话，到LAB露个脸吧。桶子和真由理，一定会高兴的。”  
 “真由理小姐当然不用说，桥田先生……怎么说呢……”  
 终于连真帆也开始认识到桶子的本性了。  
