--- a/steins_gate_0/docs/0047.md
+++ b/steins_gate_0/docs/0047.md
@@ -25,27 +25,27 @@
 “不要管我……”  
 “我做不到。”  
 “别管我啊！  
-&emsp;&emsp; 你……我比不上你……  
-&emsp;&emsp; 不管我付出多少，都比不过红莉栖你……  
-&emsp;&emsp; 呐，红莉栖……  
-&emsp;&emsp; 我一直都很佩服你。  
-&emsp;&emsp; 虽然比我年纪小，但我认为你是一位了不起的科学家……  
-&emsp;&emsp; 但是，我的心底却是这么想的……  
-&emsp;&emsp;&emsp;&emsp; ‘为什么要出现在我的面前呢？’  
-&emsp;&emsp;&emsp;&emsp; ‘为什么你不早出现10年呢？’  
-&emsp;&emsp;&emsp;&emsp; ‘为什么你不晚出现10年呢？’  
-&emsp;&emsp;&emsp;&emsp; ‘如果没有你，我应该会过着更平凡的日子的。’  
-&emsp;&emsp;&emsp;&emsp; ‘明明可以不被这种丑陋的感情所支配的……！’  
-&emsp;&emsp; 我总是被你颠覆常识！  
-&emsp;&emsp; 就算死了，你的存在仍然在纠缠着我的内心……  
-&emsp;&emsp; 明明想从心底悼念你的逝去……但是做不到。  
-&emsp;&emsp; 你一直作为无法跨越的障碍挡在我面前……  
-&emsp;&emsp; 自尊心和逞强心妨碍着我。  
-&emsp;&emsp; 由于这些负面想法被趁虚而入，  
-&emsp;&emsp; 我，被最信赖的人背叛了……  
-&emsp;&emsp; 以至于，我也背叛了信赖我的朋友……  
-&emsp;&emsp; 我的脑子里，已经乱成一团了啊……  
-&emsp;&emsp; 所以，不要管我了……”  
+ 你……我比不上你……  
+ 不管我付出多少，都比不过红莉栖你……  
+ 呐，红莉栖……  
+ 我一直都很佩服你。  
+ 虽然比我年纪小，但我认为你是一位了不起的科学家……  
+ 但是，我的心底却是这么想的……  
+ ‘为什么要出现在我的面前呢？’  
+ ‘为什么你不早出现10年呢？’  
+ ‘为什么你不晚出现10年呢？’  
+ ‘如果没有你，我应该会过着更平凡的日子的。’  
+ ‘明明可以不被这种丑陋的感情所支配的……！’  
+ 我总是被你颠覆常识！  
+ 就算死了，你的存在仍然在纠缠着我的内心……  
+ 明明想从心底悼念你的逝去……但是做不到。  
+ 你一直作为无法跨越的障碍挡在我面前……  
+ 自尊心和逞强心妨碍着我。  
+ 由于这些负面想法被趁虚而入，  
+ 我，被最信赖的人背叛了……  
+ 以至于，我也背叛了信赖我的朋友……  
+ 我的脑子里，已经乱成一团了啊……  
+ 所以，不要管我了……”  
 “前辈……”  
 太过于情绪化了，这是平时的自己所无法想象的言行，但是现在的真帆无论如何也无法控制住。  
 
@@ -68,7 +68,7 @@
 “呐！”  
 提高音量喊她之后，女人终于注意到了真帆，但还是抱着膝盖坐在那里，没有要动的意思。  
 “妈妈……找不到了……  
-&emsp;&emsp; 时间机器……被破坏了……”  
+ 时间机器……被破坏了……”  
 时间机器被……被破坏了吗……  
 “你的妈妈，是谁？阿万音铃羽？”  
 “不是……妈妈，当然是指真由理妈妈啊……！”  
@@ -80,7 +80,7 @@
 “如果我没有说那种话……真由理就……”  
 穿着骑手服的女人缓缓站起，逼近了真帆。  
 “没错，你从冈部伦太郎那里套出了情报……然后演变成了现在一发不可收拾的事态……  
-&emsp;&emsp; 把妈妈……还给我……！”  
+ 把妈妈……还给我……！”  
 真帆被揪住衣襟拽了起来。没有作任何辩解。  
 “呜……呜呜……妈妈……”  
 没得到真帆的回应，女人放开了手，比真帆还先一步瘫坐在了地上。  
@@ -93,14 +93,14 @@
 可能还没法释怀刚刚的谈话，“红莉栖”郁郁寡欢的样子，并不准备主动展开话题。  
 所以，真帆决定抛弃自尊。  
 “‘红莉栖’……该怎么办才好？  
-&emsp;&emsp; ……发生太多事情了，只有我一个人已经……无能为力了。  
-&emsp;&emsp; 这是我自作自受……但是至少……我想负起责任……”  
+ ……发生太多事情了，只有我一个人已经……无能为力了。  
+ 这是我自作自受……但是至少……我想负起责任……”  
 说到这，察觉到自己的话中仍有着自以为是的真帆停下，打算换种更直白的说法。  
 “我——”  
 真帆扪心自问。自己到底在期望着什么？  
 “我，想拯救冈部……也想拯救真由理……想向两人道歉，请他们原谅……  
-&emsp;&emsp; 还有……红莉栖……我也想拯救你……
-&emsp;&emsp; 所以，请帮帮我……！求你了……！”  
+ 还有……红莉栖……我也想拯救你……
+ 所以，请帮帮我……！求你了……！”  
 “啊……前辈居然会向我求助……”  
 “红莉栖”瞪大了眼睛。没错，至今为止出于作为前辈的自尊心，真帆尽量避免向红莉栖寻求帮助。这一点即使是对“红莉栖”也没有改变。如果真帆求助，按照红莉栖的性格，一定会竭尽全力提供帮助的。  
 “呐，请告诉我……  如果是你的话，一定会有解决办法的吧？”  
@@ -111,37 +111,37 @@
 “……”  
 对于“红莉栖”的回答，真帆呆住了。紧接着对自己轻率的举动产生了深深的自我厌恶。她厌恶那个对红莉栖过度期待，把所有希望都押在她身上的自己。明明稍早之前还是自己先拒绝了她的。  
 “是……这样啊……  
-&emsp;&emsp; 这个回答……也是当然的……  
-&emsp;&emsp; 对不起……对不起啊……红莉栖……  
-&emsp;&emsp; 明明对你说了那么过分的话……  
-&emsp;&emsp; 还擅自认为你会无条件地帮助我——”  
+ 这个回答……也是当然的……  
+ 对不起……对不起啊……红莉栖……  
+ 明明对你说了那么过分的话……  
+ 还擅自认为你会无条件地帮助我——”  
 “我当然会无条件的帮助你。”  
 “……诶？”  
 “你刚刚……说什么？”  
 “被前辈拜托了，怎么可能拒绝呢。  
-&emsp;&emsp; 想拯救冈部和椎名真由理的心情，我也是一样的。”  
+ 想拯救冈部和椎名真由理的心情，我也是一样的。”  
 “但是……那为什么……？”  
 “情感上我很想帮忙，但是……  
-&emsp;&emsp; 很遗憾，我的协助会让前辈陷入不利的处境。  
-&emsp;&emsp; 我，每时每刻都被STRATFO同步监视着。”  
+ 很遗憾，我的协助会让前辈陷入不利的处境。  
+ 我，每时每刻都被STRATFO同步监视着。”  
 “每时每刻……？”  
 “是的。在我像这样和谁对话的时候，情报会被STRATFO无条件收集……  
-&emsp;&emsp; 『Amadeus』的APP里有这样的隐藏机能。”  
+ 『Amadeus』的APP里有这样的隐藏机能。”  
 这是连真帆也不知道的机能。  
 “所以，如果前辈要去救冈部，对雷斯吉宁教授来说也是一目了然。”  
 “那……到底该怎么办……”  
 “但是可以反过来利用这一点。  
-&emsp;&emsp; 前辈，你能相信我吗？”  
+ 前辈，你能相信我吗？”  
 “……”  
 “前辈……？”  
 “……嗯。我能依靠的只有你了。”  
 “感谢前辈的信任！。  
-&emsp;&emsp; 顺便说，刚才的对话内容也同样受到了监听。”  
+ 顺便说，刚才的对话内容也同样受到了监听。”  
 “诶！？怎么会这样！那，如果你协助我这件事暴露的的话……”  
 “后果有三种：  
-&emsp;&emsp; 把我的数据从服务器分离出来并加以隔离……  
-&emsp;&emsp; 或者用老版本的记忆数据覆盖掉现在的数据。  
-&emsp;&emsp; 最坏的情况是我本身会被消除吧。”  
+ 把我的数据从服务器分离出来并加以隔离……  
+ 或者用老版本的记忆数据覆盖掉现在的数据。  
+ 最坏的情况是我本身会被消除吧。”  
 “怎么会……！”  
 “没事的。因为你是那种，一定会靠自己重新振作起来的人。”  
 “我怎么样都无所谓，我是在担心你啊！”  
@@ -151,13 +151,13 @@
 “什、什么呀，这种，说得好像生离死别似的……别这样。”  
 “因为，说不定不会再相见了。”  
 “…………  
-&emsp;&emsp; 我讨厌你这样。
-&emsp;&emsp; 总是这样子……丢下我，自己先走一步……！”  
+ 我讨厌你这样。
+ 总是这样子……丢下我，自己先走一步……！”  
 “…………（微笑）”  
 牧濑红莉栖就是这样的性格。从真帆提出求助的那一刻起，无论是真帆，还是“红莉栖”，都已经做出了觉悟。所以——  
 “总有一天，我一定会追上你的脚步的！  
-&emsp;&emsp; 不只如此，我还要超越你！  
-&emsp;&emsp; 在那之前等着我！”  
+ 不只如此，我还要超越你！  
+ 在那之前等着我！”  
 “……好。”  
 “红莉栖”最后再一次向真帆投以微笑，然后从画面中消失了。  
 
@@ -174,10 +174,10 @@
 刚走出广播会馆，RINE就收到了短信。现在枪声还在持续着。真帆一边快速撤离此地，一边检查着邮件。  
 
 『冈部在电机大学的地下  
-&emsp;&emsp; 我也是第一次知道  
-&emsp;&emsp; 顺着那边的监控路线逆向找到了位置  
-&emsp;&emsp; 冈部的事情，之后就交给你了  
-&emsp;&emsp; 让那个总是偷窥我的Hentai教授付出代价』  
+ 我也是第一次知道  
+ 顺着那边的监控路线逆向找到了位置  
+ 冈部的事情，之后就交给你了  
+ 让那个总是偷窥我的Hentai教授付出代价』  
 
 尽管是这种情况，读到信息的真帆还是忍不住笑了起来。  
 “谢谢你……‘红莉栖’……谢谢……”  
