--- a/steins_gate_0/docs/0051.md
+++ b/steins_gate_0/docs/0051.md
@@ -27,7 +27,7 @@
 “唔……呼哈……哈……”  
 终于，眼前的世界重新染上了颜色。来来往往的行人的声音和汽车的噪音，以奔流之势一齐涌入耳中。  
 “那个，冈伦……没事吧？你出了好多汗啊……  
-&emsp;&emsp; 是不是身体不舒服？”  
+ 是不是身体不舒服？”  
 “啊……不是……”  
 吹雪和枫……眼前依旧是这两人，她们正担心地看着我。也就是说，刚刚只是眼花而已吗？  
 “真的没事，谢谢你们的关心。”  
