--- a/steins_gate_0/docs/0052.md
+++ b/steins_gate_0/docs/0052.md
@@ -10,8 +10,8 @@
 “就是说谈话之间，你们有没有变得亲近了一点？”  
 “那样的话，比起第一次对话时多少有点……”  
 “有点？应该说变化很大吧？因为我也在和‘红莉栖’对话，所以还是知道这些的。  
-&emsp;&emsp; 最初那孩子一直在为‘被无视了8回’的事生气呢。  
-&emsp;&emsp; 现在你们已经变得关系这么好了，说明你们之间的距离也缩小了吧。”  
+ 最初那孩子一直在为‘被无视了8回’的事生气呢。  
+ 现在你们已经变得关系这么好了，说明你们之间的距离也缩小了吧。”  
 “是这样吗！这可真是好消息！”  
 听了比屋定的话，雷斯吉宁显得非常高兴。  
 “我很期待啊，她会不会对你抱有友情——更进一步说，会不会抱有恋爱之情。”
@@ -25,14 +25,14 @@
 “但人脑不也是一样嘛？”  
 确实，人的大脑也是用电信号运作的，所以要说构造相同也没什么不可以。  
 “现在，机器有没有感情之类的课题早就过时了。就算是机器也是有感情的。  
-&emsp;&emsp; 归根结底，『Amadeus』是为了再现我们的人脑而制作出来的。  
-&emsp;&emsp; 构造相同，运作过程也相同，所以作为结果诞生出的东西也应该是一样的对吧？  
-&emsp;&emsp; 这么说的话，她也有很大可能性能够恋爱。不，我希望她一定要恋爱。”  
+ 归根结底，『Amadeus』是为了再现我们的人脑而制作出来的。  
+ 构造相同，运作过程也相同，所以作为结果诞生出的东西也应该是一样的对吧？  
+ 这么说的话，她也有很大可能性能够恋爱。不，我希望她一定要恋爱。”  
 恋爱……『Amadeus』……  
 “哦呀，说了这种话估计要被 *Maho* 讨厌了吧？”  
 “请教授不要像‘红莉栖’那样说话！”  
 “哈哈哈，开玩笑的啦，开玩笑。  
-&emsp;&emsp; *Maho* 生气起来很可怕，一定要注意啊。”  
+ *Maho* 生气起来很可怕，一定要注意啊。”  
 “嗯，这个我已经知道了。”  
 “喂，我可是能听见的啊！”  
 “Oh，话说回来，我必须要联系下朱蒂了。*Rintaro*，不好意思，先失陪了。”  
@@ -43,7 +43,7 @@
 “真受不了啊。”  
 原来，当初的红莉栖是个那么元气的人啊。  
 “啊，对啦，冈部先生，稍微有些事想问下你……  
-&emsp;&emsp; 那孩子……红莉栖，你知道她有什么喜欢的词吗？”  
+ 那孩子……红莉栖，你知道她有什么喜欢的词吗？”  
 “词？”  
 “数字什么的都可以，有可能设为密码的东西，你心里有没有想到什么？”  
 “要破解红莉栖设置的密码吗？”  
@@ -53,13 +53,13 @@
 “不，是她的私人物品……在她家里发现的笔记本电脑。”  
 “那种东西为什么在你那……？”  
 “是红莉栖的母亲给我的，作为纪念的遗物。  
-&emsp;&emsp; 于是，因为想要确认下里面的内容，所以我在找解除密码的方法。  
-&emsp;&emsp; 我觉得你可能会知道所以说……”  
+ 于是，因为想要确认下里面的内容，所以我在找解除密码的方法。  
+ 我觉得你可能会知道所以说……”  
 “有密码不就意味着，电脑里有不想被人看到的东西吗？”  
 “虽然是这么说没错……  
-&emsp;&emsp; 但是，为了让她———让『Amadeus』的“红莉栖”更加接近真人，  
-&emsp;&emsp; 把这之中的数据解析出来会比较好，对吧？  
-&emsp;&emsp; 当然，我自己是尽量不会去看那些和隐私有关的东西的。”  
+ 但是，为了让她———让『Amadeus』的“红莉栖”更加接近真人，  
+ 把这之中的数据解析出来会比较好，对吧？  
+ 当然，我自己是尽量不会去看那些和隐私有关的东西的。”  
 比屋定说的我也不是不能理解。毕竟在那电脑里可能有日记一样的东西，也可能有来到这边后的行动记录。然而……  
 “不好意思，我没什么线索。”  
 “什么都没？”  
