--- a/steins_gate_0/docs/0053.md
+++ b/steins_gate_0/docs/0053.md
@@ -27,9 +27,9 @@
 “其实在这之后，家里会有客人来。”  
 “客人？琉华子的吗？”  
 “不是，是爸爸的客人。不知为什么说想让我也同席……  
-&emsp;&emsp; 爸爸平时会把有同样兴趣的人叫来，和他们聊好长时间。  
-&emsp;&emsp; 因为都是些对我来说很难懂的话题，所以平常我都只是做做端茶倒水的工作。  
-&emsp;&emsp; 为什么这回想要让我一起呢……”  
+ 爸爸平时会把有同样兴趣的人叫来，和他们聊好长时间。  
+ 因为都是些对我来说很难懂的话题，所以平常我都只是做做端茶倒水的工作。  
+ 为什么这回想要让我一起呢……”  
 “很难懂的话题是指，宗教那一类的？”  
 琉华子的家是柳林神社，很早以前就存在于秋叶原的神社，琉华子的父亲是那边的宫司。  
 “似乎不是关于这类的……和这之前的客人都是在说些什么，有明怎么怎么样，晴海怎么怎么样的……像这种话题。”  
@@ -57,7 +57,7 @@
 ……为什么明明称琉华子为哥哥，对我的称呼却是叔叔呢？  
 “是的哦，并且是战士中的战士，说是身经百战的强者都不为过。”  
 “诶，这样啊。但是，琉华哥的家，我听说好像是和神职有关的。  
-&emsp;&emsp; 啊，也对，倒是听说以前的神职人员也是士兵。”  
+ 啊，也对，倒是听说以前的神职人员也是士兵。”  
 就这么自顾自地接受了。  
 “确实，琉华哥也很厉害。我理解了。”  
 很、很厉害？什么方面？  
@@ -71,8 +71,8 @@
 “你在躲着我，这种事我是知道的。”  
 “……这也不是你的错。”  
 “话说铃羽，今天又这么晚回来，去做什么了？  
-&emsp;&emsp; 哈！难不成是和哪个男人，约、约会什么的？！  
-&emsp;&emsp; 不允许！和那种来历不明的男人交往什么的，爸爸不允许！”  
+ 哈！难不成是和哪个男人，约、约会什么的？！  
+ 不允许！和那种来历不明的男人交往什么的，爸爸不允许！”  
 “不是啦，不是那种事。”  
 “真的？”  
 虽然我以为只是玩笑，但是桶子却意外地很认真的样子，口气变得比平常要认真。该说是复杂的父爱还是什么呢。  
