--- a/steins_gate_0/docs/0054.md
+++ b/steins_gate_0/docs/0054.md
@@ -17,7 +17,7 @@
 “啊……这的确像是真由喜的风格。”  
 听到这些，我居然在双重意义上感到了安心，也稍微陷入了自我厌恶之中。就算真由理在未来和谁结婚，只要她幸福的话，这明明是值得高兴的事情啊……明明应该这样的。  
 “我受真由姐之托照顾篝。所以，本来不应该变成这种情况的——  
-&emsp;&emsp; 那孩子之前一直粘着真由姐，到这个时代谁都不认识，内心肯定一直充满不安……”  
+ 那孩子之前一直粘着真由姐，到这个时代谁都不认识，内心肯定一直充满不安……”  
 “那孩子为什么会走散？刚才说，遇到了麻烦是吧？”  
 年仅10岁的她通过时间机器来到未知的时代，能依靠的应该只有铃羽一人。应该不可能离开铃羽独自跑掉的。  
 “我也不清楚。但是跳回过去的篝，精神显得相当不安定……”  
@@ -32,7 +32,7 @@
 当然前提是还活着的话。就算日本再怎么和平安全，这么小的孩子想一个人生活下去还是太艰难了。如果运气好的话，她可能受到保护被带到了某处的设施里；如果不是这样的话——铃羽应该也考虑到这种可能性了吧。这种话实在是说不出口。  
 “……呐，冈伦，来帮个忙吧。”  
 “……毕竟是真由理的养女。这样的话，我也想找到她。  
-&emsp;&emsp; 不过……铃羽觉得可以吗？对于我来帮忙这件事……？”  
+ 不过……铃羽觉得可以吗？对于我来帮忙这件事……？”  
 铃羽现在肯定在轻视着我，这个本来还有拯救世界的机会却放弃的我。她会想要我这种人来帮忙吗……  
 “……叔叔如果不介意的话，我觉得人还是越多越好……”  
 “……这样啊。那就让我来帮忙吧。”  
@@ -69,8 +69,8 @@
 “圣诞派对吗……”  
 “铃小姐是第一次参加吗？”  
 “因为在我们那个时代，没有举办派对的空闲呢。  
-&emsp;&emsp; 但是曾有一次，爸爸不知从哪里弄来了很好吃的鸡。  
-&emsp;&emsp; 然后真由姐说要亲自来料理它，被爸爸阻止了……”  
+ 但是曾有一次，爸爸不知从哪里弄来了很好吃的鸡。  
+ 然后真由姐说要亲自来料理它，被爸爸阻止了……”  
 铃羽像是在怀念过去——不，在怀念未来的样子，表情很缓和地望向真由理。  
 “虽然只是比平时稍微好吃一点点的饭菜，但就算这样我还是很开心……”  
 在通向第三次世界大战的未来里，应该没有庆祝的空闲。就算在这样的世界里，真由理果然还是真由理——她一直都怀着和现在一样，想给大家带来笑容的心情吧。  
