--- a/steins_gate_0/docs/0055.md
+++ b/steins_gate_0/docs/0055.md
@@ -52,8 +52,8 @@
 “嗯……”  
 “有结果了？”  
 “网上搜索后，没有信息显示1998后有名为椎名篝的女性卷入事件或事故。  
-&emsp;&emsp; 找到了三个同姓同名的人。但考虑年龄他们是你要找的人的可能性很低。  
-&emsp;&emsp; 你想的话，一会也可以把他们的资料传给你。”  
+ 找到了三个同姓同名的人。但考虑年龄他们是你要找的人的可能性很低。  
+ 你想的话，一会也可以把他们的资料传给你。”  
 “不、不用了。”  
 冷静想想，在网上搜索人名的事铃羽应该早做过了。而且“红莉栖”说的不可能会错。我所认识的牧濑红莉栖，无论何时都是正确的。  
 “那，我能做的就这些了。之后就由你们去做吧，用只有你们才能用的方法。”  
