--- a/steins_gate_0/docs/0057.md
+++ b/steins_gate_0/docs/0057.md
@@ -31,7 +31,7 @@
 “但是，听说了有麻花辫的幽灵出现的事。”  
 “麻花辫的幽灵？”  
 “是喵。听说那个幽灵隔几年就出现一次，到处找人问有没有见过一个小女孩喵。  
-&emsp;&emsp; 而且不论经过多少年样子都不变，最近已经被传说成了麻花辫的幽灵喵。”  
+ 而且不论经过多少年样子都不变，最近已经被传说成了麻花辫的幽灵喵。”  
 ……怎么想说的都是铃羽。她要是知道自己被看作幽灵，会露出什么表情呢？脑补着那个样子，我强忍住笑走向了广播馆。目的当然是为了获得篝的情报。篝和铃羽分开，就是在这个广播馆。也就是说最有可能有线索的地方，也是这里。到广播馆里挨家问了各个店，但没有得到任何信息。想必铃羽之前也这样问过了吧，这结果也在意料之中。但是，也不能因此就这么放弃。  
 
 ![](../pics/0057-3.png)
