--- a/steins_gate_0/docs/0000.md
+++ b/steins_gate_0/docs/0000.md
@@ -50,9 +50,9 @@
 我是，杀人犯。  
 
 “都是白费的……不管用什么方法，都是白费的……  
-&emsp;&emsp; 呵，呵呵呵……一切，都是早已注定的……  
-&emsp;&emsp; 都一样……跟真由理那时候，一样的……  
-&emsp;&emsp; 不管，如何挣扎……结果都，一样的……”  
+ 呵，呵呵呵……一切，都是早已注定的……  
+ 都一样……跟真由理那时候，一样的……  
+ 不管，如何挣扎……结果都，一样的……”  
 不管重来多少次，肯定会收束成为同样的结果。  
 与过程无关。  
 不管是时间跳跃还是时间旅行，都不可能改变过去的结果。  
@@ -63,8 +63,8 @@
 ![](../pics/0000-3.png)
 
 “都明白的…一开始就明白的……这种结果…早就是预料之中的……  
-&emsp;&emsp; 已经…累了……我一直，都没休息……所以，已经够了……  
-&emsp;&emsp; 哈哈，哈……”  
+ 已经…累了……我一直，都没休息……所以，已经够了……  
+ 哈哈，哈……”  
 
 真由理：“冈伦……你到底遇到了什么事……”  
 “是我…是我杀的…是我杀死她的……简直像个傻瓜…这全都是我的错……”  
@@ -73,33 +73,33 @@
 铃羽：“不过请放心，还能在跳跃一次的。”  
 “别管我……我这种人，不管进行几次……结局都一样的……”  
 铃羽：“说什么呢！？难道要放弃了吗！  
-&emsp;&emsp; 冈伦叔叔你的肩上，可是扛着数十亿人的性命啊！  
-&emsp;&emsp; 只是失败一次有什么好沮丧的！”  
+ 冈伦叔叔你的肩上，可是扛着数十亿人的性命啊！  
+ 只是失败一次有什么好沮丧的！”  
 “不管怎么样，都救不了红莉栖的……我们根本无法忤逆世界线的收束！”  
 这就是，世界的真理。  
 这是早就清楚得不能再清楚的事情了。  
 
 铃羽：“唔……这样的话，就算硬来我也要让你振作起来！”  
 真由理：“不行啊！这么勉强他，是不好的啊……  
-&emsp;&emsp; 变得这么颓废的冈伦，我根本看不下去啊……”  
+ 变得这么颓废的冈伦，我根本看不下去啊……”  
 铃羽：“可是啊，这样下去，是无法改变未来的啊。”  
 真由理：“为什么？为什么要把未来的事，都推给冈伦呢？  
-&emsp;&emsp; 这实在，太沉重了……”  
+ 这实在，太沉重了……”  
 铃羽：“这都是因为冈伦叔叔，有着成为世界观测者的能力啊。”  
 真由理：“冈伦他，明明没有期望过这个……  
-&emsp;&emsp; 而且我觉得，就算是再尝试一次，也只会继续让冈伦受伤……  
-&emsp;&emsp; 让一个人来改变未来这种事，肯定是办不到的啊……”  
+ 而且我觉得，就算是再尝试一次，也只会继续让冈伦受伤……  
+ 让一个人来改变未来这种事，肯定是办不到的啊……”  
 铃羽：“所以说，为此才有这**Steins;Gate（命运石之门）**……  
-&emsp;&emsp; 你的心情我明白。但是啊，我也是从未来，来到这里的啊。  
-&emsp;&emsp; 不论如何我也回不去2036年了，所以我不会就这么放弃的。”  
+ 你的心情我明白。但是啊，我也是从未来，来到这里的啊。  
+ 不论如何我也回不去2036年了，所以我不会就这么放弃的。”  
 真由理：“……”  
 铃羽：“冈伦叔叔，有一点我要提醒你。  
-&emsp;&emsp; 留给这台时间机器的燃料，是有限的。  
-&emsp;&emsp; 虽然我之前说最多还能来回两次，但其实还是有点剩余的。  
-&emsp;&emsp; 不过，也只够移动**344**天。  
-&emsp;&emsp; 即使是单程时间跳跃，超过从现在开始的不到一年的时间，  
-&emsp;&emsp; 就再也没办法到达7月28日了。  
-&emsp;&emsp; 请记住了，到了那天，即使只有我一个人，我也会跳跃的。”  
+ 留给这台时间机器的燃料，是有限的。  
+ 虽然我之前说最多还能来回两次，但其实还是有点剩余的。  
+ 不过，也只够移动**344**天。  
+ 即使是单程时间跳跃，超过从现在开始的不到一年的时间，  
+ 就再也没办法到达7月28日了。  
+ 请记住了，到了那天，即使只有我一个人，我也会跳跃的。”  
 
 “……”  
 有谁在对我说着些什么。  
@@ -109,9 +109,9 @@
 快放过我吧。  
 
 真由理：“冈伦？冈伦……呐，冈伦……  
-&emsp;&emsp; 已经，不用拼命了哦。  
-&emsp;&emsp; 就算哭出来也可以哟，冈伦。  
-&emsp;&emsp; 真由喜会一直在你身边的，冈伦。”  
+ 已经，不用拼命了哦。  
+ 就算哭出来也可以哟，冈伦。  
+ 真由喜会一直在你身边的，冈伦。”  
 
 “……（啜泣）”    
 不知是不是因为真由理的话，  
