--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -30,7 +30,7 @@
 但是，是男的。  
 他是真由理的同级生，经常能够看见他在自家柳林神社那儿帮忙的样子。实际上，“琉华子”这么叫本身就不太对来着。就像我跟菲莉丝说不要叫我“凶真”那样，他也是有“漆原琉华”这么个名字的。但是，到了现在让我去叫琉华子“琉华”这样……那啥，还是……有点难为情。  
 “总觉得，挺让人怀念的感觉啊。  
-&emsp;&emsp; 我时常还是会去LAB那露个面，但是冈部先生，最近好像都没怎么过来呢。”  
+ 我时常还是会去LAB那露个面，但是冈部先生，最近好像都没怎么过来呢。”  
 “啊，啊啊……大学那研讨课很忙啊，还要做好ATF的准备什么的。”  
 就算那些方面的准备都完成了，现在又多了雷斯吉宁教授跟比屋定真帆的事，还有就是……『Amadeus』那些事也是，完全没有什么空余的时间。  
 但是，这个话题并没有对这三个人说。  
@@ -51,9 +51,9 @@
 “嗯——这说来话长……大学研讨课的准教授是网球部的顾问，然后就被拉进去了。”  
 “根本一点都不长喵……”  
 “嘛，听我说啊。因为对方是经常给我照顾的人，所以姑且去社团露个头。  
-&emsp;&emsp; 于是，没想到我居然有着网球这方面的才能啊！  
-&emsp;&emsp; 明明是个初学者，但是却把那群社团成员给连战连胜了。  
-&emsp;&emsp; 怎么样，是不是很厉害啊？”  
+ 于是，没想到我居然有着网球这方面的才能啊！  
+ 明明是个初学者，但是却把那群社团成员给连战连胜了。  
+ 怎么样，是不是很厉害啊？”  
 菲莉丝：“哈啊……”  
 琉华子：“冈部先生，果然是很厉害的！”  
 “哈哈哈，既然是这样的话，向着职业网球运动员的目标去也未尝不可啊！”  
@@ -62,8 +62,8 @@
 “嗯？怎么了吗菲莉丝？头疼吗？”  
 菲莉丝：“该从哪里开始吐槽呢……不管怎么看，这都是社团为了拉新人而设计的陷阱啊喵……”  
 “别，别直接说出来啊……  
-&emsp;&emsp; 我好歹，虽然也有想过是不是有什么小九九——。  
-&emsp;&emsp; 但也装作不去想的样子啊。大家都是好人啊。”  
+ 我好歹，虽然也有想过是不是有什么小九九——。  
+ 但也装作不去想的样子啊。大家都是好人啊。”  
 琉华子：“那，社团的练习会很忙的吧……”  
 “啊，没……练习基本上是没怎么去的……”  
 琉华子：“啊？”  
@@ -101,10 +101,10 @@
 因此我也，尽量明快的回答她：  
 “说出来听听吧，真由理。”  
 “嗯！那个呢，真由喜在想，铃小姐平时虽然看起来很可怕，其实说不定是非常温柔的人呢？  
-&emsp;&emsp; 在LAB的时候呢，在沙发上迷迷糊糊睡着，不知什么时候盖上了毯子。  
-&emsp;&emsp; 就算向铃小姐询问，‘那种事情我不知道’——她也只会这样回答我。”  
+ 在LAB的时候呢，在沙发上迷迷糊糊睡着，不知什么时候盖上了毯子。  
+ 就算向铃小姐询问，‘那种事情我不知道’——她也只会这样回答我。”  
 “啊，我也有这样的事情！以前，被父亲派去买东西，回去的路上正因为东西太重在烦恼。  
-&emsp;&emsp; 然后，阿万音小姐正好路过，什么也没说，帮我拿了东西。”  
+ 然后，阿万音小姐正好路过，什么也没说，帮我拿了东西。”  
 “诶，我还是第一次听说呢。”  
 “她说，‘这种理所当然的事情，不要对别人说了’——啊，说漏嘴了……”  
 “是吗……”  
@@ -116,7 +116,7 @@
 “圣诞晚会？”（×3）  
 同步了！  
 “不是马上就要圣诞节了吗？铃小姐呢，说从来没有去过圣诞晚会。  
-&emsp;&emsp; 所以真由喜想把这个当作礼物送给铃小姐。”  
+ 所以真由喜想把这个当作礼物送给铃小姐。”  
 听到这话的菲莉丝和琉华子，几乎同时点了下头。  
 “这件事，我参加了喵！”  
 “我也是！”  
@@ -127,8 +127,8 @@
 不会再跳跃到过去。我这样说的时候铃羽的表情，就算到了今天也无法忘记。充满了愤怒和绝望的表情，就像刚抓到手的最后的希望从眼前消失的感觉吧。她那个时候对我说的话，现在也像锐利的刺一样扎在我的心上。  
 “铃羽……很讨厌我的……”  
 “真由喜并不这么认为哟。  
-&emsp;&emsp; 铃小姐呢，是不是因为对冈伦发火的事情，在后悔着呢？  
-&emsp;&emsp; 我想，她肯定是无法坦率地说出来这份心情的。”  
+ 铃小姐呢，是不是因为对冈伦发火的事情，在后悔着呢？  
+ 我想，她肯定是无法坦率地说出来这份心情的。”  
 “是这样的吗？”  
 “嗯，一定是这样的。”  
 既然真由理都这么说了，也不能拒绝了吧。  
@@ -140,7 +140,7 @@
 “……诊察，怎么样了？”  
 琉华子大概是从真由理那里听说了心理咨询的事情。今天特意通过真由理想要见面，也许是在意诊察的结果吧。琉华子和菲莉丝，也让她们担心了呢。在这个世界线，两人虽然不是LABMem，但作为无可替代的伙伴这一点并没有不同。  
 “催眠疗法这样的虽然是初体验，真是相当有趣啊。  
-&emsp;&emsp; 我至今为止都认为我不会中什么催眠术的，吃惊了。”  
+ 我至今为止都认为我不会中什么催眠术的，吃惊了。”  
 “中招了吗？”  
 “完全的呢。”  
 “诶？”  
