--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -4,17 +4,17 @@
 
 阿万音铃羽，现在正处于爆发的边缘。究其原因，是同处一室的青年——此人正是自己的家属。桥田至，外号桶子，正窝着那脑满肠肥的身子，满脸不正经地盯着显示器。时针即将指向11点之际他才爬出被窝，一口气连汤带水地干掉了三桶泡面之后，悠哉游哉地上起网来。  
 “唔……哦？噢噢噢！神马玩意？  
-&emsp;&emsp; ‘现充灭绝-P’和‘帕特农氏’居然是两口子？！什么鬼我怎么不知道！  
-&emsp;&emsp; 卧槽自称‘现充灭绝-P’的真人居然是现充？现实中有老婆？  
-&emsp;&emsp; 简直狗！太狗了！  
-&emsp;&emsp; 咕呜呜……亏我还把他当成同为单身狗的战友！  
-&emsp;&emsp; 这下得打起来了吧，都得众人抬柴了吧……  
-&emsp;&emsp; 喔，想不到@ch和Twipper都已经烧得通红了！  
-&emsp;&emsp; 我居然落于人后！得赶紧把事情原委过一遍……”  
+ ‘现充灭绝-P’和‘帕特农氏’居然是两口子？！什么鬼我怎么不知道！  
+ 卧槽自称‘现充灭绝-P’的真人居然是现充？现实中有老婆？  
+ 简直狗！太狗了！  
+ 咕呜呜……亏我还把他当成同为单身狗的战友！  
+ 这下得打起来了吧，都得众人抬柴了吧……  
+ 喔，想不到@ch和Twipper都已经烧得通红了！  
+ 我居然落于人后！得赶紧把事情原委过一遍……”  
 “**爸爸**！”  
 铃羽如此称呼桶子。事实就是如此，也没有别的称呼方式。因为铃羽是乘坐着时间机器，从2036年来的时间旅行者，而她的父亲正是**7年之后的桥田至**。  
 “你正经一点好不好？成天无所事事，要么吃要么上网，要么就打游戏……  
-&emsp;&emsp; 我警告你多少回了？每天只吃些方便面和零食会让身体产生病变，你就是听不进去！”  
+ 我警告你多少回了？每天只吃些方便面和零食会让身体产生病变，你就是听不进去！”  
 实际上，电脑桌上散落着许多膨化食品的碎渣子，尽管定时清理，仍不见减少的迹象。  
 “我还劝你多运动，可你根本不上心！”  
 铃羽也心知自己最近变得有些啰嗦，可是有些话不说不行。  
@@ -27,15 +27,15 @@
 “铃……铃羽，你再不收手，爸爸可要生气了哦？”  
 “这话应该用在你自己身上。”  
 “对不起，爸爸错了……  
-&emsp;&emsp; 不过呐，你知道我的地下工作吧？那可是很忙的。  
-&emsp;&emsp; 向我这种超级骇客多少人抢着要呢！  
-&emsp;&emsp; 连饭都只能随便对付了啊喂！  
-&emsp;&emsp; 而且跟国外的主顾有时差，昼夜颠倒了啊喂！”  
+ 不过呐，你知道我的地下工作吧？那可是很忙的。  
+ 向我这种超级骇客多少人抢着要呢！  
+ 连饭都只能随便对付了啊喂！  
+ 而且跟国外的主顾有时差，昼夜颠倒了啊喂！”  
 “未来的你总是找这些借口，经常招来妈妈的一顿臭骂。”  
 “……”  
 “退一百步，就算睡眠周期扳不过来，  
-&emsp;&emsp; 但是我无法容忍你有损健康的饮食习惯！  
-&emsp;&emsp; 给我立刻停摆，ok？”  
+ 但是我无法容忍你有损健康的饮食习惯！  
+ 给我立刻停摆，ok？”  
 “可是啊……工作且不说，研究时间机器可是超费事的，需要治愈啊我。”  
 “你总是找种种借口开小差，你太天真了，爸爸！”  
 在战事不断的未来，这样的父亲居然能活下来，这让铃羽反而感到佩服。话虽如此，“开发时间机器”这件事关系到铃羽自身在未来和现在的处境，所以她没法轻易让父亲罢手。  
@@ -51,9 +51,9 @@
 “真心别介……”  
 铃羽把那个喷雾放回了架子。顺便一提，它是以前来这里过夜的冈部伦太郎忘记拿走的。现在它被闲置在这里，而主人也不来拿走它。  
 “要是漫画或游戏里，责怪父亲的女儿应该这样，萌得爆表——  
-&emsp;&emsp; 铃羽铃羽，那个，你能不能说，  
-&emsp;&emsp; ‘矮油，爸拔不要啦’？最好用撒娇的口气——  
-&emsp;&emsp; 这话当我没说是也……”  
+ 铃羽铃羽，那个，你能不能说，  
+ ‘矮油，爸拔不要啦’？最好用撒娇的口气——  
+ 这话当我没说是也……”  
 被铃羽恶狠狠地一瞪，桶子立马怂了。  
 “唉……”  
 铃羽长叹一口气，一屁股坐在沙发上，靠着靠背，仰着脖子，闭上双眼。  
@@ -70,23 +70,23 @@
 “爸爸，我奉劝你，不要妄想着‘攻略我’！”  
 “才没有！我怎么会对亲生女儿那样呢！”  
 “是吗？未来的你可是有点怪怪的哦？  
-&emsp;&emsp; 我进了青春期，你也是经常要拉我一起洗澡……”  
+ 我进了青春期，你也是经常要拉我一起洗澡……”  
 “你可别吓死爸爸……”  
 “虽说我是军队编制，爸爸也在夜以继日地研发时间机器，不能随时团聚……  
-&emsp;&emsp; 总之你太黏着我了，简直郁闷。”  
+ 总之你太黏着我了，简直郁闷。”  
 见到父亲像泄了气的皮球一样，铃羽意识到自己说过头了，便有些不好意思。  
 “爸爸你呀，总是对我讲，  
-&emsp;&emsp; 这条世界线虽然恶劣透顶，但我的出生却是最棒的。  
-&emsp;&emsp; 我不想让未来的爸爸失望。所以我必须说服冈伦叔叔……”  
+ 这条世界线虽然恶劣透顶，但我的出生却是最棒的。  
+ 我不想让未来的爸爸失望。所以我必须说服冈伦叔叔……”  
 “没事的，我不会失望的，绝对的。”  
 “是吗？”  
 “嗯。”  
 “可是呀，冈伦叔叔他……就是不肯听我一句……  
-&emsp;&emsp; 这样下去，冈伦叔叔就不会回到过去；  
-&emsp;&emsp; 他拯救不了牧濑红莉栖，也就无法抵达命运石之门……”  
+ 这样下去，冈伦叔叔就不会回到过去；  
+ 他拯救不了牧濑红莉栖，也就无法抵达命运石之门……”  
 命运石之门（*Steins;Gate*)，那是2036年的父亲告诉自己的，第三次世界大战也许不会发生的“未知世界线”。要将冈部伦太郎指引向那条世界线，正是阿万音铃羽必须完成的使命。然而，到现在却进展不顺……铃羽来到了2010年，曾经按照计划，成功地将冈部伦太郎带回了7月28日。但是冈部伦太郎却**搞砸**了，于是他再也不愿意站起来了。铃羽每次遇见他就会尝试劝他回心转意，然而他能不能听进去……不好说。  
 “到头来，世界收束到第三次世界大战，死了很多人……  
-&emsp;&emsp; 我明明是为了改变这些才来的，难道我办不到吗……”  
+ 我明明是为了改变这些才来的，难道我办不到吗……”  
 
 而且，铃羽除了说服冈部伦太郎，在2010年冬天的秋叶原还有其他任务在身，每天都要奔波。积攒下来的疲倦，在铃羽身体里渐渐沉淀。虽说在战火中，必须时刻绷紧神经，这种疲劳对自己根本不算什么。这个时代弛缓的氛围，反而让自己意识到了疲劳。就是现在，强烈的睡意席卷了铃羽的身体。她惊讶于自己竟然会犯困，却也经不起睡魔的诱惑——忽然脖子上被贴上什么冰冷而又坚硬的东西，吓得她整个身体都紧绷了起来。  
 “呀啊啊啊啊啊！！”  
@@ -103,9 +103,9 @@
 “真是的……”  
 桶子揉着手腕站起来，捡起掉落在地上的Dr. Pepper罐子，并把其中一个递到铃羽手上。  
 “话说啊，现在放弃还太早了，再稍微努力看看吧。  
-&emsp;&emsp; 冈伦可能只是累得睡着了而已。  
-&emsp;&emsp; 像刚刚那样，拿冰镇Dr. Pepper顶到他的脖子上，就会跳起来了吧。  
-&emsp;&emsp; 毕竟你看，是**那个**冈伦啊。”  
+ 冈伦可能只是累得睡着了而已。  
+ 像刚刚那样，拿冰镇Dr. Pepper顶到他的脖子上，就会跳起来了吧。  
+ 毕竟你看，是**那个**冈伦啊。”  
 “……嗯。”  
 明白这是父亲式的鼓励，铃羽点了点头。  
 
@@ -164,7 +164,7 @@
 桶子把地板上放着的那个像是吸尘器一样的东西拿到以后走出了开发室。  
 “是什么啊，那个？”  
 “未来机械5号机——  
-&emsp;&emsp; 分解开的话，应该是可以当作普通吸尘器来用的。”  
+ 分解开的话，应该是可以当作普通吸尘器来用的。”  
 “明明是为了打扫用的吸尘器，要是还需要分解开的话，不会反而让房间变得更乱吗？”  
 “啊呜……”  
 “哈哈哈，桥田君虽然头脑那么聪明，有时候也会这么笨笨的呢！”  
@@ -173,15 +173,15 @@
 “神……神马？”  
 在桶子这么动摇着的时候，铃羽也跟着叹了一口气。  
 “不过，我想生活上还是改一改的比较好。  
-&emsp;&emsp; 可以的话还是每天都打扫房间比较好哟，这里看起来灰尘格外多。  
-&emsp;&emsp; 除此之外，饮食上也要格外注意。今天也是只吃了杯面是吧？”  
+ 可以的话还是每天都打扫房间比较好哟，这里看起来灰尘格外多。  
+ 除此之外，饮食上也要格外注意。今天也是只吃了杯面是吧？”  
 “为，为什么会知道！？”  
 “厨房那边，吃完的就放在那了。”  
 “原来如此。”  
 “还有还有，居然有这么多的零食。不是一直都叫你别吃这么多了嘛！”  
 “姑且，还是有在注意的……”  
 “姑且可不行。老是吃那么多的方便面跟零食的话会生病的哟。  
-&emsp;&emsp; 还有，尽量的也要运动运动”。  
+ 还有，尽量的也要运动运动”。  
 ……  
 刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了。果然是母女啊……  
 这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
