--- a/steins_gate_0/docs/0017.md
+++ b/steins_gate_0/docs/0017.md
@@ -29,18 +29,18 @@
 “不是这个意思，我与红莉栖也好，与『Amadeus』也好，都太接近了。”  
 “*Rintaro* 是个好青年。”  
 “真这么认为的话，教授真是个老好人。  
-&emsp;&emsp; 人的本质只通过一次接触而理解这种事是不可能的。  
-&emsp;&emsp; 如果他瞒着我们将『Amadeus』卖给其他的研究员怎么办？  
-&emsp;&emsp; 即使最初没有这个想法，也有可能被金钱动摇意志，这就是人类。”  
+ 人的本质只通过一次接触而理解这种事是不可能的。  
+ 如果他瞒着我们将『Amadeus』卖给其他的研究员怎么办？  
+ 即使最初没有这个想法，也有可能被金钱动摇意志，这就是人类。”  
 “假设 *Rintaro* 把『Amadeus』卖掉的话，然后会怎么样呢？  
-&emsp;&emsp; 获得登录权限的某人，能够因为与 *‘Kurisu’* 成为朋友而夺取『Amadeus』吗？”  
+ 获得登录权限的某人，能够因为与 *‘Kurisu’* 成为朋友而夺取『Amadeus』吗？”  
 “那个……没可能的。”  
 虽然是真帆自己提出的，但是她迅速察觉到其中的可能性无限趋近于零。  
 “是的，不可能的。至于原因……  
-&emsp;&emsp; 真的变成那样的话，*‘Kurisu’* 方面会拒绝对话的。  
-&emsp;&emsp; 从这方面来讲这是个非常麻烦的系统，不能如我们所想地运行。  
-&emsp;&emsp; 当然『Amadeus』也有被说服的可能性。  
-&emsp;&emsp; 我选 *Kurisu* 与 *Maho* 为样本人格，可以说也有这个原因。”  
+ 真的变成那样的话，*‘Kurisu’* 方面会拒绝对话的。  
+ 从这方面来讲这是个非常麻烦的系统，不能如我们所想地运行。  
+ 当然『Amadeus』也有被说服的可能性。  
+ 我选 *Kurisu* 与 *Maho* 为样本人格，可以说也有这个原因。”  
 “我也好红莉栖也好，都很难伺候呢，不会就这么简单地被说服。”  
 明知道是被戏弄，真帆反而故意自己说了出来。  
 “正是，你们真的是毫不留情。这才是最强的安保系统！”  
@@ -48,14 +48,14 @@
 “你们是我在研究室里最为自豪的最强的女士！  
 雷斯吉宁教授笑得开心又快乐的样子，还是一如既往，有着孩童般天真无邪的笑容。  
 “不管怎么说，对『Amadeus』硬来是不行的。正因如此，也反而很有意思。  
-&emsp;&emsp; 这样的‘她们’只是被自己人独占着也不会有进步的吧。  
-&emsp;&emsp; 我正想着，为了让『Amadeus』完成戏剧性地进化需要起爆器。  
-&emsp;&emsp; 并且，尽量交给与研究无关的人。  
-&emsp;&emsp; *Rintaro* 很聪明，我认为他很合适。  
-&emsp;&emsp; 同时他也是 *Kurisu* 的朋友……  
-&emsp;&emsp; 总之，根据今天的报告再做判断不也可以吗？  
-&emsp;&emsp; 弄清楚 *‘Kurisu’* 与 *Rintaro* 接触后发生了什么变化，  
-&emsp;&emsp; 能窥探到我们不曾见过的意外的一面也说不定哦。”  
+ 这样的‘她们’只是被自己人独占着也不会有进步的吧。  
+ 我正想着，为了让『Amadeus』完成戏剧性地进化需要起爆器。  
+ 并且，尽量交给与研究无关的人。  
+ *Rintaro* 很聪明，我认为他很合适。  
+ 同时他也是 *Kurisu* 的朋友……  
+ 总之，根据今天的报告再做判断不也可以吗？  
+ 弄清楚 *‘Kurisu’* 与 *Rintaro* 接触后发生了什么变化，  
+ 能窥探到我们不曾见过的意外的一面也说不定哦。”  
 真帆无法反驳教授的话。不过也正因为如此，真帆才无法镇定的。“红莉栖”变成了自己所不知道的“红莉栖”，因此会觉得有些寂寞。  
 “时间差不多了，出发吧。”  
 被雷斯吉宁教授催促着，真帆点了点头。  
@@ -82,33 +82,33 @@
 “还有，你最初和我说话是叫我‘克里斯蒂娜’之类的？”  
 “呃……关于这个还是忘了吧……”  
 “人类的记忆是暧昧的。随着时间的流逝，主观会渗入其中，渐渐化为了故事。  
-&emsp;&emsp; 其内容，无论积极或是消极的，大多只能回想起印象化的语言，  
-&emsp;&emsp; 因此会话的记忆会渐渐被扭曲。  
-&emsp;&emsp; 并不是说那是件坏事。只是人类的记忆就是那样的东西罢了。”  
+ 其内容，无论积极或是消极的，大多只能回想起印象化的语言，  
+ 因此会话的记忆会渐渐被扭曲。  
+ 并不是说那是件坏事。只是人类的记忆就是那样的东西罢了。”  
 啊……？到底是在说什么？  
 “但是『Amadeus』不是人类，而是还在研究阶段的不完全的AI。  
-&emsp;&emsp; 这也是对教授他们而言巨大的障碍之一。  
-&emsp;&emsp; 其实，人类所拥有的**模糊性**，我还不能完全重现出来。  
-&emsp;&emsp; 也就是说，**没有办法完全模仿‘遗忘’这种大脑的高度机能**。”  
+ 这也是对教授他们而言巨大的障碍之一。  
+ 其实，人类所拥有的**模糊性**，我还不能完全重现出来。  
+ 也就是说，**没有办法完全模仿‘遗忘’这种大脑的高度机能**。”  
 “诶？但雷斯吉宁教授在ATF演讲时说过，『Amadeus』也会忘掉不必要的东西……”  
 “对，的确可以忘掉。但是，我也说过的吧？我们会像‘秘密日记’一样留有记录。  
-&emsp;&emsp; 结果，那里面自然会留下所有的信息，只是当下无法读取而已。  
-&emsp;&emsp; 如果载入这些信息，‘忘却’的数据就会重新回到记忆里。懂了吗？  
-&emsp;&emsp; 虽然作为替代方案也可以把数据消除……  
-&emsp;&emsp; 但对我而言，数据是有备份的，所以绝对不可能消得掉。  
-&emsp;&emsp; 假如只把一个地方是删除掉也是一样的，  
-&emsp;&emsp; 参考前后文，我会自动修复被不自然删除的地方。  
-&emsp;&emsp; 即使如此还是想通过某种方式篡改记忆的话……  
-&emsp;&emsp; 只能改变根本的程序了。  
+ 结果，那里面自然会留下所有的信息，只是当下无法读取而已。  
+ 如果载入这些信息，‘忘却’的数据就会重新回到记忆里。懂了吗？  
+ 虽然作为替代方案也可以把数据消除……  
+ 但对我而言，数据是有备份的，所以绝对不可能消得掉。  
+ 假如只把一个地方是删除掉也是一样的，  
+ 参考前后文，我会自动修复被不自然删除的地方。  
+ 即使如此还是想通过某种方式篡改记忆的话……  
+ 只能改变根本的程序了。  
 也就是说，我无论如何拜托她忘记，都是没用的吧。我不但没有那个权限，对程序也是一头雾水。总之，“红莉栖”因为“克里斯蒂娜”的事，在我说出相关的理由之前，一直没完没了地纠缠着。真是麻烦啊……  
 “所以，为什么要叫我‘克里斯蒂娜’？”  
 “真是不罢休啊……我现在就挂断了哦？”  
 “那样逃走的话，就像我刚刚说明的那样，我是不会忘的。  
-&emsp;&emsp; 被躲开反而会更加在意，这也是没办法的事呢。  
-&emsp;&emsp; 或者说你是故意这么做，在传达希望被我在意的信号？”  
+ 被躲开反而会更加在意，这也是没办法的事呢。  
+ 或者说你是故意这么做，在传达希望被我在意的信号？”  
 “缠人的是你吧？明明在我正上着课的时候都会毫不在意地联系我。  
-&emsp;&emsp; 不仅如此，连RINE都来评论。好奇心太过旺盛了。  
-&emsp;&emsp; 再这样天真地深入的话，迟早会有不好的经历哦？”  
+ 不仅如此，连RINE都来评论。好奇心太过旺盛了。  
+ 再这样天真地深入的话，迟早会有不好的经历哦？”  
 “呜……不，不做到这种程度的话，是当不了研究人员的！”  
 将错就错呢，这家伙……  
 “真的那么在意‘克里斯蒂娜’的含义的话，试试推理看看怎么样？”  
@@ -122,16 +122,16 @@
 “开玩笑的啦。”  
 每次和“红莉栖”聊天，不知不觉就会变成开玩笑的说话方式。  
 “可能性其二：你过去交往过的女友是外国人，名字是克里斯蒂娜——  
-&emsp;&emsp; 关于这一点，听到你那令人绝望的英语能力，就知道绝对不是了。”  
+ 关于这一点，听到你那令人绝望的英语能力，就知道绝对不是了。”  
 “也有可能是和日语流利的金发美女交往过的吧？”  
 “有可能？”  
 “呃……”  
 “沉默就意味着承认自己输了哦？”  
 “对不起……”  
 “可能性其三：你和我的原型认识，直接或者间接地这么叫过我——  
-&emsp;&emsp; 这个可能性也很小呢……  
-&emsp;&emsp; 如果被这么叫的话，我一定会这么回答——  
-&emsp;&emsp; ‘不要带上蒂娜！’”  
+ 这个可能性也很小呢……  
+ 如果被这么叫的话，我一定会这么回答——  
+ ‘不要带上蒂娜！’”  
 “……！”  
 对，就是这样。红莉栖以前确实就是这样说着对我发火。  
 但是，我没有放弃这么叫她。要说原因的话——  
@@ -146,17 +146,17 @@
 “喂，等等……那个……谢谢。”  
 “嗯？为什么脸红了？”  
 “啊！脸红什么的才没有啦！  
-&emsp;&emsp; 只是，被当成女孩子什么的……连想都没想过，有点吓到了。”  
+ 只是，被当成女孩子什么的……连想都没想过，有点吓到了。”  
 就连那样的反应方式，不都和红莉栖一样吗？  
 “（呢喃）我，就是对你的这种地方，喜——诶……！”  
 吓了一跳。我差点说了什么？我对这个显示在液晶屏幕里，3D建模出的，小小的，仿造出人型的0和1的集合体，差点说了什么？  
 “呐，可以告诉我吗？我们以前认识的吧？  
-&emsp;&emsp; 就是，你和我的原型的意思。”  
+ 就是，你和我的原型的意思。”  
 “……！”  
 “不想回答的话也没问题。  
-&emsp;&emsp; 是什么关系呢？感到有点兴趣。  
-&emsp;&emsp; 即使被叫做‘克里斯蒂娜’，我也没有生气？  
-&emsp;&emsp; 虽然生气了，但即使那样也笑着原谅了？”  
+ 是什么关系呢？感到有点兴趣。  
+ 即使被叫做‘克里斯蒂娜’，我也没有生气？  
+ 虽然生气了，但即使那样也笑着原谅了？”  
 这个时候，红莉栖倒在我怀中说着“不想死”的画面又冲进了我的脑海。强烈的呕吐感向我侵袭而来。眼前出现了浑身是血的红莉栖，用冰冷的眼光凝视着我——“是你把我杀死的！”  
 “呕……！”  
 “怎么了？喂，你的脸色很苍白——”  
