--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -27,7 +27,7 @@
 “真是热闹啊……”  
 “诶嘿嘿~现在正在绝赞准备中~”  
 吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟~  
-&emsp;&emsp; 顺便一提，胖次的颜色是粉色da☆ze！”  
+ 顺便一提，胖次的颜色是粉色da☆ze！”  
 “呼哇！吹雪酱你在说些什么啊！！”  
 “哦……”  
 “那，那个……对不起呢，让你听到了奇怪的话。总而言之，等你哦~”  
@@ -46,7 +46,7 @@
 “可以的话，比屋定也一起来吧？”  
 一直遇到那种事情，消遣应该是很有必要的。  
 “我？用不着为我操心。能够像这样一个人做研究，是很轻松的。  
-&emsp;&emsp; 毕竟不用为人际关系而烦恼。”  
+ 毕竟不用为人际关系而烦恼。”  
 “这样啊。”  
 红莉栖也说过类似的话呢。红莉栖……  
 “比起这些，快点进入正题吧！”  
@@ -60,9 +60,9 @@
 “你真是个奇怪的人。”  
 比屋定的反应让我很意外。有这么奇怪吗？  
 “最后一次说话的时候，真的是过于动摇的我的错，很强硬地打断了她。  
-&emsp;&emsp; 以她的性格来看，确实会生气的吧——不，肯定生气了。  
-&emsp;&emsp; 因为和她半吊子的联系，而24小时一直被看不见的压力压得喘不过气……  
-&emsp;&emsp; 请你考虑下这样的我的心情啊。”  
+ 以她的性格来看，确实会生气的吧——不，肯定生气了。  
+ 因为和她半吊子的联系，而24小时一直被看不见的压力压得喘不过气……  
+ 请你考虑下这样的我的心情啊。”  
 虽然是雷斯吉宁教授考虑到过的结果，但对我来说，可能把访问权拿走的话会比较轻松吧。  
 “用不着那么害怕吧……‘红莉栖’也不会主动来联系你，应该有这么说过吧？”  
 “虽说是这样……我也不想变成像赌气而不联系之类的那种事。”  
@@ -73,22 +73,22 @@
 “啊，是啊……”  
 就算这么说，也想不到有什么算是应景的话。  
 “怎么了？快点登录吧。  
-&emsp;&emsp; 教授说过的，登录权限还保留着。  
-&emsp;&emsp; 只要按下那个图标，就随时能联系上了。  
-&emsp;&emsp; 你一直这么盯着手机，也没什么用啊。”  
+ 教授说过的，登录权限还保留着。  
+ 只要按下那个图标，就随时能联系上了。  
+ 你一直这么盯着手机，也没什么用啊。”  
 “我……我知道了。别催我啊。”  
 可以说是麻烦了，但是在比屋定推动下我终于又一次按下了那个图标。
 
 “……！？等下……  
-&emsp;&emsp; 你……居然又打电话来了？  
-&emsp;&emsp; 啊？干、干什么？有什么事？”  
+ 你……居然又打电话来了？  
+ 啊？干、干什么？有什么事？”  
 额，这家伙现在毫无准备呐。  
 “哟……”  
 “嗯……”  
 “……”  
 “您好，冈部伦太郎先生。  
-&emsp;&emsp; 找我有什么事吗？  
-&emsp;&emsp; 不是已经不想和我说话了吗？”  
+ 找我有什么事吗？  
+ 不是已经不想和我说话了吗？”  
 “不是……这个……”  
 我的眼睛看向比屋定，向她寻求着帮助。  
 “‘红莉栖’，他有一些话要说，所以请稍微听一下。”  
@@ -100,24 +100,24 @@
 “是我不好。”  
 我微微躬身并低下了头，作出诚恳认错的姿态。  
 “明明是你在陪我，我却辜负了你的好意。  
-&emsp;&emsp; 并且在这之前，说到最后的时候，急急忙忙地打断了你。  
-&emsp;&emsp; 这件事我也真的觉得自己很失礼。  
-&emsp;&emsp; 是因为想起了自己以前的一些事，然后脑子就变得十分乱。  
-&emsp;&emsp; 但是，这并不是因为你的原因。  
-&emsp;&emsp; 在辞去测试员一职之前，想着至少也要和你道一声歉。  
-&emsp;&emsp; 就是这些。”  
+ 并且在这之前，说到最后的时候，急急忙忙地打断了你。  
+ 这件事我也真的觉得自己很失礼。  
+ 是因为想起了自己以前的一些事，然后脑子就变得十分乱。  
+ 但是，这并不是因为你的原因。  
+ 在辞去测试员一职之前，想着至少也要和你道一声歉。  
+ 就是这些。”  
 “噗……”  
 和刚才的比屋定一样，“红莉栖”也忍不住笑了出来。  
 “这些话……当真的吗？”  
 “什，什么嘛，我明明很认真的在道歉的说，竟然笑我……”  
 “但是你看，我可是人工智能呀。  
-&emsp;&emsp; 明知如此，却摆出那样老实的表情，认真地和我道歉什么的……  
-&emsp;&emsp; 在这之前，你也说过和我说话是一件很害羞的事对吧。  
-&emsp;&emsp; 真是奇怪的人呢。”  
+ 明知如此，却摆出那样老实的表情，认真地和我道歉什么的……  
+ 在这之前，你也说过和我说话是一件很害羞的事对吧。  
+ 真是奇怪的人呢。”  
 向人工智能义正言辞地道歉什么的……这是，奇怪的事吗？  
 算是吧……  
 “算啦，老实说虽然有点小失望，我会重新考虑的。  
-&emsp;&emsp; 如果接受了我提出的交换条件，那就一笔勾销。”  
+ 如果接受了我提出的交换条件，那就一笔勾销。”  
 “交换条件是指？”  
 到底会让我做什么呢？虽然只有一股不好的预感……  
 “我知道了。那个什么条件什么的，说吧。”  
@@ -133,12 +133,12 @@
 “那么冈部先生，条件你是接受还是不接受呢？”  
 这家伙，为什么眼睛这么闪闪发光啊。  
 “我知道了啦。  
-&emsp;&emsp; 比屋定小姐，刚才说到的派对，现在正式邀请你。希望你务必要来。”  
+ 比屋定小姐，刚才说到的派对，现在正式邀请你。希望你务必要来。”  
 “派对？”  
 “朋友们一起，要开圣诞派对。”  
 “我说的不是这意思啊……
-&emsp;&emsp; ……等等，但是突然要两个人单独相处可能会比较困难……  
-&emsp;&emsp; 反过来这样应该会比较好吧。”  
+ ……等等，但是突然要两个人单独相处可能会比较困难……  
+ 反过来这样应该会比较好吧。”  
 “‘红莉栖’，再开这种玩笑的话，我可是会生气的哟！我是不会去什么派对的。”  
 “那么，我也就不会原谅冈部先生了哦？”  
 “比屋定小姐……拜托了。”  
@@ -150,9 +150,9 @@
 比屋定突然变成放下心来的表情，把自己桌上的文件夹打了开来。  
 “欢迎回来，教授。这是今天汇总出的一些数据——”  
 “*Maho，stop!*  
-&emsp;&emsp; 两个人待会不出去玩玩吗？难得的平安夜呢。  
-&emsp;&emsp; 工作都放一边，去吃点东西吧！  
-&emsp;&emsp; 还是说，有先约了呢？”  
+ 两个人待会不出去玩玩吗？难得的平安夜呢。  
+ 工作都放一边，去吃点东西吧！  
+ 还是说，有先约了呢？”  
 “教授，nice！  
 “嗯……？”  
 比屋定像是被打垮了，变回一幅认命的表情；“红莉栖”则是因为接到了绝佳的助攻而兴奋地叫出声来，弄得雷斯吉宁教授一脸疑惑。于是我只能负担起解释的角色：  
@@ -177,8 +177,8 @@
 “红莉栖”挂断电话之后，我的心里超出想象的轻松。  
 果然，我心底里，是很喜欢牧濑红莉栖的……我再次深刻地感受到。  
 “但是，向人工智能道歉这种事，有那么奇怪吗？  
-&emsp;&emsp; 我的朋友——之前在 *MayQueen* 里介绍过的那个家伙——  
-&emsp;&emsp; 一直对二次元的女孩子们下跪之类的……”  
+ 我的朋友——之前在 *MayQueen* 里介绍过的那个家伙——  
+ 一直对二次元的女孩子们下跪之类的……”  
 “这、这种精神……对我来说有点……”  
 糟糕，不小心冷场了。例子举得太糟糕了。  
 “那个，总之，多亏了比屋定小姐，帮大忙了。”  
