--- a/steins_gate_0/docs/0033.md
+++ b/steins_gate_0/docs/0033.md
@@ -6,27 +6,27 @@
 
 比屋定就像少女一样眼睛闪闪发光。被带到这种地方，还会有这种眼神的女性，相当稀有吧。作为向导的我，已经完全被她无视了。比屋定迫不及待地在这条罗列着零件商店的狭窄道路上前进着，突然，在其中一家的店门口静静地站住了。在那里堆着许多塑料盒子，里面放满了大大小小各种各样的装满了破旧零件的袋子。似乎是从废弃的电脑和家电之类的机器上拆下来的，无论哪个都很明显的古老而又肮脏，大多数都粘着灰尘。  
 “这个，究竟是什么电路板呢？样式简直就像艺术品一样美丽。  
-&emsp;&emsp; 而且居然是矾土电路板！”  
+ 而且居然是矾土电路板！”  
 “啊，唔……？”  
 “哈？！居然是‘IFX008’图像传感器？！简直不敢相信！  
-&emsp;&emsp; 就算陈列在博物馆都不奇怪的东西，怎么会随意地摆在这种地方？！”  
+ 就算陈列在博物馆都不奇怪的东西，怎么会随意地摆在这种地方？！”  
 “哦，哦……？”  
 “秋叶原……真是个百闻不如一见的地方啊！”  
 露出恍惚表情的比屋定，让我有点敬而远之。  
 “真帆前辈，其实是这样的人哟。”  
 手机中的“红莉栖”如此说道。之前被比屋定拜托，今天也让“红莉栖”同行，因此现在对于我来说，就变成了另类形式的“左拥右抱”的状态了。大概这也算是『Amadeus』验证实验的其中一项吧。  
 “虽然我也来过这里不少次了，不过像那样看到零件就眼睛发光的人类，  
-&emsp;&emsp; 在她之前我也只见过一个……”  
+ 在她之前我也只见过一个……”  
 “我知道了。你说的是桥田先生吧？”  
 “啊……”  
 “被当成是那种人的同类，前辈也太可怜了。  
-&emsp;&emsp; 从你的描述来看，桥田先生是个难以想象的变态啊。”  
+ 从你的描述来看，桥田先生是个难以想象的变态啊。”  
 “是啊……对比屋定小姐失礼了。”  
 现在是周日的午后时分。和比屋定一起来零件商店是有原因的。她和雷斯吉宁教授决定在数日后回国。因为很快就要离开日本了，比屋定联系我，履行之前说好的承诺，给她当秋叶原的向导。于是我们今天上午在站前汇合，问她想去哪里的结果，就是现在这个状况。顺带一提，最先去的是友都八喜，接着是SOFMAP。除此之外，一些小路里面的二手电脑和复古电脑店也去了几家。  
 “比屋定小姐，很喜欢这种零件吗？”  
 我出于好奇问了一句。  
 “与其说是喜欢零件，不如说是喜欢组装东西呢。  
-&emsp;&emsp; 小时候，经常拼日本产的‘Plastic Model’呢。”  
+ 小时候，经常拼日本产的‘Plastic Model’呢。”  
 比屋定正处于兴奋状态，所以回复得很详细。而这也勾起了“红莉栖”的兴趣。  
 “‘Germanium收音机’之类的也组装过吗？”  
 “焊接的时候经常被烫伤呢。”  
@@ -55,7 +55,7 @@
 比屋定突然促狭地笑着把话题抛给“红莉栖”，被发现了吗？  
 “稍微有点意外啊。因为刚才你说喜欢零件，我还以为你在感性方面更接近男性呢。”  
 “冈部！说话不走心啊，你这人！  
-&emsp;&emsp; 说点好听的话啊。‘你这种反差好棒啊’之类的。”  
+ 说点好听的话啊。‘你这种反差好棒啊’之类的。”  
 我自以为很自然地承接了话题，结果受到了“红莉栖”的严厉批评，才后知后觉。  
 “啊……不好意思……”  
 “没关系啦。实际上呢——红莉栖的卧室里一直摆着这样的玩偶呢。”  
@@ -68,8 +68,8 @@
 “什么嘛，@cher什么的？从来没听说过——”  
 “nurupo。”  
 “ga！——  
-&emsp;&emsp; 啊……（突然反应过来而沉默）  
-&emsp;&emsp; 呜啊~~~~~~（羞愧而发出了奇怪的叫声）”  
+ 啊……（突然反应过来而沉默）  
+ 呜啊~~~~~~（羞愧而发出了奇怪的叫声）”  
 这家伙，就算变成『Amadeus』也还是一样啊。  
 “比屋定小姐，红莉栖有告诉过你这是什么角色吗？”  
 “没有。虽然我问了好多次，可是每次都被她岔开话题。”  
@@ -143,8 +143,8 @@
 “是吗？那么，我就不客气的收下了。呵呵~”  
 比屋定像幼小的少女一样露出无邪的表情，抱紧玩偶。看她这么高兴，我也变开心了。  
 “……红莉栖逝去之后呢，我从她的母亲那里收到了各种遗物。  
-&emsp;&emsp; 但是，因为说这个是红莉栖非常喜欢的，  
-&emsp;&emsp; 她的妈妈把这个放到了自己的卧室。”  
+ 但是，因为说这个是红莉栖非常喜欢的，  
+ 她的妈妈把这个放到了自己的卧室。”  
 即使不知道这个是@ch的角色商品，它的造型也还是很可爱。作为女儿的遗物装饰起来也并不会很奇怪。  
 “可是，红莉栖的老家呢，遭遇了那样的事……我想玩偶一定也被烧掉了。”  
 “前辈……”  
