--- a/steins_gate_0/docs/0034.md
+++ b/steins_gate_0/docs/0034.md
@@ -3,10 +3,10 @@
 > [ 2011/01/23 ] 冈伦与真帆去祭拜红莉栖，聊起《中钵论文》和红莉栖笔记本电脑与硬盘，来到桶子秘密基地。  
 
 “那么接下来要做什么？还有其他想去逛的地方吗？  
-&emsp;&emsp; 不过动画和游戏的商店什么的你也不会有兴趣吧……”  
+ 不过动画和游戏的商店什么的你也不会有兴趣吧……”  
 “……‘红莉栖’，抱歉，能让我和冈部两个人呆一会儿么？”  
 “……！前辈……你终于准备直率地面对自己的感情了呢……！  
-&emsp;&emsp; 冈部，别搞砸了哟！”  
+ 冈部，别搞砸了哟！”  
 “哈？”  
 “前辈，加油！那么再见！”  
 “那个，比屋定小姐？”  
@@ -42,39 +42,39 @@
 比屋定如此轻语着，双唇看起来正微弱地颤动。  
 总感觉有些不可思议。明明是红莉栖染满鲜血倒下的命运之地，却好像什么也没发生过一样，佯作不知地日常运作着。而我竟然又这样再次探访这重要之人的身陨之地。  
 “真令人烦闷啊。我不是物理学家，也不是很理解相对性理论，  
-&emsp;&emsp; 如果时间真的和空间地位平等的话，  
-&emsp;&emsp; 为什么不能像在空间中那般简单地，在时间中移动呢？  
-&emsp;&emsp; 现在的我们，在空间上来说和‘红莉栖的死’位于同轴，  
-&emsp;&emsp; 可是时间轴只是稍稍偏差了一点，就让我们连干涉都做不到。”  
+ 如果时间真的和空间地位平等的话，  
+ 为什么不能像在空间中那般简单地，在时间中移动呢？  
+ 现在的我们，在空间上来说和‘红莉栖的死’位于同轴，  
+ 可是时间轴只是稍稍偏差了一点，就让我们连干涉都做不到。”  
 “……”  
 “你之前对‘红莉栖’——啊，我是说『Amadeus』，提出过一个有趣的问题呢——  
-&emsp;&emsp; 时间机器能不能被做出来。”  
+ 时间机器能不能被做出来。”  
 “……是啊。”  
 “请务必尝试那个研究，我会挺身做第一个载人实验者的。”  
 比屋定用分不清是玩笑还是认真的语气说着，凄凉地笑了笑。——时间机器的话，是存在的，而且就在我们的正上方不远处。如果这样说的话，她会怎么样呢？责备我放弃了拯救红莉栖，并提出代替我跳跃回过去吗？  
 “冈部，红莉栖死去时的情况，能告诉我吗？我什么细节都不知道。”  
 “我……也不知道多少……之前，没给你说过吗？”  
 “但是，至少比起在美国的我要更清楚一些吧。  
-&emsp;&emsp; 红莉栖为什么会来到这种地方？  
-&emsp;&emsp; 红莉栖死去的时候，旁边的房间也像今天这样举行着活动吧。”  
+ 红莉栖为什么会来到这种地方？  
+ 红莉栖死去的时候，旁边的房间也像今天这样举行着活动吧。”  
 “唔……”  
 活动会场偶尔传来的笑声还是很高涨，一直传到我们所在的地方。
 “中钵博士，去年的夏天上了新闻。  
-&emsp;&emsp; 说是逃亡到俄罗斯，写出了关于时间机器的论文。  
-&emsp;&emsp; 虽说那篇论文的内容，据说烂到不堪入目。  
-&emsp;&emsp; 但是，这样我联想到，  
-&emsp;&emsp; 在红莉栖的美国的家里放火的家伙也是说俄语的。  
-&emsp;&emsp; 这是偶然吗？”  
+ 说是逃亡到俄罗斯，写出了关于时间机器的论文。  
+ 虽说那篇论文的内容，据说烂到不堪入目。  
+ 但是，这样我联想到，  
+ 在红莉栖的美国的家里放火的家伙也是说俄语的。  
+ 这是偶然吗？”  
 “呼……”  
 “我觉得有这之间什么关联。  
-&emsp;&emsp; 所以想着去调查一下中钵博士的事，  
-&emsp;&emsp; 出乎意料的是，竟然没有任何相关情报。  
-&emsp;&emsp; 在网上检索，就连本名也查不到。  
-&emsp;&emsp; 即便是有关中钵博士的博客或网站，大部分也都被封了，  
-&emsp;&emsp; 而且是在这半年里接连被封。  
-&emsp;&emsp; 呐，红莉栖的身边到底发生了什么？  
-&emsp;&emsp; 难不成，那些事现在也在持续着吗。  
-&emsp;&emsp; 你……到底隐瞒着什么？”  
+ 所以想着去调查一下中钵博士的事，  
+ 出乎意料的是，竟然没有任何相关情报。  
+ 在网上检索，就连本名也查不到。  
+ 即便是有关中钵博士的博客或网站，大部分也都被封了，  
+ 而且是在这半年里接连被封。  
+ 呐，红莉栖的身边到底发生了什么？  
+ 难不成，那些事现在也在持续着吗。  
+ 你……到底隐瞒着什么？”  
 那是一双单纯在追求真理的眼神。红莉栖也经常露出这种眼神。但是——  
 “还是不要因好奇心涉足的好。我已经受够了。”  
 “事到如今，我已经半只脚踏进来了。  
@@ -106,14 +106,14 @@
 大概是因为，对于比屋定来说，红莉栖的死实在是有太多匪夷所思的地方，所以才会深究红莉栖被杀的理由。笔记本电脑和硬盘中可能存留着什么提示，会这么想也是人之常情。不过，如果我的推测真的正确，那么这个笔记本电脑的存在本身就极度危险……！那正是，拥有引爆第三次世界大战之力的，潘多拉的魔盒。  
 “你为什么要瞒着我？”  
 “当初我并不知道你和桥田先生的关系，委托他办这件事也纯属巧合。  
-&emsp;&emsp; 而且我觉得你在隐瞒一些关于红莉栖的事情。  
-&emsp;&emsp; 我不可能向这样的你和盘托出吧。  
-&emsp;&emsp; 也不是说我不信任你……  
-&emsp;&emsp; 毕竟是关于红莉栖的事情，觉得还是慎重一点的好。”  
+ 而且我觉得你在隐瞒一些关于红莉栖的事情。  
+ 我不可能向这样的你和盘托出吧。  
+ 也不是说我不信任你……  
+ 毕竟是关于红莉栖的事情，觉得还是慎重一点的好。”  
 “是啊，你这样的做法是正确的。  
-&emsp;&emsp; 你没有反对让我做『Amadeus』的测试员，也是有所盘算吧？”  
+ 你没有反对让我做『Amadeus』的测试员，也是有所盘算吧？”  
 “不要用盘算这种说法……  
-&emsp;&emsp; 我只是，对于作为红莉栖的朋友的你，想要更多地了解而已。”  
+ 我只是，对于作为红莉栖的朋友的你，想要更多地了解而已。”  
 “为了获取红莉栖的秘密？”  
 “我是想更了解她啊……！”  
 比屋定显露出敌意的眼神，回瞪着我。  
@@ -138,8 +138,8 @@
 算了，反正我也说了谎，就算扯平吧。  
 “那，真正的地点是哪里？你腾不出手那就我过去，总之现在马上就想谈谈。”  
 “嗯——…………
-&emsp;&emsp; 虽然不太想告诉冈伦呢……毕竟不太妙的工作太多了……  
-&emsp;&emsp; 嘛，算了。我知道了，这就告诉你地址过来吧。”  
+ 虽然不太想告诉冈伦呢……毕竟不太妙的工作太多了……  
+ 嘛，算了。我知道了，这就告诉你地址过来吧。”  
 
 
 <br/>
