--- a/steins_gate_0/docs/0037.md
+++ b/steins_gate_0/docs/0037.md
@@ -31,17 +31,17 @@
 “这真是让我吃惊啊，没想能喝到 *Maho* 泡的咖啡。”  
 “我好歹也是有这样的眼色啦。”  
 “但是，你不是很讨厌这样吗？  
-&emsp;&emsp; 那应该是，你来到这个研究所的第一天吧。  
-&emsp;&emsp; *Mary* 给大家分发早间咖啡，到你的时候你，你却这样拒绝了——  
-&emsp;&emsp; ‘你在这里的任务就是泡咖啡吗？’  
-&emsp;&emsp; ‘有这个时间的话，快点开始工作如何？’这样。  
-&emsp;&emsp; 啊呀呀，真是来了个不得了的人呢，当时真的惊讶到我了。”  
+ 那应该是，你来到这个研究所的第一天吧。  
+ *Mary* 给大家分发早间咖啡，到你的时候你，你却这样拒绝了——  
+ ‘你在这里的任务就是泡咖啡吗？’  
+ ‘有这个时间的话，快点开始工作如何？’这样。  
+ 啊呀呀，真是来了个不得了的人呢，当时真的惊讶到我了。”  
 “这、这种陈年旧事，不用现在重新提起来吧……”  
 真帆感觉无地自容，鼓起了脸颊。  
 “那个时候是，那个……  
-&emsp;&emsp; 被说是天才少女，稍微有点得意忘形了……  
-&emsp;&emsp; 什么都不懂的小孩子而已……  
-&emsp;&emsp; 我有好好反省过了。”  
+ 被说是天才少女，稍微有点得意忘形了……  
+ 什么都不懂的小孩子而已……  
+ 我有好好反省过了。”  
 顺便一提，真帆后来和玛丽研究员道歉之后，两人相处得还挺不错。  
 “教授真是坏心眼呢。我不会再拿咖啡过来了，就这样吧！”  
 正打算干脆也把难得泡好的咖啡拿走回去的时候——  
@@ -55,10 +55,10 @@
 “这么晚辛苦你了。”  
 虽然她只是电脑上运行的程序，但不知不觉就这么说了。察觉到这一点的真帆不禁苦笑。交往了这么久，对于真帆来说，如今的“红莉栖”已经和人类没什么区别了。  
 “我并不是在欺负 *Maho* 哟。  
-&emsp;&emsp; 玛丽那件事也是，我其实挺看好 *Maho* 的。  
-&emsp;&emsp; 不讲情面，非常理性，又酷，而且还很有趣呢。  
-&emsp;&emsp; 所以才让她成为我的助手。  
-&emsp;&emsp; 当然……我也不讨厌现在温柔的你呢。”  
+ 玛丽那件事也是，我其实挺看好 *Maho* 的。  
+ 不讲情面，非常理性，又酷，而且还很有趣呢。  
+ 所以才让她成为我的助手。  
+ 当然……我也不讨厌现在温柔的你呢。”  
 雷斯吉宁教授说着眨了眨眼，把手伸向了咖啡杯。  
 “谢谢，我开动了哟。”  
 教授喝着咖啡，一边用手指做着眼部按摩。看起来轻松活泼，实际上应该相当疲惫了。  
@@ -81,13 +81,13 @@
 “你、你在说什么蠢话？！……那是给红莉栖母亲的礼物哟。”  
 “嘿嘿~那么~为什么会在前辈的房间里呢~？”  
 “因、因为，伯母说正在找新的房子，在此之前租住在临时公寓，  
-&emsp;&emsp; 想着到时候要搬家的话，给她增加行李就不好了……”  
+ 想着到时候要搬家的话，给她增加行李就不好了……”  
 “真的是这样~？”  
 “真、真的哟！再说，那个玩偶对我来说，是对红莉栖珍贵的回忆。  
-&emsp;&emsp; 抱着睡觉有那么奇怪吗？”  
+ 抱着睡觉有那么奇怪吗？”  
 “啊哈~果然在前辈的床上呢，那个！  
-&emsp;&emsp; 而且，抱着睡觉什么的，太可爱了！  
-&emsp;&emsp; 关于这个，请再讲的详细一点！”  
+ 而且，抱着睡觉什么的，太可爱了！  
+ 关于这个，请再讲的详细一点！”  
 “咕唔！”  
 区区程序居然自大到给我下套——真帆察觉到这点的时候，已经晚了。“红莉栖”和一直听着对话的雷斯吉宁教授都一脸奸笑地看着真帆。  
 “呜哼~哼~~”  
@@ -96,7 +96,7 @@
 “胜、胜负什么的一点关系也没有！我要睡觉去了，晚安！”  
 真帆愤懑难平地准备离开教授的房间，这时“红莉栖”从背后投来了会心一击的一句话：  
 “前辈，已经一个星期没有和冈部联系了哟。  
-&emsp;&emsp; 要是以太忙为借口而忽略了联络的话，之后会后悔的哦？”  
+ 要是以太忙为借口而忽略了联络的话，之后会后悔的哦？”  
 “我说啊……你无论如何，都想把我和冈部先生撮合到一起吗？”  
 真帆逼近显示器，“红莉栖”并没有退避。  
 “偶尔不会有‘想要直接见面啊’这样的想法吗？”  
@@ -104,9 +104,9 @@
 “是吗，真可惜啊。”  
 这时雷斯吉宁教授不知为何，难过地左右摇了摇头。  
 “最近，因为共同研究，日本方面又要叫我过去。  
-&emsp;&emsp; 到时候，还想着要联系下 *Rintaro* 呢。  
-&emsp;&emsp; 我还在烦恼是否要带上 *Maho* 一起去的，  
-&emsp;&emsp; 这样子看起来还是算了吧~”  
+ 到时候，还想着要联系下 *Rintaro* 呢。  
+ 我还在烦恼是否要带上 *Maho* 一起去的，  
+ 这样子看起来还是算了吧~”  
 “诶！？又要去日本吗！？”  
 这件事真帆完全是第一次听说。通常雷斯吉宁教授的项目的相关信息，都会事前通过研究所的内网通知自己的。  
 “啊。”  
@@ -128,11 +128,11 @@
 “这差不多算是性骚扰了哟？”  
 “*Oh!* 这个还是放过我吧！”  
 “不过，前辈不认真考虑下交往吗？  
-&emsp;&emsp; 将来，冈部不是很可能到这边来的吗？  
-&emsp;&emsp; 这样的话，就应该现在就下手的。”  
+ 将来，冈部不是很可能到这边来的吗？  
+ 这样的话，就应该现在就下手的。”  
 “请不要像爱管闲事的亲戚大妈一样说话……”  
 “*Maho* 的想法我理解了，我也会去找理事谈谈的。  
-&emsp;&emsp; 但是，并不能保证你一定能去日本。”  
+ 但是，并不能保证你一定能去日本。”  
 “好的，非常感谢。”  
 “我还是挺认真的呢……”  
 “还在说啊？真是的……”  
@@ -149,7 +149,7 @@
 “那个，关于这个呢……”  
 真帆被说到痛处，一瞬间词穷了。  
 “那个……因为在日本经历了各种可怕的体验，  
-&emsp;&emsp; 我考虑会不会给『Amadeus』留下不好的记忆呢……”  
+ 我考虑会不会给『Amadeus』留下不好的记忆呢……”  
 “虽然我理解你的心情，但是这样的话就无法进行对比实验了。”  
 所谓的对比试验，就是把各种体验学习之前和之后的记忆资料载入『Amadeus』，对其言行的不同之处进行对比研究，目的是探究体验和学习的有无对人类大脑产生的影响。因为红莉栖的逝去，现在已经全部托付给了真帆。  
 “现在的你，和『Amadeus』的 *‘Maho’* 记忆相差得太多，说是另一个人也不为过。”  
@@ -158,7 +158,7 @@
 “这个……”  
 真帆的脸沉了下来。  
 “不要总是和 *‘Kurisu’* 对话，偶尔也要顾及‘自己’，肯定很寂寞呢。  
-&emsp;&emsp; 明天，必须要进行记忆的更新，可以吧？”  
+ 明天，必须要进行记忆的更新，可以吧？”  
 “……明白了。”  
 真帆点点头，走出了研究室。不进行“真帆”的记忆更新的原因，除了对雷斯吉宁教授说明的以外，其实还有一个。就是伦太郎的话。  
 “那，『Amadeus』的研究中，美军的参与……没有的吧？”  
@@ -183,19 +183,19 @@
 “真是很执着呢。不知道是不是和自己的女儿搞混了？”  
 “那个，这个时间还要和雷斯吉宁教授见面吗？如果是紧急会议的话，我也——”  
 “这倒是不用。我的研究稍微遇到了点问题，想赶紧借用一下他的智慧呢。  
-&emsp;&emsp; 就算你在场也并没有特别要拜托你的……  
-&emsp;&emsp; 啊，无意冒犯。不过，谢谢啦。”  
+ 就算你在场也并没有特别要拜托你的……  
+ 啊，无意冒犯。不过，谢谢啦。”  
 雷耶斯教授笑着说完后，穿过真帆身边走向雷斯吉宁教授的研究室，其他研究员们也陆续跟在后面。  
 （研究上的问题……究竟是什么呢？）  
 仔细看了一下，真帆在同行的研究所人员中发现了一幅没见过的面孔。也说不清楚为什么会注意到那个人，该怎么描述呢——他，完全不像个学者。长期从事研究工作，能自然而然地感觉到相同的科研人员的气质。但是，那个男人明显散发出与周围完全不同的氛围，而且，对雷耶斯教授的态度也很不恭敬。如果是她研究室的人是绝对不会这样的做。另外，包括雷耶斯教授在内，其他的研究员全体都穿着白大褂，只有那个男人整整齐齐地穿着完全没有褶皱的西装。真帆总觉得不对劲。  
 本来快要回到自己房间的真帆，因为非常在意，就绕了回来，压低脚步声走向了雷斯吉宁的研究室。研究室的门微微开着，从那里能听到里面的谈话声。真帆知道这么做不对，但是还是把脸贴在门边，竖起了耳朵。  
 “——准备放任到什么时候？”  
 “那可是贵重的情报来源。鲁莽行动导致被废弃的话就可惜了吧。  
-&emsp;&emsp; 不管怎么说，我这个月会出发去日本，准备在那时回收。” 
+ 不管怎么说，我这个月会出发去日本，准备在那时回收。” 
 “为什么要观察将近半年？能给我一个可以接受的解释吗？”  
 “我感觉他隐瞒着什么我们所不知道的事。  
-&emsp;&emsp; 于是，想用『Amadeus』引诱他说出来……  
-&emsp;&emsp; 但是他警戒心很强，是个谨慎的青年啊，*Rintaro·Okabe*。”  
+ 于是，想用『Amadeus』引诱他说出来……  
+ 但是他警戒心很强，是个谨慎的青年啊，*Rintaro·Okabe*。”  
 “对真帆施展你得意的手术怎么样？”  
 “可是我认为她什么都不知道呢。”  
 “啊……”  
@@ -207,7 +207,7 @@
 “教授……刚才说的……究竟是……”  
 雷斯吉宁教授带着略微悲伤的表情来到真帆面前，弯下庞大的身体，直视着真帆的脸。  
 “哎呀哎呀，被听到了啊……算了，正好。  
-&emsp;&emsp; 真帆，之前说的去日本的事呢，果然要请你也一同前往。”  
+ 真帆，之前说的去日本的事呢，果然要请你也一同前往。”  
 她不明白。研究所的理事们不是反对么？以雷斯吉宁教授的立场能够擅自决定吗？什么正好啊？真帆带着疑惑，一瞬间看到了显示器。然而那里已经没有刚才显示的“红莉栖”的画面了。  
 
 真帆唯一理解到的一点是——  
