--- a/steins_gate_0/docs/0039.md
+++ b/steins_gate_0/docs/0039.md
@@ -5,7 +5,7 @@
 “啊……”  
 “怎么了？”  
 “嗯……就是刚才啊，枫发了邮件过来，都没有发觉呢……  
-&emsp;&emsp; 怎么办啊，冈伦……？”  
+ 怎么办啊，冈伦……？”  
 真由理非常的动摇，眼看着就要哭出来了。  
 “发生什么了？”  
 “呐，冈伦……？你之前说过的吧？吹雪酱她，不是生病什么的。”  
@@ -51,19 +51,19 @@
 “啊、啊啊。中濑小姐家里，实际上是很厉害的有钱人吗？居然能在这种地方住院。”  
 由季的感叹我深表赞同，光看大厅就感觉这里的费用一定很高。解答我的疑问的依旧是枫。  
 “不，并不是那样……听吹雪酱的妈妈说，  
-&emsp;&emsp; 好像是日本和美国的政府出资，在这里实施新型治疗项目的样子。  
-&emsp;&emsp; 是以这家医院和美国的专科医院以及研究所为中心进行的。”  
+ 好像是日本和美国的政府出资，在这里实施新型治疗项目的样子。  
+ 是以这家医院和美国的专科医院以及研究所为中心进行的。”  
 “这样啊……”  
 我的内心产生了很复杂的心情。这种症状虽然被认定为新型脑炎，但是，如果真的像我想的那样，并不是病的话……应该不会有比这更加浪费的事情了吧。  
 
 “拜托了，请给所有患者分配单独的病房。  
-&emsp;&emsp; 还有，让患者之间尽量不要相互接触，安排相互间隔开的房间。”  
+ 还有，让患者之间尽量不要相互接触，安排相互间隔开的房间。”  
 “可是啊，要去准备那么多的病床很难做到的。”  
 “就算是那样，不这么做也不行！  
-&emsp;&emsp; 一旦患者间进行对话，‘梦境’的情报不就会互相传播了吗？”  
+ 一旦患者间进行对话，‘梦境’的情报不就会互相传播了吗？”  
 “不，虽然是这样没错……”  
 “大脑这种东西呢，明明是别人的梦境，但是有了共感的话，  
-&emsp;&emsp; 就会产生自己也梦见了的错觉。是有这种可能性的！”  
+ 就会产生自己也梦见了的错觉。是有这种可能性的！”  
 我循着争论的声音横穿过大厅，穿着白大褂的日本老医生和正追着他在说着什么的穿着西装的巨大人影，一下子进入了我的视野。  
 “……啊！”  
 那个穿着西装的外国人，我记得是谁。不如说，还是我很熟的人。  
@@ -97,9 +97,9 @@
 “这家医院的院长。”  
 “院长！？对那种大人物，就这么光明正大地说谎吗……”  
 “哦呀？我有说什么谎吗？  
-&emsp;&emsp; 确实我说了‘从9月开始就是我们学校的学生’，  
-&emsp;&emsp; 但是并没有说就是今年的9月哟。  
-&emsp;&emsp; 要么是什么？你最终还是没有来我们学校的自信吗？那真是太遗憾啦……”  
+ 确实我说了‘从9月开始就是我们学校的学生’，  
+ 但是并没有说就是今年的9月哟。  
+ 要么是什么？你最终还是没有来我们学校的自信吗？那真是太遗憾啦……”  
 ……真是和小孩子一样的强词夺理。太明显了吧。但是，不可思议地并不觉得讨厌。  
 “不过我很惊讶，教授居然又来日本了。”  
 1月在成田机场送别之后，已经有5个月没见了。  
@@ -107,35 +107,35 @@
 “是吗！？她一句话都和我提过啊……”  
 提交『Amadeus』测试报告相关之外，我们定期也会通过邮件或者视频聊天来联络。但是有关来日本的话题却是完全没有提过。从“红莉栖”那儿，也完全没有听过类似的事。  
 “还是和光市的那间危险的办公室。和‘红莉栖’一起，什么时候来玩都可以。  
-&emsp;&emsp; 因为被洗劫过，真是想叫他们换个别的地方啊。”  
+ 因为被洗劫过，真是想叫他们换个别的地方啊。”  
 雷斯吉宁教授夸张地仰望着天花板。确实那个地方有很严重的安全问题。  
 “*Rintaro* 你有哪里不舒服吗？来这里接受治疗？”  
 “啊，不，不是的。是来探望住院的朋友。”  
 “啊，这样。那真是太好——  
-&emsp;&emsp; 不，对于那位朋友来说并不好。真是抱歉。”  
+ 不，对于那位朋友来说并不好。真是抱歉。”  
 “啊，没事……”  
 “那么，教授也是，在日本的医院要做什么？”  
 这是教授把脸凑近我这边，注意着周围的情况压低了声音：  
 “你也是知道的吧？之前的新型脑炎的事情。  
-&emsp;&emsp; 受美国政府委托，精神生理学研究所进行着治疗方法的相关研究，  
-&emsp;&emsp; 不过好像很棘手的样子。  
-&emsp;&emsp; 我也受大学之命加入了调查，就是这样。”  
+ 受美国政府委托，精神生理学研究所进行着治疗方法的相关研究，  
+ 不过好像很棘手的样子。  
+ 我也受大学之命加入了调查，就是这样。”  
 “这样啊。雷斯吉宁教授来调查新型脑炎……”  
 在意外的时间点出现了这个词啊……  
 我向教授简单说明了之前提到的“住院的朋友”的事，以及她被怀疑患有新型脑炎的事。  
 “难道那个朋友就是，*Nakase·Katsumi*（中濑克美）？”  
 “诶？啊啊，在圣诞派对上见过的。”  
 “嗯嗯。实际上我之所以会对新型脑炎感兴趣，也是以那个派对为契机的。  
-&emsp;&emsp; 你和 *Katsumi* 那时候都倒下了吧？”  
+ 你和 *Katsumi* 那时候都倒下了吧？”  
 这么说来确实是的。虽然我在那个时候是跳到别的世界线去了。  
 “几天前我见过 *Katsumi*，她向我抗议了好几次。  
-&emsp;&emsp; ‘为什么又让我住院了呢？明明我还这么健康！’之类的。”  
+ ‘为什么又让我住院了呢？明明我还这么健康！’之类的。”  
 “这，这样啊……”  
 “如果能保持稍微配合一点的态度的话我就很高兴了。*Rintaro* 可以和她传达一下吗？”  
 “啊哈……”  
 “实际上，不仅是 *Katsumi*，我对所有患者都抱着一种过意不去的心情。  
-&emsp;&emsp; 不管是我们还是日本的医疗团队，虽然在努力推进着研究，  
-&emsp;&emsp; 但是弄不清楚的检查结果实在是太多，我们也很困扰。”  
+ 不管是我们还是日本的医疗团队，虽然在努力推进着研究，  
+ 但是弄不清楚的检查结果实在是太多，我们也很困扰。”  
 不论何时都很阳光的雷斯吉宁教授的脸色少见地阴沉了下来。我现在才注意到，一直以来都在源源不断地展现活力的教授，露出这种表情的时候，脸上也会出现许多很深的皱纹。看来他正如刚才说的，承受着相当大的压力。  
 “说实话，最早的时候不管是哪个医生，好像都没想到会是这种让人无法理解的病症……”  
 “……”  
@@ -152,19 +152,19 @@
 “唔……！”  
 我应该一再叮嘱过吹雪，要她对这件事保密的。难道是没忍住吗？这下情况麻烦了，搞不好，吹雪会被怀疑是否有精神方面的问题。  
 “呃……中濑小姐她，那个……想象力特别丰富。特别喜欢SF和动画什么的。  
-&emsp;&emsp; ‘感知其他平行世界的力量’什么的，我想大概是受兴趣的影响才会那么说的吧。  
-&emsp;&emsp; 实际上，我也有经常说那些事情的时期啊，哈哈哈哈……”  
+ ‘感知其他平行世界的力量’什么的，我想大概是受兴趣的影响才会那么说的吧。  
+ 实际上，我也有经常说那些事情的时期啊，哈哈哈哈……”  
 我拼命想蒙混过去，但是雷斯吉宁教授却一副认真的表情在考虑着。  
 “但是啊……我加入了治疗项目之后，也发现了很让我惊讶的事实……  
-&emsp;&emsp; 的确，作为这个病症的特征，出现了很多患者会拥有同样梦境的现象。  
-&emsp;&emsp; 这和集体幻觉现象很类似，我们目前正在向这个方向调查。  
-&emsp;&emsp; 究竟是怎么回事呢？第一次见这种事呢。  
-&emsp;&emsp; 用脑科学的话讲，现在还无法得出‘解答’。  
-&emsp;&emsp; 说实话，‘非科学性’这个词是最合适的表达了。  
-&emsp;&emsp; 也就是说，平行世界，还有前世记忆什么的。”  
+ 的确，作为这个病症的特征，出现了很多患者会拥有同样梦境的现象。  
+ 这和集体幻觉现象很类似，我们目前正在向这个方向调查。  
+ 究竟是怎么回事呢？第一次见这种事呢。  
+ 用脑科学的话讲，现在还无法得出‘解答’。  
+ 说实话，‘非科学性’这个词是最合适的表达了。  
+ 也就是说，平行世界，还有前世记忆什么的。”  
 “这样啊……”  
 “你如果能和 *Katsumi* 多聊聊各种各样的东西也会很有帮助的。  
-&emsp;&emsp; 有些东西不能对医生说，却可以告诉朋友。”  
+ 有些东西不能对医生说，却可以告诉朋友。”  
 “好。姑且……先记下了。”  
 
 “那么，*Rintaro*，这些事就到这。有件事我想确认下。”  
@@ -173,17 +173,17 @@
 “诶？”  
 我转身看向那边。真由理、枫，还有由季都从沙发上站起来看着这边。她们注意到了雷斯吉宁教授的视线，轻轻地挥了挥手。  
 “果然，这里面的其中一位就是你的恋人吧？  
-&emsp;&emsp; *Yuki*（由季）？*Kaede*（枫）？*Mayuri*（真由理）？  
-&emsp;&emsp; *Ruka*（琉华）？还是说，就是 *Katsumi* （克美）吗？”  
+ *Yuki*（由季）？*Kaede*（枫）？*Mayuri*（真由理）？  
+ *Ruka*（琉华）？还是说，就是 *Katsumi* （克美）吗？”  
 “啥！？”  
 我被突如其来的问题给封住了嘴巴。一直都被比屋定说成“喜欢淘气的少年”的中年教授，现在的表情正像她所说的那样。  
 “哎呀，我不是勉强你一定要告诉我，也并不是想要探究你的个人隐私。  
-&emsp;&emsp; 只是，嘛，想回去的时候和可爱的学生聊一些旅行见闻的而已啦。”  
+ 只是，嘛，想回去的时候和可爱的学生聊一些旅行见闻的而已啦。”  
 “？？？”  
 在我还在混乱中的时候，雷斯吉宁教授就这样往回走了。  
 “那么 *Rintaro*，我还有些事要和院长说，就这样吧。  
-&emsp;&emsp; 可以的话还想和 *Yuki* 她们每个人来个拥抱的，  
-&emsp;&emsp; 还是留到下次吧，替我向她们问好。”  
+ 可以的话还想和 *Yuki* 她们每个人来个拥抱的，  
+ 还是留到下次吧，替我向她们问好。”  
 “啊，是！”  
 我一遍目送着那个巨大的背影离开，一边靠近在远处看着的真由理她们。  
 真由理：“刚才那个人，是雷斯吉宁老师？”  
