--- a/steins_gate_0/docs/0040.md
+++ b/steins_gate_0/docs/0040.md
@@ -11,9 +11,9 @@
 “不……不是的……这个是、那个……”  
 “回答我。”  
 “因、因为！因为！  
-&emsp;&emsp; 醒来之后，铃羽姐姐你不在，周围好黑又没开灯，又窄又吓人又难受！  
-&emsp;&emsp; 所以，我想把门打开……  
-&emsp;&emsp; 然后，就在按着这里那里的时候……就变成了这样……”  
+ 醒来之后，铃羽姐姐你不在，周围好黑又没开灯，又窄又吓人又难受！  
+ 所以，我想把门打开……  
+ 然后，就在按着这里那里的时候……就变成了这样……”  
 她这么说着，开始流下了一滴滴的泪水。  
 “对不起铃羽姐姐，对不起。但是我真的好怕，所、所以……”  
 “……这样啊。”  
@@ -37,14 +37,14 @@
 “虽然没有被公开，可是在当时，因为那个，很多国家和地区都产生了严重的问题。”  
 “是……吗？”  
 “产生问题根源的就是这种IBN5100电脑。  
-&emsp;&emsp; 它应用了一种古老的编程语言，技术人员没有修复某个程序的问题。  
-&emsp;&emsp; 或者说，他们完全不知道里面有一个使用这种语言编写的重要程序。  
-&emsp;&emsp; 第三次世界大战虽然是以时间机器的竞争为开端的——  
-&emsp;&emsp; 但更深层的原因可能是因为‘千年虫问题’产生的某个事象以及由此引发的分歧。”  
+ 它应用了一种古老的编程语言，技术人员没有修复某个程序的问题。  
+ 或者说，他们完全不知道里面有一个使用这种语言编写的重要程序。  
+ 第三次世界大战虽然是以时间机器的竞争为开端的——  
+ 但更深层的原因可能是因为‘千年虫问题’产生的某个事象以及由此引发的分歧。”  
 这种话题铃羽不觉得年仅10岁的篝能理解，所以她也没有深入说明的打算。  
 “而且，公元2000年是一个特殊的年份。好像所有的世界线收束成了一个。  
-&emsp;&emsp; 以此为关联，这个问题说不定会严重影响各条世界线因果。  
-&emsp;&emsp; 我们作为目标的‘处于缝隙的世界线’——*Steins;Gate*，也不例外。”  
+ 以此为关联，这个问题说不定会严重影响各条世界线因果。  
+ 我们作为目标的‘处于缝隙的世界线’——*Steins;Gate*，也不例外。”  
 铃羽把视线转向连接着IBN5100的手机终端。  
 “所以这是为了防止‘千年虫问题’的修正程序哦。”  
 现在，她正在将修正程序转换成IBN5100专用语言。之后，再把这个程序以病毒的形式在全世界扩散，就能完全解除这个时代的工程师忽略的“千年虫问题”。
@@ -63,8 +63,8 @@
 
 “篝？”  
 “不行的哦。这样不好的哟……  
-&emsp;&emsp; ……绝对不行的哦，铃羽姐姐。  
-&emsp;&emsp; 不可以，那么做。”  
+ ……绝对不行的哦，铃羽姐姐。  
+ 不可以，那么做。”  
 “喂？”  
 篝的样子很怪。觉得可疑的铃羽，向篝那边伸出了手。  
 但是。篝避开了铃羽的手。她用完全不像孩子的敏锐动作，用肩膀冲撞过来。  
@@ -92,10 +92,10 @@
 “那，就这样眼睁睁看着战争发生也无所谓吗？”  
 “我才不懂那些呢！我只是想回到原来的世界啊。”  
 “那个……已经不可能了。  
-&emsp;&emsp; 我们已经用时间机器干涉了过去，世界线应该已经发生偏差了。  
-&emsp;&emsp; 回到那里的可能性很低——”  
+ 我们已经用时间机器干涉了过去，世界线应该已经发生偏差了。  
+ 回到那里的可能性很低——”  
 “吵死了吵死了吵死了！我绝对要救妈妈！  
-&emsp;&emsp; 不能抹掉这个世界！绝对不会让你这么做的！”  
+ 不能抹掉这个世界！绝对不会让你这么做的！”  
 篝声嘶力竭地哭喊着，把枪口对准了IBN5100。  
 “住、住手！”  
 铃羽连阻止的时间都没有，篝不假思索地扣动了扳机。一枪，一枪，又一枪。  
