--- a/steins_gate_0/docs/0044.md
+++ b/steins_gate_0/docs/0044.md
@@ -11,9 +11,9 @@
 “你觉得没问题的话，我可以帮你写个推荐信。当然，也需要通过测试和面试。”  
 我慌张地摆正姿势。  
 “那个，真的是非常感谢您……  
-&emsp;&emsp; ……但是我想以我现在的学习水平可能有些困难。  
-&emsp;&emsp; 我是真心以维克多·孔多利亚大学为目标的。所以，绝对不想失败。  
-&emsp;&emsp; 因此，我认为至少还要用一年的时间来专心学习才行。”  
+ ……但是我想以我现在的学习水平可能有些困难。  
+ 我是真心以维克多·孔多利亚大学为目标的。所以，绝对不想失败。  
+ 因此，我认为至少还要用一年的时间来专心学习才行。”  
 雷斯吉宁教授微微嘟着嘴唇，听着我语无伦次的说明。然后，过了一会儿——  
 “*OK, OK！*”  
 他拍了拍我的肩膀，露出满意的笑容。  
@@ -26,7 +26,7 @@
 “是呢……”  
 机会……就这样错过了吧……雷斯吉宁教授愿意等我到明年吗？心中荡起了不安。  
 “太过钻牛角尖也不好哦。  
-&emsp;&emsp; 如果，来大学参观一下，也有助于 *motivation*（行动力）的 *up*（提升）是吧。”  
+ 如果，来大学参观一下，也有助于 *motivation*（行动力）的 *up*（提升）是吧。”  
 “参观……吗？”  
 “如果时机合适的话，旅费我来出，要不要来看看啊？”  
 “能为我考虑这么多……非常感谢！”  
@@ -57,13 +57,13 @@ APP升级结束后，『Amadeus』一直启动着。
 “……”  
 真帆看起来难以启齿。  
 “还没有听你说过……  
-&emsp;&emsp; 关于红莉栖事件的……真相……”  
+ 关于红莉栖事件的……真相……”  
 “啊…！”  
 我立刻关掉了『Amadeus』的APP。  
 “另外……也想问下关于时间机器的事。”  
 “时间机器？”  
 “红莉栖与中钵论文有关，这么说的是你哦。  
-&emsp;&emsp; 呐……那孩子她……真的和时间机器……？”  
+ 呐……那孩子她……真的和时间机器……？”  
 “……”  
 我该怎样回答呢？  
 半年前，真帆曾经试图破解红莉栖的笔记本电脑和硬盘。为了阻止她，我也考虑过在合适的时机把经历过的事说出来。结果，因为各种情况，错失了那个机会。可是现在不一样。红莉栖的笔记本电脑和硬盘已经不存在了，事到如今不该再把这事翻出来。  
@@ -71,9 +71,9 @@ APP升级结束后，『Amadeus』一直启动着。
 “其实，这半年来，我在研究原本的课题同时，也在一直研究着时间机器。”  
 “……你说什么？”  
 “如果红莉栖做到了，那么我也……我是这么认为的。  
-&emsp;&emsp; 一种扭曲的对抗意识吧……说不定也是在赌气。  
-&emsp;&emsp; 但是，但是啊，  
-&emsp;&emsp; 如果能够做出时间机器的话……或许能够拯救红莉栖——”  
+ 一种扭曲的对抗意识吧……说不定也是在赌气。  
+ 但是，但是啊，  
+ 如果能够做出时间机器的话……或许能够拯救红莉栖——”  
 “快停下！！”  
 “……！”  
 这是最坏的情况……  
@@ -82,12 +82,12 @@ APP升级结束后，『Amadeus』一直启动着。
 “不要想这些蠢事！”  
 “……冈部先生？”  
 “不要去想，能拯救牧濑红莉栖什么的。  
-&emsp;&emsp; 这种可能性，是零！  
-&emsp;&emsp; ‘神的法则’绝不允许这种事。”  
+ 这种可能性，是零！  
+ ‘神的法则’绝不允许这种事。”  
 “果然……你，绝对知道些什么吧？”  
 真帆逼近过来追问着。  
 “难道说……已经实现了？红莉栖完成了时间机器吗？  
-&emsp;&emsp; 你已经乘坐那个，进行了人类首次时间旅行了吧？一定是那样的！”  
+ 你已经乘坐那个，进行了人类首次时间旅行了吧？一定是那样的！”  
 “……你是有什么依据，才这么说的吗？”  
 “……！”  
 我强装镇定的样子进行反驳。真帆闻言低下了头，似乎也惊讶于自己会说出那样的话。  
@@ -95,7 +95,7 @@ APP升级结束后，『Amadeus』一直启动着。
 “比屋定小姐！？”  
 泪水从真帆眼中涌出。她突然在我面前哭了起来，让我不知所措。  
 “我到底是怎么回事……突然就……  
-&emsp;&emsp; 明明没想哭的……  ”  
+ 明明没想哭的……  ”  
 真帆一脸困惑地用手指擦拭着从眼中涌溢而出的泪水。  
 在我看来，她的情绪相当不稳定。相比之前，好像内心脆弱的一面更加显而易见。感觉她的精神已经被逼得走投无路。是半年前被卷入各种事件中的影响吗？视频聊天的时候，完全看不出来她有这样的一面。  
 我应该，说出来吗？  
@@ -104,11 +104,11 @@ APP升级结束后，『Amadeus』一直启动着。
 ![](../pics/0044-2.png)
 
 “……我知道了。  
-&emsp;&emsp; 就把我的经历告诉你吧。  
-&emsp;&emsp; 绝对，不能和任何人透露。  
-&emsp;&emsp; 另外，关于这个再强调一次，  
-&emsp;&emsp; 不要想着去拯救牧濑红莉栖。  
-&emsp;&emsp; 可以吗？”  
+ 就把我的经历告诉你吧。  
+ 绝对，不能和任何人透露。  
+ 另外，关于这个再强调一次，  
+ 不要想着去拯救牧濑红莉栖。  
+ 可以吗？”  
 “…………”  
 真帆擦拭着眼泪，轻轻地点了点头。  
 我给她讲了——  
@@ -124,18 +124,18 @@ APP升级结束后，『Amadeus』一直启动着。
 过了一会儿，她长长地叹出一口气，满脸苦涩，用手指揉着太阳穴附近。  
 “头，好痛……”  
 “你没必要全部相信。  
-&emsp;&emsp; 认为我脑子有问题也没关系。  
-&emsp;&emsp; 但是，如果你想继续研究时间机器，想着拯救红莉栖的话，  
-&emsp;&emsp; 我会不择手段地组织你的。  
-&emsp;&emsp; 所以，不要再有那些奇怪的想法了。  
-&emsp;&emsp; 不要自己逼自己了。”  
+ 认为我脑子有问题也没关系。  
+ 但是，如果你想继续研究时间机器，想着拯救红莉栖的话，  
+ 我会不择手段地组织你的。  
+ 所以，不要再有那些奇怪的想法了。  
+ 不要自己逼自己了。”  
 真帆抬起手制止我继续说下去。  
 “让我稍微整理下。你所说的 ‘*Reading·Steiner*’，  
-&emsp;&emsp; 不就新型脑炎吗？和雷斯吉宁教授说到的症状一样啊……”  
+ 不就新型脑炎吗？和雷斯吉宁教授说到的症状一样啊……”  
 “是……是的，或许就是这样。  
-&emsp;&emsp; 我还在犹豫，该不该对雷斯吉宁教授说，  
-&emsp;&emsp; 说不定会导致无谓的混乱……  
-&emsp;&emsp; 你怎么认为？”  
+ 我还在犹豫，该不该对雷斯吉宁教授说，  
+ 说不定会导致无谓的混乱……  
+ 你怎么认为？”  
 “……别问我。”  
 真帆还在用指尖揉着太阳穴附近。  
 “说的也是。抱歉。”  
@@ -160,7 +160,7 @@ APP升级结束后，『Amadeus』一直启动着。
 “比屋定小姐，没事吧？稍微躺一下吧？”  
 对于我的提议，真帆摇了摇头，然后继续提问。  
 “时间机器，现在，在哪里？  
-&emsp;&emsp; 就是铃羽乘坐来到这里的那台，现在在哪里？”  
+ 就是铃羽乘坐来到这里的那台，现在在哪里？”  
 “这……”  
 “在哪？”  
 我有些迟疑。没有铃羽的许可，这个问题该不该告诉她呢……  
@@ -189,8 +189,8 @@ APP升级结束后，『Amadeus』一直启动着。
 “咕……唔……头…要裂开了一样……”  
 那眼中又滴下了眼泪。  
 “为什么……  
-&emsp;&emsp; 为什么要……告诉我啊……  
-&emsp;&emsp; 你……应该……闭口不谈……的！”  
+ 为什么要……告诉我啊……  
+ 你……应该……闭口不谈……的！”  
 “啊……啊……！！”  
 无法逃开……虽然扯着真帆的长发试图挣脱她，但她完全没有松手，就像感觉不到疼痛一样。  
 我挣扎着从口袋里取出了从刚才开始就一直在振动的智能手机，用手指在屏幕上摸索着。  
