--- a/steins_gate_0/docs/0046.md
+++ b/steins_gate_0/docs/0046.md
@@ -6,17 +6,17 @@
 真帆为了忍耐那撕裂般的疼痛，蹲下来抱住头，紧闭双眼，咬住嘴唇。令人厌烦的噪音一直在她的脑海中响着，让她的头疼更加严重。不管怎样塞住耳朵，都无法让声音消失。因为太痛苦了忍不住要叫出声音，但是想到那样的话只会让头痛更加恶化，所以只有一味的忍耐。  
 噪音里混杂着话语，是雷斯吉宁教授的声音。  
 『听好了，*Maho*。  
-&emsp;&emsp; 不管用什么手段，都要揭开 *Rintaro·Okabe* 隐藏的秘密。  
-&emsp;&emsp; 不然的话，就不得不杀掉他。  
-&emsp;&emsp; 你不希望事情变成那样吧？  
-&emsp;&emsp; 你不是也很在意 *Rintaro* 的吗？  
-&emsp;&emsp; 毕竟我和 *‘Kurisu’* 可是做了不少煽风点火的事呢，  
-&emsp;&emsp; 就算你没有那方面的打算，也会慢慢变成那样的。  
-&emsp;&emsp; 这，就是人的心理啊。  
-&emsp;&emsp; 就算从帮助他的角度讲，也希望你能套出他持有的情报。  
-&emsp;&emsp; 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究室。  
-&emsp;&emsp; *Maho*，把你了解到的关于他的事，全部报告给我。  
-&emsp;&emsp; 也可以这么说——他的未来掌握在你的手里。』  
+ 不管用什么手段，都要揭开 *Rintaro·Okabe* 隐藏的秘密。  
+ 不然的话，就不得不杀掉他。  
+ 你不希望事情变成那样吧？  
+ 你不是也很在意 *Rintaro* 的吗？  
+ 毕竟我和 *‘Kurisu’* 可是做了不少煽风点火的事呢，  
+ 就算你没有那方面的打算，也会慢慢变成那样的。  
+ 这，就是人的心理啊。  
+ 就算从帮助他的角度讲，也希望你能套出他持有的情报。  
+ 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究室。  
+ *Maho*，把你了解到的关于他的事，全部报告给我。  
+ 也可以这么说——他的未来掌握在你的手里。』  
 那些话语和噪音非常令人厌烦，真帆到现在也没理解它们到底在表达什么内容。虽然作为声音的的确确地传入了脑袋，但是大脑拒绝将之作为语言提取出其中的意义。不过，即使理解了也无济于事了。真帆已经对冈部伦太郎做出了无法挽回的事——把他出卖给了雷斯吉宁教授和STRATFO。越是意识到这一点，真帆心中的罪恶感就越重。  
 真想现在就从这个世界上消失——。  
 
@@ -36,9 +36,9 @@
 “怎么……了……”  
 反问的声音，在颤抖着。  
 “冈伦从昨天开始就联系不上……  
-&emsp;&emsp; 也没有回家，也不接电话，也不回复短信和RINE……  
-&emsp;&emsp; 虽然桶子君说我过分操心了……但心里总感觉不安……  
-&emsp;&emsp; 所以今天我从学校早退，一直在这附近找他。”  
+ 也没有回家，也不接电话，也不回复短信和RINE……  
+ 虽然桶子君说我过分操心了……但心里总感觉不安……  
+ 所以今天我从学校早退，一直在这附近找他。”  
 虽然才七月份，但是气温已经很高了。这样的大热天，一直在秋叶原毫无线索地四处追寻吗？  
 椎名真由理，是个善良又纯洁女孩子。这是真帆一直以来保持的印象。这名楚楚可怜的少女，看起来就不知道世间的污秽，绝对不会做出背叛他人、嫉妒他人、被他人利用之类的事情。  
 “想知道吗……？”  
@@ -69,21 +69,21 @@
 “无论尝试几次都无法拯救你，你仍旧不断地死去。”  
 ——这样的事，明明不应该说出来的。  
 “为了从那噩梦般的循环里逃出来——  
-&emsp;&emsp; 为了……拯救你——”  
+ 为了……拯救你——”  
 好像被别人付身一样，真帆的口中不断地涌出这些话。  
 “冈部，牺牲了红莉栖什么的，对她见死不救什么的。  
-&emsp;&emsp; 他是这么对我说的。”  
+ 他是这么对我说的。”  
 “啊……”  
 “如果制作出时间机器，想要再去拯救红莉栖的话，就会回到那个时候。”  
 ——我在伤害她。  
 但是，话却止不住地继续流淌出来。  
 “冈部非常害怕会变成那样。  
-&emsp;&emsp; 一直在拼命地保护着你。  
-&emsp;&emsp; 这里，是为了守护你，而牺牲了很多其他东西所选择的世界哦。  
-&emsp;&emsp; 虽然，他应该什么都没有告诉过你吧。”  
+ 一直在拼命地保护着你。  
+ 这里，是为了守护你，而牺牲了很多其他东西所选择的世界哦。  
+ 虽然，他应该什么都没有告诉过你吧。”  
 “这不是真的……  
-&emsp;&emsp; 那种事……  
-&emsp;&emsp; 冈伦……”  
+ 那种事……  
+ 冈伦……”  
 真由理受到了沉重的打击，什么都说不出来。那双眼睛里，泪水好像随时准备夺眶而出。紧接着，她背过身体，低落地垂着肩膀，一个人走开了。她的背影摇摇晃晃，看起来摇摇欲坠。突然被告知这些过于残酷的事实，让她甚至动摇了自身的存在意义。真帆能理解真由理现在的心境。  
 
 ![](../pics/0046-2.png)
@@ -103,9 +103,9 @@
 但她也觉得继续呆在这里不好，于是打算去追离开不久的真由理。  
 可是，一路来到天桥，始终没有看见真由理的身影。车站前的行人太多，找到真有理是很困难的。  
 “呼…………  
-&emsp;&emsp; 为什么，要出现在我的面前……？  
-&emsp;&emsp; 明明如果不向我搭话的话，就不会受伤了……  
-&emsp;&emsp; 我已经，不是以前的我了啊……”  
+ 为什么，要出现在我的面前……？  
+ 明明如果不向我搭话的话，就不会受伤了……  
+ 我已经，不是以前的我了啊……”  
 真帆从天桥上眺望着车站前的人群，喃喃自语着。  
 
 突然，一个衣着特别显眼的人从桥下走了过来。如此炎热的天气，那个人却穿着黑色的骑手服，戴着全罩头盔，显得与周围格格不入。她还以为是所谓的cosplay，但是周围的人不要说拍照了，反而都退避地让出道路。看体形的话，好像是名女性。以真帆来看，那也算得上是凹凸有致富有魅力的身材。  
