--- a/steins_gate_0/docs/0048.md
+++ b/steins_gate_0/docs/0048.md
@@ -11,23 +11,23 @@
 “冈部先生……”  
 真帆站在黑暗中，脸上挂着有些寂寞亦或悲伤的笑容。  
 “对不起。  
-&emsp;&emsp; 我，不会再出现在你的面前了。  
-&emsp;&emsp; 如果我在你身边，我说不定，会再一次背叛你……  
-&emsp;&emsp; 呐……  
-&emsp;&emsp; 希望你能听一下这样的我的，任性的请求。  
-&emsp;&emsp; 请一定……要找到 *Steins;Gate*……  
-&emsp;&emsp; 在你被抓的这段时间里，世界发生了翻天覆地的变化……  
-&emsp;&emsp; 真由理小姐和铃羽小姐都下落不明。  
-&emsp;&emsp; 我和篝小姐，为了救你闯进了STRATFO的基地……  
-&emsp;&emsp; 篝小姐……在那里牺牲了……也拉了不少人垫背……  
-&emsp;&emsp; 只是，雷斯吉宁教授逃掉了……  
-&emsp;&emsp; 『Amadeus』也被消除了……  
-&emsp;&emsp; 这些事不该发生的……  
-&emsp;&emsp; 不过，现在，你是唯一的希望。  
-&emsp;&emsp; 求求你。虽然知道把一切托付给你一个人很过分……  
-&emsp;&emsp; 请一定要到达 *Steins;Gate*。  
-&emsp;&emsp; 就说到这吧……冈部先生。  
-&emsp;&emsp; 永别了——”  
+ 我，不会再出现在你的面前了。  
+ 如果我在你身边，我说不定，会再一次背叛你……  
+ 呐……  
+ 希望你能听一下这样的我的，任性的请求。  
+ 请一定……要找到 *Steins;Gate*……  
+ 在你被抓的这段时间里，世界发生了翻天覆地的变化……  
+ 真由理小姐和铃羽小姐都下落不明。  
+ 我和篝小姐，为了救你闯进了STRATFO的基地……  
+ 篝小姐……在那里牺牲了……也拉了不少人垫背……  
+ 只是，雷斯吉宁教授逃掉了……  
+ 『Amadeus』也被消除了……  
+ 这些事不该发生的……  
+ 不过，现在，你是唯一的希望。  
+ 求求你。虽然知道把一切托付给你一个人很过分……  
+ 请一定要到达 *Steins;Gate*。  
+ 就说到这吧……冈部先生。  
+ 永别了——”  
 
 ![](../pics/0048-1.png)
 
@@ -53,25 +53,25 @@
 “我联系过菲莉丝碳和琉华氏了。两人都去避难了。”  
 “呼……”  
 “呐，冈伦……  
-&emsp;&emsp; 铃羽和真由喜……都联系不上……  
-&emsp;&emsp; 昨天的事件中，时间机器也被破坏得粉碎……  
-&emsp;&emsp; 跟铃羽所说的未来比起来，世界变动得太快了啊……”  
+ 铃羽和真由喜……都联系不上……  
+ 昨天的事件中，时间机器也被破坏得粉碎……  
+ 跟铃羽所说的未来比起来，世界变动得太快了啊……”  
 “………………”  
 果然“梦”中出现的比屋定并不是一场梦。那是在我意识残存之际，她与我道别的场景。  
 “呐，桶子……我……我啊……  
-&emsp;&emsp; 我想普通地生活……这也不被允许么……？  
-&emsp;&emsp; 这种事情我早就有所觉悟了……  
-&emsp;&emsp; 放弃 *Steins;Gate* 而选择了第三次世界大战这条世界线的，是我啊……  
-&emsp;&emsp; 但就算这样……只有我活着，而大家全都离我而去什么的……  
-&emsp;&emsp; 这也太过分了吧……（失声）”  
+ 我想普通地生活……这也不被允许么……？  
+ 这种事情我早就有所觉悟了……  
+ 放弃 *Steins;Gate* 而选择了第三次世界大战这条世界线的，是我啊……  
+ 但就算这样……只有我活着，而大家全都离我而去什么的……  
+ 这也太过分了吧……（失声）”  
 神的法则，无论如何也不肯放过我吗……  
 脱离因果之环就是如此的罪业深重吗……  
 如果是这样，明明只要诅咒我一个人就可以了……  
 “我，要造出……时间机器。”  
 “桶子……”  
 “别无选择，非造不可了吧。  
-&emsp;&emsp; 怎么可能就这样结束啊！  
-&emsp;&emsp; 冈伦你打算怎么办……？”  
+ 怎么可能就这样结束啊！  
+ 冈伦你打算怎么办……？”  
 升腾着滚滚浓烟的秋叶原。我就这么呆呆地看着，呆呆地站在这里。  
 “我……！我……我…………”  
 眼泪夺眶而出。我瘫倒在那里，连站起来的力气也没有。  
